--- a/achievements_l_english.properties
+++ b/achievements_l_english.properties
@@ -1,14 +1,18 @@
-achievement_the_dragon_swallowed_the_sun코0=일본을 합병하세요.
-achievement_sunrise_invasion_conquered_mexico_first코0=유럽에서 영토를 가지기 전에 멕시코를 합병하세요.
-achievement_tojo_shot_first코0=미국의 핵심 주에 핵폭탄을 투하하세요.
-achievement_romance_of_the_three_kingdoms_GXC코0=광시 군벌을 괴뢰화하여 통합하세요.
-achievement_romance_of_the_three_kingdoms_YUN코0=윈난을 괴뢰화하여 통합하세요.
-achivement_i_swear_im_not_a_byzantophile코0=비잔티움 제국을 세우세요.
-australia_hungary_tt코0=헝가리의 모든 핵심 주를 정복하세요.
-place_in_the_sun_tt코0=카리브 해의 섬을 정복하세요.
-sunrise_invasion_tt코0=바다를 접한 유럽의 어느 한 주를 정복하세요.
-all_cores_of_chi_and_man_owned_by_root코0=중국과 만주국의 모든 핵심 주를 정복하세요.
-the_people_have_stood_up_tt코1=중국 국민당의 시작시 주어진 영토를 모두 정복하세요.
-battlecry_tt코0=중국과 일본을 모두 정복하세요.
-achievement_JAP_sue_for_peace_CHI_completed코0=만주와 한반도를 전부 빼앗아서, 일본을 항복시키세요.
-has_taken_decision_to_form_gran_columbia코0=그란 콜롬비아의 형성을 결정내리세요.
+achievement_the_dragon_swallowed_the_sun코0=Annexed Japan
+achievement_sunrise_invasion_conquered_mexico_first코0=Annexed Mexico before taking any territory in Europe
+achievement_tojo_shot_first코0=Dropped a nuclear bomb on a core state of the US
+achievement_romance_of_the_three_kingdoms_GXC코0=Integrated the Guanxi Clique through making them a puppet
+achievement_romance_of_the_three_kingdoms_YUN코0=Integrated Yunnan through making them a puppet
+achivement_i_swear_im_not_a_byzantophile코0=Formed the Byzantine Empire
+australia_hungary_tt코0=Conquered all Hungarian core territory
+place_in_the_sun_tt코0=Conquered an island in the Carribean
+sunrise_invasion_tt코0=Conquered a coastal state in Europe
+all_cores_of_chi_and_man_owned_by_root코0=Conquered all core territory of China and Manchukuo
+the_people_have_stood_up_tt코1=Conquered all of Nationalist China's starting territory.
+battlecry_tt코0=Conquered all of China and Japan
+achievement_JAP_sue_for_peace_CHI_completed코0=Japan was forced to sue for peace after losing all of Manchuria and Korea
+has_taken_decision_to_form_gran_columbia코0=Has taken the decision to form Gran Columbia
+achievement_team_america코0=Dropped a nuclear bomb on Paris.
+HOL_lost_starting_state코0=The Netherlands lost one of its starting states.
+achievements_pride_and_extreme_prejudice코1=Sank the British Pride of the Fleet.
+do_you_mined_tt코1=More than §Y999§! of our mines laid on the coastline.
