--- a/constructions_l_english.properties
+++ b/constructions_l_english.properties
@@ -1,85 +1,87 @@
-CONSTRUCTION_VIEW_LABLE코0=건설
-CONSTRUCTION_LOCATION_LABEL코0=위치
-CONSTRUCTION_LOCATION_DESC코0=각각의 건설이 이루어질 목표 위치입니다
-CONSTRUCTION_TASK_LABEL코0=작업
-CONSTRUCTION_TASK_DESC코0=어떤 작업인지 나타냅니다
-CONSTRUCTION_PROGRESS_LABEL코0=진행도
-CONSTRUCTION_PRIORITY_LABEL코0=우선권
-CONSTRUCTION_PRIORITY_DESC코0=건설작업 우선순위로 정렬합니다. 높은 우선순위의 건설작업 먼저 공장들을 할당받을 것입니다.
-CONSTRUCTION_USED_FACTORIES코0=사용되는 공장\: $USED|H$
-CONSTRUCTION_MAX_FACTORIES코0=최대 공장\: $MAX|H$
+CONSTRUCTION_VIEW_LABLE코0=Construction
+CONSTRUCTION_LOCATION_LABEL코0=Location
+CONSTRUCTION_LOCATION_DESC코0=The target location of each construction
+CONSTRUCTION_TASK_LABEL코0=Task
+CONSTRUCTION_TASK_DESC코0=What is being produced
+CONSTRUCTION_PROGRESS_LABEL코0=Progress
+CONSTRUCTION_PRIORITY_LABEL코0=Priority
+CONSTRUCTION_PRIORITY_DESC코0=The constructions are sorted in priority order. The higher priority constructions will get factories allocated first.
+CONSTRUCTION_USED_FACTORIES코0=Used Factories: $USED|H$
+CONSTRUCTION_MAX_FACTORIES코0=Max Factories: $MAX|H$
 CONSTRUCTION_USED_FACTORIES_NUM코0=$USED$/$MAX$
 CONSTRUCTION_USED_FACTORIES_NUM_CONTRIBUTED코0=$USED$+$CON|G$/$MAX$
 CONSTRUCTION_BUILDING코0=$BUILDING|Y$
-CONSTRUCTION_MACRO_DESC코0=§G클릭하여 시설을 선택한 다음 $LOC_TYPE$을 클릭하여 건설을 시작합니다.§\!
-CONSTRUCTION_MACRO_SELECTED_DESC코0=§G지도에 있는 $LOC_TYPE$를 클릭하여 건설을 시작합니다.§\!
-CONSTRUCTION_STATE코0=주
-CONSTRUCTION_PROVINCE코0=지역
-CONSTRUCTION_EXPAND코0=건설창 확장
-CONSTRUCTION_MINIMIZE코0=건설창 최소화
-CONSTRUCTION_TYPE코0=$STATE|H$에 $NUM|H$등급 $TYPE|H$을(를) 건설 중
-CONSTRUCTION_TYPE_QUEUE코0=$NUM|H$등급의 $TYPE|H$(이)가 대기열에 있습니다
-CONSTRUCTION_TYPE_SHARED_SLOTS코0=$STATE|H$에 $TYPE|H$ $NUM|H$개를 건설 중
-CONSTRUCTION_TYPE_SHARED_SLOTS_QUEUE코0=$TYPE|H$ $NUM|H$개가 대기열에 있습니다.
-CONSTRUCTION_TYPE_SHARED_SLOTS_CONVERSION코0=$STATE|H$에, $TYPE|H$으로 $NUM|H$개 전환 중
-CONSTRUCTION_TYPE_SHARED_SLOTS_CONVERSION_QUEUE코0=대기열에 $TYPE|H$로 전환이 $NUM|H$개 있음.
-CONSTRUCTION_REPAIR_TYPE코0=$STATE|Y$에 $TYPE|Y$을(를) $NUM|Y$개 수리 중
-CONSTRUCTION_REPAIR_QUEUE코0=수리를 위해 $NUM|H$ 등급의 $TYPE|H$이(가) 대기열에 있습니다
-CONSTRUCTION_REPAIR_TYPE_SHARED_SLOTS코0=$STATE|Y$에서 $LEVEL|Y$ $NUM|Y$개를 수리 중입니다
-CONSTRUCTION_REPAIR_QUEUE_SHARED_SLOTS코0=$NUM|H$ $TYPE|H$ 수리 대기열에 있음
-CONSTRUCTION_REPAIR_LEVEL_COMPLETE코0=§T한개 수리완료까지 남은 일 수\: $TIME|H$§\!
-CONSTRUCTION_REPAIR_ALL_LEVELS_COMPLETE코0=§T모두 수리완료까지 남은 일 수\: $TIME|H$§\!
-CONSTRUCTION_NEXT_COMPLETE코0=한개 완공까지 남은 일 수\: $TIME|H$
-CONSTRUCTION_ALL_COMPLETE코0=모두 완공까지 남은 일 수\: $TIME|H$
-CANCEL_CONSTRUCTION코0=§G클릭으로 건설을 §H취소§G합니다§\!
-CANCEL_ALL_CONSTRUCTION코1=§GCtrl+클릭으로§G 건설을 §H모두 취소.§\!
-CANCEL_REPAIRS코0=수리를 §R취소§\! 할 수 없습니다\!
-CONSTRUCTION_HIGHEST_PRIORITY코0=§GShift+클릭으로 건설 §H우선순위를 최상위로§G 올립니다§\!
-CONSTRUCTION_LOWEST_PRIORITY코0=§GShift+클릭으로 건설  §H우선순위를 최하위로§G 내립니다§\!
-CONSTRUCTION_INCREASE_AMOUNT_LABEL코0=§T작업 추가.§\!
-CONSTRUCTION_DECREASE_AMOUNT_LABEL코0=§T작업 감소.§\!
-CONSTRUCTION_MAXIMIZE코0=§GShift+클릭으로 §H최대로§\!
-CONSTRUCTION_MAPMODE_TOOLTIP_SHARED코0=$NAME|H$은 $MAX_SLOTS|Y$개의 건설 슬롯 중 $USED_SLOTS|Y$개를 사용중 입니다 .\n$LIST$
-CONSTRUCTION_MAPMODE_TOOLTIP_SHARED_LIST_ENTRY코0=$NAME|H$\: $LEVEL$
-CONSTRUCTION_MAPMODE_TOOLTIP코0=§G클릭으로§\! $BUILDING|H$를 건설합니다
-CONSTRUCTION_MAPMODE_TOOLTIP_TO_MAX_AMOUNT코0=§GShift+클릭§\!으로 건물의 최대치까지 건설합니다.
-CONSTRUCTION_MAPMODE_TOOLTIP_REMOVE코0=§G우-클릭§\!으로 시설 건설을 하나 취소합니다. \n§GShift+우-클릭§\!하여 모든 시설 건설을 취소합니다.
-CONSTRUCTION_MAPMODE_MAXLEVEL_BLOCKED_TOOLTIP코1=이미 최고 수준이거나 빈 슬롯이 없어, $BUILDING|H$를 건설 할 수 없습니다.
-CONSTRUCTION_MAPMODE_DEMILITARIZED_BLOCKED_TOOLTIP코0=비무장지대에는 $BUILDING|H$를 건설 할 수 없습니다.
-CONSTRUCTION_MAPMODE_FOREIGN_TOOLTIP코0=외국 영토에 $BUILDING|H$을 건설할 수 없습니다.
-CONSTRUCTION_MAPMODE_WATER_TOOLTIP코0=물 위에 $BUILDING|H$을(를) 건설할 수 없습니다.
-CONSTRUCTION_MAPMODE_CONVERT_PROVINCE_TOOLTIP코0=전환을 시작하려는 민간공장이나 군수공장을 클릭하십시오.
-CONSTRUCTION_CONVERT_IC_TOOLTIP코0=§Y전환§\!\n민간 공장을 군수 공장으로 전환하거나 반대로 전환 합니다
-CONSTRUCTION_CONVERT_IC_TOOLTIP_DELAYED코0=§G클릭하여 이 모드를 선택한 다음 전환하려는 각 주의 버튼을 클릭하세요.§\!
-CONSTRUCTION_FACTORIES_LABEL코0=\#
-CONSTRUCTION_FACTORIES_AMOUNT코0=공장 갯수
-CONSTRUCTION_FACTORIES_DESC코0=각각의 특수한 건설을 위해 사용되는 공장의 수
-CONSTRUCTION_FACTORIES_CONSUMER_GOODS코0=소비재\: $VALUE|R$
-CONSTRUCTION_FACTORIES_CONSTRUCTIONS코0=건설\: $VALUE|R$
-CONSTRUCTION_FACTORIES_TRADE코0=수입으로 부터\: $VALUE|R$
-CONSTRUCTION_FACTORIES_PROJECTS코0=특별 프로젝트\: $VALUE|R$
-CONSTRUCTION_FACTORIES_TRADE_LABEL코0=무역 상품
-CONSTRUCTION_FACTORIES_TRADE_TITLE코0=§H무역상품§\!
-CONSTRUCTION_FACTORIES_PROJECTS_LABEL코0=특별 프로젝트
-CONSTRUCTION_FACTORIES_PROJECTS_TITLE코0=§H특별 프로젝트§\!
-CONSTRUCTION_FACTORIES_PROJECTS_DESC코0=특별 건설 프로젝트는 다른 요소들에서 비롯됩니다.
-CONSTRUCTION_SPEED코0=건설속도\: $SPEED|Y$
-REPAIR_SPEED코0=일일 내구도 수리량\: $SPEED|1Y%$
-MIN_REPAIR_SPEED_DESC코0=할당된 민간공장이 하나도 없더라도 건물은 천천히 복구될 것입니다. 복구속도를 향상시키기 위해 공장을 할당하세요.
-CONSTRUCTION_SPEED_MODIFIERS코0=건설속도는 다음에 의해 변동됨\:
-REPAIR_SPEED_MODIFIERS코0=수리속도는 다음에 의해 변동됨\:
-RESOURCE_TRADE_LINE코0=$PARTNER|Y$\: $RESOURCE|Y$ $NUM|G$개를 위한 $FACTORIES|R$개의 민간공장
-RESOURCE_TRADE_LINE_PLURAL코0=$PARTNER|Y$\: $RESOURCE|Y$ $NUM|G$개를 위한 $FACTORIES|R$개의 민간공장
-CONSTRUCTION_FACTORIES_TRADE_DESC코0=우리는 타국에 민간공장의 사용권한을 파는 대가로 전략자원을 받는 무역을 할 수 있습니다. 해외 무역에는 수송선이 필요합니다.
-CONVERSION_SPEED_MODIFIERS코1=전환 비용은 다음에 의해 변동됨\:
-INFRASTRUCTURE_COST_EFFECT코0=주 기반시설\: x$VAL|2H$
-INFRA_VAL코0=£infrastructure_texticon $VAL|0%+\=$
+CONSTRUCTION_MACRO_DESC코0=§GClick to select this building and then click on a $LOC_TYPE$ to start a construction.§!
+CONSTRUCTION_MACRO_SELECTED_DESC코0=§GClick on a $LOC_TYPE$ on the map to start a construction.§!
+CONSTRUCTION_STATE코0=State
+CONSTRUCTION_PROVINCE코0=Province
+CONSTRUCTION_EXPAND코0=Expand
+CONSTRUCTION_MINIMIZE코0=Minimize
+CONSTRUCTION_TYPE코0=Building $TYPE|H$ level $NUM|H$ in $STATE|H$
+CONSTRUCTION_TYPE_QUEUE코0=$NUM|H$ levels of $TYPE|H$ in queue for construction
+CONSTRUCTION_TYPE_SHARED_SLOTS코0=Building $NUM|H$ $TYPE|H$ in $STATE|H$
+CONSTRUCTION_TYPE_SHARED_SLOTS_QUEUE코0=$NUM|H$ $TYPE|H$ in queue for construction
+CONSTRUCTION_TYPE_SHARED_SLOTS_CONVERSION코0=Converting to $NUM|H$ $TYPE|H$ in $STATE|H$
+CONSTRUCTION_TYPE_SHARED_SLOTS_CONVERSION_QUEUE코0=$NUM|H$ conversions to $TYPE|H$ in queue
+CONSTRUCTION_REPAIR_TYPE코0=Repairing $NUM|Y$ level of $TYPE|Y$ in $STATE|Y$
+CONSTRUCTION_REPAIR_QUEUE코0=$NUM|H$ levels of $TYPE|H$ in queue for repairing
+CONSTRUCTION_REPAIR_TYPE_SHARED_SLOTS코0=Repairing $LEVEL|Y$ $NUM|Y$ in $STATE|Y$
+CONSTRUCTION_REPAIR_QUEUE_SHARED_SLOTS코0=$NUM|H$ $TYPE|H$ in queue for repairing
+CONSTRUCTION_REPAIR_LEVEL_COMPLETE코0=§TDays until repairs are complete: $TIME|H$§!
+CONSTRUCTION_REPAIR_ALL_LEVELS_COMPLETE코0=§TDays until all repairs are complete: $TIME|H$§!
+CONSTRUCTION_NEXT_COMPLETE코0=Days until next Building: $TIME|H$
+CONSTRUCTION_ALL_COMPLETE코0=Days until all constructions complete: $TIME|H$
+CANCEL_CONSTRUCTION코0=§GClick to §Hcancel§G construction.§!§!§!
+CANCEL_ALL_CONSTRUCTION코1=§GCtrl+click to §Hcancel all§G constructions.§!§!§!
+CANCEL_REPAIRS코0=Can not §RCancel§! repairs!
+CONSTRUCTION_HIGHEST_PRIORITY코0=§GShift+click to give the construction §Hhighest priority§!§!
+CONSTRUCTION_LOWEST_PRIORITY코0=§GShift+click to give the construction §Hlowest priority§!§!
+CONSTRUCTION_INCREASE_AMOUNT_LABEL코0=§TIncrease amount.§!
+CONSTRUCTION_DECREASE_AMOUNT_LABEL코0=§TDecrease amount.§!
+CONSTRUCTION_MAXIMIZE코0=§GShift+click to §Hmaximize§!§!
+CONSTRUCTION_MAPMODE_TOOLTIP_SHARED코0=$NAME|H$ have used $USED_SLOTS|Y$ out of $MAX_SLOTS|Y$ building slots.\n$LIST$
+CONSTRUCTION_MAPMODE_TOOLTIP_SHARED_LIST_ENTRY코0=$NAME|H$: $LEVEL$
+CONSTRUCTION_MAPMODE_TOOLTIP코0=§GClick§! to build $BUILDING|H$
+CONSTRUCTION_MAPMODE_TOOLTIP_TO_MAX_AMOUNT코0=§GShift+Click§! to build maximum amount of buildings.
+CONSTRUCTION_MAPMODE_TOOLTIP_REMOVE코0=§GRight-Click§! to remove one construction of the building.\n§GShift+Right-Click§! to remove constructions of all buildings.
+CONSTRUCTION_MAPMODE_MAXLEVEL_BLOCKED_TOOLTIP코1=Cannot build $BUILDING|H$, maximum level reached already or no slots available.
+CONSTRUCTION_MAPMODE_DEMILITARIZED_BLOCKED_TOOLTIP코0=Cannot build $BUILDING|H$ in the demilitarized zone.
+CONSTRUCTION_MAPMODE_FOREIGN_TOOLTIP코0=Cannot build $BUILDING|H$ in a foreign territory.
+CONSTRUCTION_MAPMODE_WATER_TOOLTIP코0=Cannot build $BUILDING|H$ on water.
+CONSTRUCTION_MAPMODE_CONVERT_PROVINCE_TOOLTIP코0=Click on a Civilian Factory or Military Factory icon to start conversion.
+CONSTRUCTION_CONVERT_IC_TOOLTIP코0=§YConvert§!\nConvert Civilian Factory to Military Factory and vice versa
+CONSTRUCTION_CONVERT_IC_TOOLTIP_DELAYED코0=§GClick to select this mode and then click on buttons in each State to convert.§!
+CONSTRUCTION_FACTORIES_LABEL코0=#
+CONSTRUCTION_FACTORIES_AMOUNT코0=Amount of Factories
+CONSTRUCTION_FACTORIES_DESC코0=The number of factories used for each specific construction
+CONSTRUCTION_FACTORIES_CONSUMER_GOODS코0=Consumer Goods: $VALUE|R$
+CONSTRUCTION_FACTORIES_CONSTRUCTIONS코0=Construction: $VALUE|R$
+CONSTRUCTION_FACTORIES_TRADE코0=From imports: $VALUE|R$
+CONSTRUCTION_FACTORIES_PROJECTS코0=Special Projects: $VALUE|R$
+CONSTRUCTION_FACTORIES_TRADE_LABEL코0=Traded Goods
+CONSTRUCTION_FACTORIES_TRADE_TITLE코0=§HTraded Goods§!
+CONSTRUCTION_FACTORIES_PROJECTS_LABEL코0=Special Projects
+CONSTRUCTION_FACTORIES_PROJECTS_TITLE코0=§HSpecial Projects§!
+CONSTRUCTION_FACTORIES_PROJECTS_DESC코0=Special construction projects from other sources.
+CONSTRUCTION_SPEED코0=Construction speed: $SPEED|Y$
+REPAIR_SPEED코0=Health repaired daily: $SPEED|1Y%$
+MIN_REPAIR_SPEED_DESC코0=Buildings will be slowly repaired even without any Civilian Factories assigned. Assign Factories to them in order to improve the repair speed.
+CONSTRUCTION_SPEED_MODIFIERS코0=Construction speed modified by:
+REPAIR_SPEED_MODIFIERS코0=Repair speed modified by:
+RESOURCE_TRADE_LINE코0=$PARTNER|Y$: $FACTORIES|R$ Civilian Factory for $NUM|G$ $RESOURCE|Y$
+RESOURCE_TRADE_LINE_PLURAL코0=$PARTNER|Y$: $FACTORIES|R$ Civilian Factories for $NUM|G$ $RESOURCE|Y$
+CONSTRUCTION_FACTORIES_TRADE_DESC코0=We can trade away the use of our Civilian Factories to other countries in return for Strategic Resources. Overseas trade requires Convoy Ships.
+CONVERSION_SPEED_MODIFIERS코1=Conversion cost modified by:
+REFITTING_SPEED_MODIFIERS코1=Refitting speed modified by:
+REFITTING_COST_MODIFIERS코1=Refitting cost modified by:
+INFRASTRUCTURE_COST_EFFECT코0=State infrastructure: x$VAL|2H$
+INFRA_VAL코0=£infrastructure_texticon $VAL|0%+=$
 CONSTRUCTION_MAP_ICON_ENTRY코0=£backhoe_icon_small   $VAL$/$MAX$
 CONSTRUCTION_MAP_ICON_ENTRY_WITH_TEMP코0=£backhoe_icon_small   $VAL$+$ADD|H$/$MAX$
-STATE_BUILDINGS코0=주 건물들
-STATE_BUILDINGS_DESC코0=주에 지어지는 건물. 각 건물별 한계치를 가집니다.
-SHARED_BUILDINGS코0=공유 건물들
-SHARED_BUILDINGS_DESC코0=주에 지어지는 건물. 각 주는 고유한 양의 건설 슬롯을 보유하고 있으며, 공유건물 간에 공유되어 집니다.
-PROVINCE_BUILDINGS코0=지역 건물
-PROVINCE_BUILDINGS_DESC코0=지역에 지어지는 건물. 각 건물은 고유한 한계치를 가집니다.
-CONSTRUCTION_PAUSED_COMBAT코0=§R전투로 인해 건설 진행을 할 수 없습니다.§\!
+STATE_BUILDINGS코0=State Buildings
+STATE_BUILDINGS_DESC코0=Buildings built in states. Each building has its own level limit.
+SHARED_BUILDINGS코0=Shared Buildings
+SHARED_BUILDINGS_DESC코0=Buildings built in states. Each state has its own number of building slots that is shared between these buildings.
+PROVINCE_BUILDINGS코0=Province Buildings
+PROVINCE_BUILDINGS_DESC코0=Buildings built in provinces. Each building has its own level limit.
+CONSTRUCTION_PAUSED_COMBAT코0=§RThe Construction can't progress because of an ongoing battle.§!
