--- a/country_l_english.properties
+++ b/country_l_english.properties
@@ -1,88 +1,92 @@
-NATIONAL_UNITY코0=국가 단결도
-STABILITY코0=안정도
-WAR_SUPPORT코0=전쟁 지지도
-NATIONAL_UNITY_DESC코0=국가 단결도는 국가 상층부의 위치한 사람들의 항전하고자 하는 의지를 의미합니다. 즉, 단결도가 높을수록 항복을 고려하기 전에 더 오래 싸울 것입니다.
-STABILITY_DESC코0=안정도는 현 정부에 대한 사람들의 지지도를 의미합니다. 높은 안정도는 정치적 변화를 쉽게 밀어붙일 수 있도록 하고 경제를 원활히 움직이게 합니다.
-WAR_SUPPORT_DESC코0=전쟁 지지도는 전쟁으로써 결판을 내고자 하는 사람들의 의지를 의미합니다. 많은 법률을 제정하고 여러분의 국가가 전쟁을 일으킬 준비를 효율적으로 하려면 높은 전쟁 지지도가 필요합니다.
-STABILITY_WAR_FACTOR코0=전쟁 중\: $VALUE|+2%H$
-STABILITY_POPULARITY_FACTOR코0=집권 정당 인기도\: $VALUE|\=+2%H$
-STABILITY_EFFECT_TITLE코0=\n§H현재의 안정도가 미치는 영향\:§\!\n
-WAR_SUPPORT_EFFECT_TITLE코0=\n§H현재의 전쟁 지지도가 미치는 영향\:§\!\n
-WAR_SUPPORT_AT_OFFENSIVE_WAR코0=공격 전쟁\: $VALUE|+\=2%H$
-WAR_SUPPORT_AT_DEFENSIVE_WAR코0=방어 전쟁\: $VALUE|+\=2%H$
-WAR_SUPPORT_TENSION코0=세계 긴장도\: $VALUE|+\=2%H$
-WAR_SUPPORT_BEING_BOMBED코0=적 폭격\: $VALUE|+\=2%H$
-WAR_SUPPORT_INTERCEPTION코0=봉쇄\: $VALUE|+\=2%H$
-WAR_SUPPORT_HEROES_BEING_KILLED코0=전쟁영웅의 전사\: $VALUE|+\=2%H$
-POLITICAL_POWER코0=정치력
-POLITICAL_POWER_DESC코0=이 국가의 지도자가 가지고 있는 정치력입니다.
-MANPOWER코0=인력
-SERVICE_MANPOWER코1=£manpower_texticon  인력\:
-SERVICE_MANPOWER_DESC코0=인력은 여러 가지 군용과 민간용 장비들을 작동시키는데 사용됩니다.
-MAX_MANPOWER코0=최대 인력\:
-MANPOWER_TOTAL코0=최대 인력\: $MAX|0H*$
-MANPOWER_USAGE코1=가용 인력\: $FREE|^2H$\n사용 인력\:\n육군\: $ARMY|^2H$\n    - 야전 배치\: $FIELD|^2H$\n    - 훈련 중\: $TRAINING|^2H$\n공군\: $AIR|^2H$\n해군\: $NAVAL|^2H$
-MANPOWER_CURRENT코0=총 인력\: $TOTAL|^2H$\n$PERC|2%H$ 의 사용가능한 자격을 갖춘 핵심적인 인구 ($ELIGIBLE|^H$)
-MANPOWER_CURRENT_MOBILIZATION코0=총 인력\: $TOTAL|^2H$\n$PERC|2%H$ (일일 동원되는 수 $MOB|+3H%$) 가용할 수 있는 핵심 인력 ($ELIGIBLE|^H$)
-MANPOWER_NON_CORE코0=$NC_PERC|3%H$ 의 사용한 자격을 갖춘 비-핵심 인구 ($NC_ELIGIBLE|^H$)
-MANPOWER_GROWTH코0=§Y국가의 월별 성장도§\!\n모병할 수 있음\: $RECRUITABLE|^G$\n민간인\: $CIVILIAN|^G$
+NATIONAL_UNITY코0=National Unity
+STABILITY코0=Stability
+WAR_SUPPORT코0=War Support
+NATIONAL_UNITY_DESC코0=National Unity represents the willingness of the people at the top to prosecute a war to the finish. The higher this value is, the longer they will fight on before considering surrender.
+STABILITY_DESC코0=Stability represents the people's support for the current government. High stability makes political changes easier to push through and helps the economy run smoothly.
+WAR_SUPPORT_DESC코0=War Support represents the willingness of the people to prosecute a war to the finish. Enacting many Laws and preparing your nation for going to war effectively requires high War Support.
+STABILITY_WAR_FACTOR코0=At war: $VALUE|+2%H$
+STABILITY_POPULARITY_FACTOR코0=Ruling party popularity: $VALUE|=+2%H$
+STABILITY_EFFECT_TITLE코0=\n§HEffects from our current Stability:§!\n
+WAR_SUPPORT_EFFECT_TITLE코0=\n§HEffects from our current War Support:§!\n
+WAR_SUPPORT_AT_OFFENSIVE_WAR코0=Offensive war: $VALUE|+=2%H$
+WAR_SUPPORT_AT_DEFENSIVE_WAR코0=Defensive war: $VALUE|+=2%H$
+WAR_SUPPORT_TENSION코0=World Tension: $VALUE|+=2%H$
+WAR_SUPPORT_BEING_BOMBED코0=Enemy bombing: $VALUE|+=2%H$
+WAR_SUPPORT_INTERCEPTION코0=Interception: $VALUE|+=2%H$
+WAR_SUPPORT_HEROES_BEING_KILLED코0=War Heroes Being Killed: $VALUE|+=2%H$
+WAR_SUPPORT_CONVOYS_BEING_RAIDED코0=Trade Convoys Being Raided: $VALUE|+=2%H$
+POLITICAL_POWER코0=Political Power
+POLITICAL_POWER_DESC코0=How much Political Power the leaders of this country have.
+MANPOWER코0=Manpower
+SERVICE_MANPOWER코1=£manpower_texticon  Service Manpower:
+SERVICE_MANPOWER_DESC코0=Service manpower is used by different types of equipment to maintain its functionality.
+MAX_MANPOWER코0=Max Manpower: 
+EXILE_COUNTRY_NORMAL_MANPOWER_DAILY_GROWTH코0=\n    Daily gain from §HLegitimacy§!: $AMOUNT|H^$
+MANPOWER_TOTAL코0=Total Manpower: $MAX|0H*$
+MANPOWER_USAGE코1=Free Manpower: $FREE|^2H$$EXILE$\nUsed Manpower:\nArmy: $ARMY|^2H$\n    - In the Field: $FIELD|^2H$\n    - In Training: $TRAINING|^2H$\nAir: $AIR|^2H$\nNavy: $NAVAL|^2H$
+MANPOWER_CURRENT코0=Total Manpower: $TOTAL|^2H$\n$PERC|2%H$ of Eligible Core Population available ($ELIGIBLE|^H$)
+MANPOWER_CURRENT_MOBILIZATION코0=Total Manpower: $TOTAL|^2H$\n$PERC|2%H$ (about $MOB|+3H%$ is mobilizing per day) of Eligible Core Population available ($ELIGIBLE|^H$)
+MANPOWER_NON_CORE코0=$NC_PERC|3%H$ of Eligible Non-Core Population available ($NC_ELIGIBLE|^H$)
+MANPOWER_GROWTH코0=§YMonthly growth in states§!\nRecruitable: $RECRUITABLE|^G$\nCivilian: $CIVILIAN|^G$
 MANPOWER_VALUE코3=$USAGE$\n\n$CURRENT$\n$GROWTH$
-MANPOWER_DESC코0=이 나라가 징병할 수 있는 사람들입니다. 더 강한 병역법을 통과시켜 수를 늘릴 수 있습니다.
-MANPOWER_DIVISION코0=사단 인력
-MANPOWER_DIVISION_DESC코0=§T§H이 사단§\!에 있는 군인의 수 이다. 군인이 죽을 때, 대체 병력은 국가의 §H인력§\! 재원으로부터 충원을 받습니다§\!
-MANPOWER_DIVISION_SIZE_DESC코0=§T해당 §H사단은§\! 병력들을 $AMOUNT|G$ 포함하고 있습니다. 만약 당신의 병력이 죽으면, 그들을 대체하는 지원병력을 당신의 국가의 §H인력§\! 으로부터 보충 받을 것 입니다.§\!
-MANPOWER_DIVISION_SIZE_BREAKDOWN_DESC코0=§T이 §H사단§\!은 $AMOUNT|G$ 만큼의 부대가 소속되어 있습니다. 인력의 수\:
-MANPOWER_BREAKDOWN_ENTRY코0=$FLAG$ $COUNTRY|H$\: $CURRENT|H$/$MAX|H$
-MANPOWER_BREAKDOWN_ENTRY_FULL코0=$FLAG$ $COUNTRY|H$\: $CURRENT|G$/$MAX|G$
-MANPOWER_SHIP코0=함선에 탑승하는 인력
-MANPOWER_SHIP_DESC코0=§T해당 §H함선은§\! 다음이 추가로 필요합니다. $AMOUNT|G$ 임무를 수행할 인력.§\!
-MANPOWER_AIRWING코0=비행 작전을 수행하는 인력
-MANPOWER_AIRWING_DESC코0=§T해당 §H비행 작전은§\! 다음이 추가로 필요합니다 $AMOUNT|G$ 임무를 수행할 인력.§\!
-CONSCRIPTION_TOTAL_FACTOR_EXTRA_DESC코0=\n실제 동원할 수 있는 총 인력이 $VAL|-%0$만큼 변동됩니다. 다음으로 인해\:\n
-EQUIPMENT_DIVISION코0=사단 장비율
-EQUIPMENT_DIVISION_DESC코0=사단에 필요하거나 채워진 장비가 얼마나 되는지 보여줍니다.
-DIVISION_IN_TEMPLATE_TRANSFER코0=사단은 현재 $OLD|H$에서 $NEW|H$ 편제로 재편성 중입니다. 재편성은 우선 필요한 장비가 도착하고 구형장비가 비축지로 돌아가는대로 완료합니다.
-MANPOWER_MONTHLY_TOTAL코2=매월 획득가능한 인력\: $VALUE|^+1$($PERC|2%H$)\n총 인구 성장\: $MAX|^2H$($FACTOR|2%H$ of total population)\n\n기본 성장율\: $RATIO|%H$
-MANPOWER_MODIFIER_APPLIED코0=변동치 적용됨\:\n$MODIFIERS$
-MANPOWER_MONTHLY_BASE코0=기본 수치\: $VALUE|*Y0$
-MANPOWER_MONTHLY_TECH_FACTOR코0=기술로 부터\: $VALUE|+%$
-MANPOWER_PROVINCE_TOOLTIP코0=인력\: $VAL|*Y$
-INDUSTRIAL_CAPACITY코0=공장
-INDUSTRIAL_CAPACITY_DESC코0=공장에는 각기 다른 목적을 지닌, 서로 다른 세 가지 유형이 있습니다.
-INDUSTRIAL_CAPACITY_DESC_OCCUPATION코0=점령한 지역에서 얻을 수있는 공장의 수치는 점령 정책에 의해 영향을받습니다.
-ARMY_EXPERIENCE코0=육군 경험치
-ARMY_EXPERIENCE_GAIN_TRAINING코0=훈련으로 부터\: 매일 $VALUE|\=+3$
-ARMY_EXPERIENCE_DESC코0=전투에서 장비를 사용하게 되면, 육군 경험치를 획득하게 됩니다. 이는 당신의 §H사단§\!이 전투에서 교전하거나 동맹의 전쟁에 §H무기지원§\!을 하게 되면 육군 경험치를 얻을 수 있음을 의미합니다.\n또한,  적어도 $UNIT_TRAINING_LEVEL|Y$ 등급인 부대를 훈련 시키거나 일부 §H국가적 중점§\!을 통해서 얻을 수 있습니다.  일부 §H장관§\!들도 경험치 획득을 늘릴 수 있습니다.\n\n육군 경험치는 §H사단편제§\!를 추가하고 변경하는데 사용됩니다.
-NAVY_EXPERIENCE코0=해군 경험치
-NAVY_EXPERIENCE_DESC코0=함선이 전투에 사용되면, 해군 경험치를 얻을 수 있습니다. 특정 §H국가적 중점§\!은 추가적인 해군 경험치를 제공하며 일부 §H장관§\!들 또한 해군 경험치의 획득을 늘릴 수 있습니다.\n\n해군 경험치는 보다 나아진 변종 함선 개발에 쓰입니다.
-AIR_EXPERIENCE코0=공군 경험치
-AIR_EXPERIENCE_DESC코0=비행기들이 임무에 참여하고 적기와 조우하면, 공군 경험치를 얻습니다. 또는 §H비행단§\!이 전투에서 교전을 하거나 동맹의 전쟁에 §H무기 지원§\!을 해도 얻을 수 있습니다. 특정 §H국가적 중점§\!과 §H장관§\!은 공군 경험치의 획득을 늘릴 수 있습니다.\n\n공군 경험치는 보다 나아진 변종 항공기 개발에 쓰입니다.
-COMMAND_POWER코0=지휘력
-COMMAND_POWER_DESC코0=§H지휘력§\!은 다양한 군사 작전과 장군의 진급에 쓰입니다. 한 차례의 작전에만 사용될 수도 지속적인 작전에 계속 할당될 수도 있습니다. 다양한 교리와 국민정신에 의해 §H지휘력§\!의 상승률과 총량은 늘어날 수 있습니다.
-CURRENT_COMMAND_POWER_TOPBAR코0=§T현재 지휘력\: $VALUE|G1$§\!
-COMMAND_POWER_GAIN코0=§T일일 획득\: $VALUE|Y2$§\!
-MAX_COMMAND_POWER_TEXT코1=현재 최대치\: $VALUE|Y0$
-COMMAND_POWER_ALLOCATED코1=할당\: $VALUE|R1$
-COMMAND_POWER_ALLOCATED_TOOLTIP_ENTRY코1=- $NAME|0$\: $VALUE|R0$
-COMMAND_POWER_TOOLTIP_PREFIX코0=- 
-COMMAND_POWER_TOOLTIP_AIR_MISSION코0=$MISSION_TYPE$ ($LOCATION|H$의 $WING_NAME|H$)
+MANPOWER_DESC코0=Recruitable soldiers in this country. Enact stricter Conscription Laws to increase.
+MANPOWER_DIVISION코0=Division Manpower
+MANPOWER_DIVISION_DESC코0=§TAmount of soldiers in this §HDivision§!. As soldiers die they receive reinforcements from your country's §HManpower§! pool.§!
+MANPOWER_DIVISION_SIZE_DESC코0=§TThis §HDivision§! contains $AMOUNT|G$ troops. As soldiers die they receive reinforcements from your country's §HManpower§! pool.§!
+MANPOWER_DIVISION_SIZE_BREAKDOWN_DESC코0=§TThis §HDivision§! contains $AMOUNT|G$ troops. It has manpower from:§!
+MANPOWER_BREAKDOWN_ENTRY코0=$FLAG$ $COUNTRY|H$: $CURRENT|H$/$MAX|H$
+MANPOWER_BREAKDOWN_ENTRY_FULL코0=$FLAG$ $COUNTRY|H$: $CURRENT|G$/$MAX|G$
+MANPOWER_SHIP코0=Ship Service Manpower
+MANPOWER_SHIP_DESC코0=§TThis §HShip§! requires $AMOUNT|G$ of service manpower.§!
+MANPOWER_AIRWING코0=Air Wing Service Manpower
+MANPOWER_AIRWING_DESC코0=§TThis §HAir Wing§! requires $AMOUNT|G$ of service manpower.§!
+CONSCRIPTION_TOTAL_FACTOR_EXTRA_DESC코0=\nEffective Total Manpower modified to $VAL|-%0$ due to\n
+EQUIPMENT_DIVISION코0=Division Equipment Ratio
+EQUIPMENT_DIVISION_DESC코0=Shows how division is filled with needed equipment.
+DIVISION_IN_TEMPLATE_TRANSFER코0=Division is currently reorganizing from $OLD|H$ to $NEW|H$ template. The reorganization will be complete when the first needed equipment is delivered and old equipment will then be returned to stockpile.
+MANPOWER_MONTHLY_TOTAL코2=Monthly available manpower gain: $VALUE|^+1$($PERC|2%H$)\nTotal population growth: $MAX|^2H$($FACTOR|2%H$ of total population)\n\nBase growth rate: $RATIO|%H$
+MANPOWER_MODIFIER_APPLIED코0=Modifiers applied:\n$MODIFIERS$
+MANPOWER_MONTHLY_BASE코0=Base value: $VALUE|*Y0$
+MANPOWER_MONTHLY_TECH_FACTOR코0=From tech: $VALUE|+%$
+MANPOWER_PROVINCE_TOOLTIP코0=Manpower: $VAL|*Y$
+INDUSTRIAL_CAPACITY코0=Factories
+INDUSTRIAL_CAPACITY_DESC코0=There are three different types of factories, each with their own purpose.
+INDUSTRIAL_CAPACITY_DESC_OCCUPATION코0=The number of factories you get from the occupied states is influenced by your occupation policies.
+ARMY_EXPERIENCE코0=Army Experience
+ARMY_EXPERIENCE_GAIN_TRAINING코1=From §HArmy Exercises§!: $VALUE|=+3$ daily
+ARMY_EXPERIENCE_DESC코0=As your equipment is used in combat, you gain Army Experience. This means that you can gain Army Experience when your §HDivisions§! engage in battle or if you have §HLend-Leased§! equipment to your allies' wars.\nYou also gain experience from conducting §HArmy Exercises§! with troops that are at least level $UNIT_TRAINING_LEVEL|Y$ and from certain §HNational Focuses§!. Some §HMinisters§! can increase experience gained.\n\nArmy Experience is needed to create and modify your §HDivision Templates§!.
+NAVY_EXPERIENCE코0=Navy Experience
+NAVY_EXPERIENCE_GAIN_TRAINING코0=From §HNaval Exercises§!: $VALUE|=+3$ daily
+NAVY_EXPERIENCE_DESC코0=As your ships are used in combat and in §HNaval Exercises§!, you gain Navy Experience. Certain §HNational Focuses§! give additional experience and some §HMinisters§! can increase experience gained.\n\nNaval Experience is used to develop better variants of existing ships.
+AIR_EXPERIENCE코0=Air Experience
+AIR_EXPERIENCE_GAIN_TRAINING코0=From §HPilot Exercises§!: $VALUE|=+3$ daily
+AIR_EXPERIENCE_DESC코0=When your aircraft engage the enemy in missions or practice in §HPilot Exercises§!, you gain Air Experience. This means that you can gain Air Experience when your §HAir Wings§! engage in battle or if you have §HLend-Leased§! equipment to your allies' wars.\nCertain §HNational Focuses§! give additional experience and some §HMinisters§! can increase experience gained.\n\nAir Experience is used to develop better variants of existing aircraft.
+COMMAND_POWER코0=Command Power
+COMMAND_POWER_DESC코0=§HCommand Power§! is used for various military operations and promotion of generals. It can be spent on one time operations or it can be allocated for continous operations. Growth and maximum capacity of §HCommand Power§! can be increased by various Doctrines and National Spirits.
+CURRENT_COMMAND_POWER_TOPBAR코0=§TCurrent Command Power: $VALUE|G1$§!
+COMMAND_POWER_GAIN코0=§TDaily Gain: $VALUE|Y2$§!
+MAX_COMMAND_POWER_TEXT코1=Current Max: $VALUE|Y0$
+COMMAND_POWER_ALLOCATED코1=Allocated: $VALUE|R1$
+COMMAND_POWER_ALLOCATED_TOOLTIP_ENTRY코1=         - $NAME|0$: $VALUE|R0$
+COMMAND_POWER_TOOLTIP_PREFIX코0=    - 
+COMMAND_POWER_TOOLTIP_AIR_MISSION코0=$MISSION_TYPE$ ($WING_NAME|H$ on $LOCATION|H$)
 COMMAND_POWER_TOOLTIP_AIR_MISSION_UNASSIGNED코0=$MISSION_TYPE$ ($WING_NAME|H$)
-MANPOWER_IN_USE코0=야전 내 인력
-MANPOWER_IN_USE_DESC코0=§T야전에서 활동 중인 군인의 수입니다. 군인이 전사하면 나라의 §H징병 가능한 인력§\!에서 충원됩니다.§\!
-EQUIPMENT_IN_USE코0=야전 내 장비 보급률
-EQUIPMENT_IN_USE_DESC코0=사단들이 필요로 하는 장비가 잘 보급되고 있는지를 나타냅니다.
-NAVY_EQUIPMENT_TOTAL코0=함선의 총합
-NAVY_EQUIPMENT_TOTAL_DESC코0=우리가 보유한 총 함선의 수를 표시합니다
-NAVAL_SERVICE_MANPOWER_DESC코0=우리 해군이 완전한 효율을 유지하기 위해 필요한 인력입니다.
-AIR_EQUIPMENT_TOTAL코0=항공기의 총합
-AIR_EQUIPMENT_TOTAL_DESC코0=항공기의 총 수를 표시합니다.
-AIR_EQUIPMENT_IN_USE코0=비행기 보급률
-AIR_EQUIPMENT_IN_USE_DESC코0=비행단이 정비에 필요한 장비를 잘 보급받고 있는지를 나타냅니다.
-AIR_SERVICE_MANPOWER_DESC코0=우리 공군이 완전한 효율을 유지하기 위해 필요한 인력입니다.
-EQUIPMENT_IN_USE_HEADER코0=야전 내 장비
-EQUIPMENT_VARIANTS_TOGGLE_ON코0=§G클릭으로 세부 사항 보기§\!
-EQUIPMENT_VARIANTS_TOGGLE_OFF코0=§G클릭으로 숨기기§\!
-CURRENT_EXPERIENCE_TOPBAR코0=§T현재 경험치\: $VALUE|Y2$§\!
-EXPERIENCE_FROM_ATTACHES코0=우리의 주재무관은 $COUNTRIES$에서 그들의 군사 경험치를 $XPSHARE|H%0$ 만큼 보내고 있습니다
-RULES_TITLE코0=§H규칙 요약\:§\!
-RULES_DESC코0=나라의 규칙은  나라와 세력의 이념, 그리고 국민정신의 지배를 받습니다.
+MANPOWER_IN_USE코0=Manpower in Field
+MANPOWER_IN_USE_DESC코0=§TAmount of soldiers in Field. As soldiers die they receive reinforcements from your country's §HManpower§! pool.§!
+EQUIPMENT_IN_USE코0=Equipment in Field Ratio
+EQUIPMENT_IN_USE_DESC코0=Shows how divisions are filled with needed equipment.
+NAVY_EQUIPMENT_TOTAL코0=Total amount of ships
+NAVY_EQUIPMENT_TOTAL_DESC코0=Shows how many ships we have in total.
+NAVAL_SERVICE_MANPOWER_DESC코0=Service manpower is used by our navy to maintain its functionality.
+AIR_EQUIPMENT_TOTAL코0=Total amount of planes
+AIR_EQUIPMENT_TOTAL_DESC코0=Shows how many planes we have in total.
+AIR_EQUIPMENT_IN_USE코0=Planes in Field Ratio
+AIR_EQUIPMENT_IN_USE_DESC코0=Shows how air wings are filled with needed equipment.
+AIR_SERVICE_MANPOWER_DESC코0=Service manpower is used by our air forces to maintain its functionality.
+EQUIPMENT_IN_USE_HEADER코0=Equipment in Field
+EQUIPMENT_VARIANTS_TOGGLE_ON코0=§GClick to show details§!
+EQUIPMENT_VARIANTS_TOGGLE_OFF코0=§GClick to hide details§!
+CURRENT_EXPERIENCE_TOPBAR코0=§TCurrent experience: $VALUE|Y2$§!
+EXPERIENCE_FROM_ATTACHES코0=Our attachés in $COUNTRIES$ give us $XPSHARE|H%0$ of their military experience
+RULES_TITLE코0=§HRules Summary:§!
+RULES_DESC코0=The Rules of your Country are controlled by your Ideology, the Ideology of your Faction and your National Spirits
