--- a/mapmode_l_english.properties
+++ b/mapmode_l_english.properties
@@ -1,24 +1,54 @@
-MAPMODE_FABRICATE_WRONG_COUNTRY코0=국가는 $COUNTRY|Y$이(가) 아닙니다
-MAPMODE_FABRICATE_UNSELECT코0=$STATE|Y$ 선택취소
-MAPMODE_FABRICATE_HAS_CLAIM코0=이미 $STATE|Y$에 영유권을 주장했습니다
-MAPMODE_FABRICATE_IS_CORE코0=이미 $STATE|Y$에 영유권을 주장했습니다
-MAPMODE_FABRICATE_IS_FABRICATING코0=$STATE|Y$에 대한 영유권이 이미 정당화되었습니다
-MAPMODE_FABRICATE_SELECT코0=$STATE|Y$ 선택
-MAPMODE_FACTIONS코0=§Y세력§\! 지도.
-MAPMODE_FACTIONS_DESCRIPTION코0=각 나라가 어떤 세력에 가입했는지 보여줍니다.
-MAPMODE_DEFAULT코0=§H기본§\! 지도
-MAPMODE_DEFAULT_DESCRIPTION코0=나라와 지상전을 볼 수 있습니다.\n지역은 현재 지배국의 색에 따라 칠해질 것입니다.\n전쟁 계획 수립과 실행, 그리고 전투 진행 상황을 보는데 유용합니다.
-MAPMODE_STATES코0=§H주§\! 지도
-MAPMODE_STATES_DESCRIPTION코0=각 주의 명칭과 유형을 볼 수 있습니다.
-MAPMODE_DIPLOMACY코0=§H외교§\! 지도
-MAPMODE_DIPLOMACY_DESCRIPTION코0=외교 관계와 현재 선택된 나라를 향한 태도를 보여줍니다.
-MAPMODE_SUPPLY_AREAS코0=§H보급 지역§\! 지도
-MAPMODE_SUPPLY_AREAS_DESCRIPTION코0=보급 지역과 보급로에 대한 정보를 보여줍니다. 어디에서 보급 문제 및 병목 현상이 일어나는지 알 수 있습니다.
-MAPMODE_STRATEGIC_NAVY코0=§H전략 해군§\! 지도
-MAPMODE_STRATEGIC_NAVY_DESCRIPTION코0=전략 지역과 함대가 수행하는 해군 작전을 보여줍니다.\n여러분의 해군이 우세인 지역은 §G초록색§\! 윤곽선으로 나타납니다.\n§R빨간색§\! 빗금이 쳐진 지역은 현재 선택된 함대의 작전 범위 밖입니다.
-MAPMODE_STRATEGIC_AIR코0=§H전략 공군§\! 지도
-MAPMODE_STRATEGIC_AIR_DESCRIPTION코0=전략 지역과 비행기들이 수행하는 공군 작전을 보여줍니다.\n§G초록색 지역§\!은 아군의 제공권이 우세, §R빨간색 지역§\!은 적군의 제공권이 우세한 곳입니다.\n여러분의 비행기가 있는 비행장이 강조됩니다.
-MAPMODE_RESOURCES코0=§H자원§\! 지도
-MAPMODE_RESOURCES_DESCRIPTION코0=각 주별로 생산되는 자원을 보여줍니다.
-MAPMODE_RESISTANCE코0=§H저항군§\! 지도
-MAPMODE_RESISTANCE_DESCRIPTION코0=점령지에서 일어나는 저항 활동을 보여줍니다. 문제 지점을 보여주므로 주둔군을 증강하거나 점령지 정책 변경을 고려할 수 있습니다.
+MAPMODE_FABRICATE_WRONG_COUNTRY코0=Country is not $COUNTRY|Y$
+MAPMODE_FABRICATE_UNSELECT코0=Unselect $STATE|Y$
+MAPMODE_FABRICATE_HAS_CLAIM코0=Already has a claim on $STATE|Y$
+MAPMODE_FABRICATE_IS_CORE코0=Already has a claim on $STATE|Y$
+MAPMODE_FABRICATE_IS_FABRICATING코0=Already justifying a claim on $STATE|Y$
+MAPMODE_FABRICATE_SELECT코0=Select $STATE|Y$
+MAPMODE_FACTIONS_NAME코0=Factions
+MAPMODE_FACTIONS코0=§YFactions§! mapmode.
+MAPMODE_FACTIONS_DESCRIPTION코0=Shows which countries have joined which factions.
+MAPMODE_DEFAULT_NAME코0=Default
+MAPMODE_DEFAULT코0=§HDefault§! map mode
+MAPMODE_DEFAULT_DESCRIPTION코0=Country view and land combat.\nA province will be colored according to who is currently controlling it.\nUseful for following the progression of war, and creating and executing war plans.
+MAPMODE_STATES_NAME코0=States
+MAPMODE_STATES코0=§HStates§! map mode
+MAPMODE_STATES_DESCRIPTION코0=States map and state types.
+MAPMODE_DIPLOMACY_NAME코0=Diplomacy
+MAPMODE_DIPLOMACY코0=§HDiplomacy§! map mode
+MAPMODE_DIPLOMACY_DESCRIPTION코0=Shows diplomatic relations and attitudes towards the currently selected country.
+MAPMODE_SUPPLY_AREAS_NAME코0=Supply Areas
+MAPMODE_SUPPLY_AREAS코0=§HSupply Areas§! map mode
+MAPMODE_SUPPLY_AREAS_DESCRIPTION코0=Shows supply areas and information about the flow of supply. It allows you to identify problem areas and bottlenecks.
+MAPMODE_STRATEGIC_NAVY_NAME코0=Strategic Navy
+MAPMODE_STRATEGIC_NAVY코0=§HStrategic Navy§! map mode
+MAPMODE_STRATEGIC_NAVY_DESCRIPTION코0=Shows strategic areas and allows you to see what naval operations are being performed by your fleets. \nRegions where you have naval supremacy are shown with a §Ggreen§! outline. \nAreas striped §Rred§! are outside the operational range of the currently selected fleet.
+MAPMODE_STRATEGIC_AIR_NAME코0=Strategic Air
+MAPMODE_STRATEGIC_AIR코0=§HStrategic Air§! map mode
+MAPMODE_STRATEGIC_AIR_DESCRIPTION코0=Shows strategic areas and allows you to see what air operations are being performed by your planes. \n§GGreen regions§! have friendly air superiority, §Rred regions§! have enemy air superiority. \nAirfields with your planes based in them are highlighted.
+MAPMODE_RESOURCES_NAME코0=Resource
+MAPMODE_RESOURCES코0=§HResource§! map mode
+MAPMODE_RESOURCES_DESCRIPTION코0=Shows resource production by state.
+MAPMODE_RESISTANCE_NAME코0=Resistance
+MAPMODE_RESISTANCE코0=§HResistance§! map mode
+MAPMODE_RESISTANCE_DESCRIPTION코0=Displays local resistance in occupied areas. Shows you trouble spots where you should garrison more troops or consider changing your occupation policy.
+MAPMODE_PLAYERS_NAME코0=Players
+MAPMODE_PLAYERS코0=§HPlayers§! map mode
+MAPMODE_PLAYERS_DESCRIPTION코0=Displays which country is controlled by which player.
+MAPMODE_INFRASTRUCTURE_NAME코0=Infrastructure
+MAPMODE_INFRASTRUCTURE코0=§HInfrastructure§! map mode
+MAPMODE_INFRASTRUCTURE_DESCRIPTION코0=Shows the level of infrastructure in each state.
+MAPMODE_MANPOWER_NAME코1=Population
+MAPMODE_MANPOWER코1=§HPopulation§! map mode
+MAPMODE_MANPOWER_DESCRIPTION코1=Shows the amount of population in each state.
+MAPMODE_IDEOLOGY_NAME코0=Ideology
+MAPMODE_IDEOLOGY코0=§HIdeology§! map mode
+MAPMODE_IDEOLOGY_DESCRIPTION코0=Shows the countries by their ideology.
+MAPMODE_TERRAIN_NAME코0=Terrain
+MAPMODE_TERRAIN코1=§HTerrain map mode§!
+MAPMODE_TERRAIN_DESCRIPTION코1=Displays the terrain type as simplified colors.
+MAPMODE_CONFIGURE코0=Configure favourite map modes
+MAPMODE_ALL코0=Open window with all possible map modes.
+CONFIG_MAPMODE_DEFAULT코0=Reset the map mode slots to default state
+MAPMODE_ALL_ENTRY_DETAILS코0=§GClick§! to select.\n§GRight click§! to select and close.
+MAPMODE_TOOLTIP_INFRASTRUCTURE코0=£infrastructure_texticon  Infrastructure $INF|Y$
+MAPMODE_TOOLTIP_MANPOWER코1=£population_texticon  Population $MP|*Y$
