--- a/music_l_english.properties
+++ b/music_l_english.properties
@@ -1,22 +1,22 @@
-maintheme코0=주제곡 - 연합국 (Main Theme - Allies)
-axis_war_1코0=추축국 주제곡 (Axis Theme)
-allies_peace_1코0=디데이의 아침 (Morning of D-day)
-general_war_1코0=전차들의 생산 대기열 (Bring Forth the Tanks)
-axis_peace_1코0=크라쿠프 (Krakow)
-general_war_2코0=공격 (The Attack)
-comintern_war_1코0=소비에트 연방의 힘 (The Might of the Soviet Union)
-comintern_war_2코0=코민테른 주제곡 (Comintern Theme)
-axis_war_4코0=천둥의 날 (Days of Thunder)
-general_peace_1코0=사람의 마음 (Hearts of Men)
-allies_war_2코0=왕립 공군 (The Royal Airforce)
-axis_war_2코0=중수 (Heavy Water)
-comintern_war_3코0=대조국전쟁 (The Great Patriotic War)
-general_peace_3코0=2차 대전의 어린이들을 위한 노래 (A Song For the Children of WW2)
-comintern_peace_2코0=붉은 군대 (The Red Army)
-allies_war_1코0=우리는 군인이다 (We Are Soldiers)
-comintern_peace_1코0=어머니 러시아 (Mother Russia)
-axis_peace_2코0=루프트바페 행진곡 - 반복 (Luftwaffe March - Reprise)
-axis_war_3코0=바르바로사 작전 (Operation Barbarossa)
-allies_peace_2코0=여행의 끝 (End of the Tour)
-comintern_peace_3코0=러시아의 승리 (Russian Victory)
-general_peace_2코0=종전 (The War Ends)
+maintheme코0=Main Theme - Allies
+axis_war_1코0=Axis Theme
+allies_peace_1코0=Morning of D-day
+general_war_1코0=Bring Forth the Tanks
+axis_peace_1코0=Krakow
+general_war_2코0=The Attack
+comintern_war_1코0=The Might of the Soviet Union
+comintern_war_2코0=Comintern Theme
+axis_war_4코0=Days of Thunder
+general_peace_1코0=Hearts of Men
+allies_war_2코0=The Royal Airforce
+axis_war_2코0=Heavy Water
+comintern_war_3코0=The Great Patriotic War
+general_peace_3코0=A Song For the Children of WW2
+comintern_peace_2코0=The Red Army
+allies_war_1코0=We Are Soldiers
+comintern_peace_1코0=Mother Russia
+axis_peace_2코0=Luftwaffe March - Reprise
+axis_war_3코0=Operation Barbarossa
+allies_peace_2코0=End of the Tour
+comintern_peace_3코0=Russian Victory
+general_peace_2코0=The War Ends
