--- a/nudge_l_english.properties
+++ b/nudge_l_english.properties
@@ -1,5 +1,5 @@
-NUDGE_0코0=도시
-NUDGE_1코0=부대
-NUDGE_2코0=글자
-NUDGE_3코0=항구
-NUDGE_4코0=무역 경로
+NUDGE_0코0=City
+NUDGE_1코0=Unit
+NUDGE_2코0=Text
+NUDGE_3코0=Port
+NUDGE_4코0=Trade route
