--- a/peace_l_english.properties
+++ b/peace_l_english.properties
@@ -1,94 +1,94 @@
-PEACE_PEACE_CONFERENCE코0=평화 회담
-PEACE_WINNERS코0=승전국
-PEACE_LOOSERS코0=패전국
-PEACE_LIBERATED코0=해방국
-PEACE_PUPPETS코0=괴뢰국
-PEACE_RESET_DEMAND코0=초기화
-PEACE_SEND_DEMAND코0=보내기
-PEACE_TAKE_STATES코0=$TAKER|Y$은(는) 아래 주를 $GIVER|Y$(으)로 부터 받음\:
-PEACE_TAKE_STATES_STATE코0=$STATE|Y$
-PEACE_LIBERATE_COUNTRY코0=$TAKER|Y$ 는 $GIVER|Y$(으)로부터 $COUNTRY|Y$을(를) 해방시켰습니다.\n$COUNTRY|Y$은(는) 독립할 것입니다\!
-PEACE_LIBERATE_TO_COUNTRY코0=$TAKER|Y$은(는) $GIVER|Y$으로부터 $COUNTRY|Y$을(를) 해방시킵니다.
-PEACE_CURRENT_COST코0=비용\: $COST|Y$ / $SALDO|Y$
-PEACE_WINNER_SCORE코0=승점\: $CURRENT|Y$
-PEACE_WINNER_SCORE_FROM코0=$FROM|$(으)로부터 £victory_points $AMOUNT|Y$ 
-PEACE_ANNEX_COUNTRY코0=$TAKER|Y$는(은) $GIVER|Y$을(를) 합병하고 모든 주를 얻게 될 것입니다.
-PEACE_PUPPET_COUNTRY코0=$TAKER|Y$는(은) $COUNTRY|Y$에 친화적인 정부를 세우고, 괴뢰국으로 바꿉니다.
-PEACE_SATELLITE_COUNTRY코0=$TAKER|Y$는(은) $COUNTRY|Y$을(를) 우호적인 정권을 취임시켜 해방하고, 괴뢰국으로 바꿉니다.
-PEACE_FORCE_GOVERNMENT코0=$TAKER|Y$는(은) $GIVER|Y$에게 $IDEOLOGY|Y$ 의 진실한 길을 보여주기 위해 도왔습니다.
-PEACE_GIVE_PEACE_SCORE코0=$GIVER|Y$은(는) 남은 점수를 $TAKER|Y$에게 전부 주었습니다.
-PEACE_COST코0=비용\: $COST|Y$
-PEACE_TAKE_STATES_LABEL코0=$STATES$를 획득...
-PEACE_TAKE_STATE_LABEL코0=$STATE$를 획득
-PEACE_TAKE_ALL_STATES_LABEL코0=모든 주를 획득
-PEACE_LIBERATE_COUNTRY_LABEL코0=$COUNTRY$을(를) 해방
-PEACE_LIBERATE_TO_COUNTRY_LABEL코0=$COUNTRY$을(를) 해방
-PEACE_PUPPET_COUNTRY_LABEL코0=괴뢰국
-PEACE_SATELLITE_COUNTRY_LABEL코0=위성국 $COUNTRY$
-PEACE_PUPPETED코0=괴뢰국화
-PEACE_ANNEX_COUNTRY_LABEL코0=합병
-PEACE_ANNEXED코0=합병됨
-PEACE_FORCE_GOVERNMENT_LABEL코0=정부 변환
-PEACE_GIVE_PEACE_SCORE_LABEL코0=승점 주기
-PEACE_WARGOALS코0=전쟁 목표
-PEACE_PEACE_ACTIONS코0=평화 행동
-PEACE_END_TURN코0=£victory_points $COST|Y$ 차례 종료
-PEACE_DONE코0=결정
-PEACE_DONE_HAS_TAKEN_ACTION코0=§R당신은 이번 차례에 요구를 만들어야 합니다. 만약 회담을 나가고 싶다면 요구를 지우십시오.§\!
-PEACE_DONE_DESC코0=당신이 이 버튼을 누른다면 남은 점수가 세력 구성원들에게 분배될 것입니다. 그리고 평화 회담에서 빠져나올 것입니다. 당신이 이미 취했던 어느 행동들은 여전히 남아있을것입니다. 당신이 주어진 이익에 만족하고 나머지를 다른 승리자들에게 주고싶을때 이 버튼을 눌러주세요.
-PEACE_PASS코0=£victory_points $GAIN|Y$ 통과
-PEACE_PASS_DESC코0=만약 이번 차례를 넘기면 다른 국가들은 자신들의 점수를 사용하여 요구를 만들 것입니다. 하지만 당신은 £victory_points $GAIN|Y$ 의 추가 점수를 얻어서 다음 차례에 사용할 수 있게 됩니다.
-PEACE_PASS_EMPTY코0=§R이번 차례에는 남은 것이 없습니다§\!
-PEACE_CONFERENCE_RESET코0=취한 행동 재설정
-PEACE_CONFERENCE_PASS코0=회담에서 당신의 차례 종료
-PEACE_CONFERENCE_PASS_DESC코0=당신은 여전히 쓸수있는 §Y$VALUE$§\! 점수를 가지고 있습니다.\n당신은 어쩌면 그것을 쓸 다른 기회가 없을 수도 있습니다. 
-PEACE_CONFERENCE_PASS_ACTIONS_DESC코0=§R당신은 행동을 선택했지만 보내지 않으면 통과할 수 없습니다§\!
-PEACE_CONFERENCE_SEND코0=취한 행동 보내기
-PEACE_CONFERENCE_SEND_NO_ACTIONS코0=§R보낼 수 있는 취한 행동이 없습니다§\!
-PEACE_CONFERENCE_SEND_DESC코0=취한 행동 요구 전송에 들어가는 비용은 §Y$VALUE$§\! 입니다.
-PEACE_CONFERENCE_COST코0=비용/사용가능
-PEACE_CONFERENCE_COST_NO_ACTIONS코0=선택된 행동이 없습니다
-PEACE_CONFERENCE_COST_DESC코0=이 행동은 비용이 $COST$로 사용가능한 $AVAILABLE$를 초과합니다
-PEACE_CONFERENCE_COST_TOO_HIGH코0=§R당신은 해당조약을 요구하기에 불충분한 승점을 가지고 있습니다§\!
-PEACE_CONFERENCE_COST_TOO_HIGH_NEXT_PARTICIPANT코0=§R당신은 다음 참가국보다 점수가 현저하게 낮아서 이번 차례에 요구를 만들 수 없습니다§\!
-PEACE_CONFERENCE_WINNER코0=@$TAG$$COUNTRY|Y$는 $STATES|Y$개 주를 차지했습니다.
-PEACE_CONFERENCE_ANNEXED코0=@$TAG$$COUNTRY|Y$은(는) 합병당했습니다.
-PEACE_CONFERENCE_PUPPETED코0=@$TAG$$COUNTRY|Y$은(는) 괴뢰국이 되었습니다.
-PEACE_CONFERENCE_LIBERATED코0=@$TAG$$COUNTRY|Y$은(는) 해방되었습니다.
-PEACE_CONFERENCE_GAINED_EQUIPMENT코0=$VALUE|0Y$ 만큼의 장비가 몰수당했습니다.
-PEACE_CONFERENCE_FORCE_GOVERNMENT코0=$IDEOLOGY|Y$ 이념을 가진 $PARTY|Y$은(는) @$TAG$$COUNTRY|Y$에 영향력을 행사했습니다.
-PEACE_CONFERENCE_NAME코0=$CAPITAL$ 조약
-PEACE_CONFERENCE_PUPPET_LABEL코0=괴뢰국
-PEACE_CONFERENCE_LIBERATED_LABEL코0=해방됨
-PEACE_CONFERENCE_LIBERATED_DESC코0=$COUNTRY|Y$ 가 $LIBERATOR|Y$ 에 의해 해방되었습니다
-PEACE_CONFERENCE_COUNTRY_DEMANDS코0=$ADJECTIVE$의 요구
-PEACE_CONFERENCE_WHITE_PEACE코0=@$ACTOR_TAG$$ACTOR_COUNTRY|Y$와(과) $RECIPIENT_COUNTRY|Y$@$RECIPIENT_TAG$\n은(는) §Y무조건 평화§\!에 서명함.
-PEACE_CONFERENCE_REJECTED코0=$COUNTRY$에 의해 조약이 거절되었습니다
-PEACE_CURRENTLY_MAKING_DEMANDS코1=$COUNTRY$이(가) 요구를 만들 차례.
-PEACE_CURRENT_SCORE코0=£victory_points 점수\: $SCORE$
-PEACE_ACCEPT코0=승인
-PEACE_REJECT코0=거절
-PEACE_MAKE_DEMANDS_LABEL코0=요구 만들기
-PEACE_CURRENT_DEMANDS_LABEL코0=현재 요구
-PEACE_DEFEATED_LABEL코0=패전국
-PEACE_ACCEPT_TERMS_LABEL코0=조항에 동의합니까?
-PEACE_WAITING_FOR_ACCEPTENCE코0=$COUNTRY$의 답변을 기다리는 중
-PEACE_NEXT_MAKING_DEMANDS코0=다음 국가는 $COUNTRY$입니다. 점수\: $SCORE$
-PEACE_THREAT_GENERATED코0=세계 긴장도\: $VALUE|-$%
+PEACE_PEACE_CONFERENCE코0=Peace conference
+PEACE_WINNERS코0=Winners
+PEACE_LOOSERS코0=Losers
+PEACE_LIBERATED코0=Liberated
+PEACE_PUPPETS코0=Puppets
+PEACE_RESET_DEMAND코0=Reset
+PEACE_SEND_DEMAND코0=Send
+PEACE_TAKE_STATES코0=$TAKER|Y$ takes following state(s) from $GIVER|Y$:
+PEACE_TAKE_STATES_STATE코0=     $STATE|Y$
+PEACE_LIBERATE_COUNTRY코0=$TAKER|Y$ liberates $COUNTRY|Y$ from $GIVER|Y$.\n$COUNTRY|Y$ will be independent!
+PEACE_LIBERATE_TO_COUNTRY코0=$TAKER|Y$ liberates state(s) from $GIVER|Y$ to $COUNTRY|Y$.
+PEACE_CURRENT_COST코0=Cost: $COST|Y$ / $SALDO|Y$
+PEACE_WINNER_SCORE코0=Score: $CURRENT|Y$
+PEACE_WINNER_SCORE_FROM코0=  £victory_points $AMOUNT|Y$ from $FROM|$
+PEACE_ANNEX_COUNTRY코0=$TAKER|Y$ annexes $GIVER|Y$ and will gain all states.
+PEACE_PUPPET_COUNTRY코0=$TAKER|Y$ sets up a collaborationist government in $COUNTRY|Y$, turning it into a puppet state.
+PEACE_SATELLITE_COUNTRY코0=$TAKER|Y$ liberates $COUNTRY|Y$ and installs a friendly regime, turning it into a puppet state.
+PEACE_FORCE_GOVERNMENT코0=$TAKER|Y$ helps $GIVER|Y$ to see the true path of $IDEOLOGY|Y$.
+PEACE_GIVE_PEACE_SCORE코0=$GIVER|Y$ gives all remaining Score to $TAKER|Y$
+PEACE_COST코0=Cost: $COST|Y$
+PEACE_TAKE_STATES_LABEL코0=Take $STATES$...
+PEACE_TAKE_STATE_LABEL코0=Take $STATE$
+PEACE_TAKE_ALL_STATES_LABEL코0=Take All States
+PEACE_LIBERATE_COUNTRY_LABEL코0=Liberate $COUNTRY$
+PEACE_LIBERATE_TO_COUNTRY_LABEL코0=Liberate to $COUNTRY$
+PEACE_PUPPET_COUNTRY_LABEL코0=Puppet
+PEACE_SATELLITE_COUNTRY_LABEL코0=Satellite $COUNTRY$
+PEACE_PUPPETED코0=Puppeted
+PEACE_ANNEX_COUNTRY_LABEL코0=Annex
+PEACE_ANNEXED코0=Annexed
+PEACE_FORCE_GOVERNMENT_LABEL코0=Change government
+PEACE_GIVE_PEACE_SCORE_LABEL코0=Give Score
+PEACE_WARGOALS코0=War goals
+PEACE_PEACE_ACTIONS코0=Peace Actions
+PEACE_END_TURN코0=£victory_points $COST|Y$ End Turn
+PEACE_DONE코0=Done
+PEACE_DONE_HAS_TAKEN_ACTION코0=§RYou have made demands during this turn. Remove demands if you want to leave the conference.§!
+PEACE_DONE_DESC코0=Once you click this button your remaining points will be distributed amongst your faction members and you will be out of the peace negotiations. Any actions you have already taken will remain in action. Use this button when you are satisfied with your gains and want to leave the rest to the other winners.
+PEACE_PASS코0=£victory_points $GAIN|Y$ Pass
+PEACE_PASS_DESC코0=If you pass this round others will be able to use their points to make demands, but you will gain £victory_points $GAIN|Y$ extra points to spend next round
+PEACE_PASS_EMPTY코0=§RNothing left to take this turn§!
+PEACE_CONFERENCE_RESET코0=Reset taken actions
+PEACE_CONFERENCE_PASS코0=End your turn in the conference
+PEACE_CONFERENCE_PASS_DESC코0=You still have §Y$VALUE$§! score left that you can spend.\nYou may not get another chance to spend it
+PEACE_CONFERENCE_PASS_ACTIONS_DESC코0=§RYou cannot pass while you have chosen but unsent actions§!
+PEACE_CONFERENCE_SEND코0=Send taken actions
+PEACE_CONFERENCE_SEND_NO_ACTIONS코0=§RNo taken actions to send§!
+PEACE_CONFERENCE_SEND_DESC코0=Send to demand taken actions for a cost of §Y$VALUE$§!
+PEACE_CONFERENCE_COST코0=Cost/Available
+PEACE_CONFERENCE_COST_NO_ACTIONS코0=No selected actions
+PEACE_CONFERENCE_COST_DESC코0=The current actions cost $COST$ out of $AVAILABLE$
+PEACE_CONFERENCE_COST_TOO_HIGH코0=§RYou don't have enough Score for the selected demands§!
+PEACE_CONFERENCE_COST_TOO_HIGH_NEXT_PARTICIPANT코0=§RYou can't make these demands this turn as that would lower your Score too far below the Score of the next participant§!
+PEACE_CONFERENCE_WINNER코0=@$TAG$$COUNTRY|Y$ took $STATES|Y$ states.
+PEACE_CONFERENCE_ANNEXED코0=@$TAG$$COUNTRY|Y$ was annexed.
+PEACE_CONFERENCE_PUPPETED코0=@$TAG$$COUNTRY|Y$ was puppeted.
+PEACE_CONFERENCE_LIBERATED코0=@$TAG$$COUNTRY|Y$ was liberated.
+PEACE_CONFERENCE_GAINED_EQUIPMENT코0=$VALUE|0Y$ equipment has been seized.
+PEACE_CONFERENCE_FORCE_GOVERNMENT코0=The $IDEOLOGY|Y$ party $PARTY|Y$ has been put in power in @$TAG$$COUNTRY|Y$.
+PEACE_CONFERENCE_NAME코0=Treaty of $CAPITAL$
+PEACE_CONFERENCE_PUPPET_LABEL코1=Subject
+PEACE_CONFERENCE_LIBERATED_LABEL코0=Liberated
+PEACE_CONFERENCE_LIBERATED_DESC코0=$COUNTRY|Y$ Has been liberated by $LIBERATOR|Y$
+PEACE_CONFERENCE_COUNTRY_DEMANDS코0=$ADJECTIVE$ demands
+PEACE_CONFERENCE_WHITE_PEACE코0=@$ACTOR_TAG$$ACTOR_COUNTRY|Y$ and $RECIPIENT_COUNTRY|Y$@$RECIPIENT_TAG$\nhave signed a §Ywhite peace§!.
+PEACE_CONFERENCE_REJECTED코0=The treaty was rejected by $COUNTRY$
+PEACE_CURRENTLY_MAKING_DEMANDS코1=$COUNTRY$'s turn to make demands.
+PEACE_CURRENT_SCORE코0=£victory_points Score: $SCORE$
+PEACE_ACCEPT코0=Accept
+PEACE_REJECT코0=Reject
+PEACE_MAKE_DEMANDS_LABEL코0=Make demands
+PEACE_CURRENT_DEMANDS_LABEL코0=Current demands
+PEACE_DEFEATED_LABEL코0=Defeated
+PEACE_ACCEPT_TERMS_LABEL코0=Accept terms?
+PEACE_WAITING_FOR_ACCEPTENCE코0=Waiting on response from $COUNTRY$
+PEACE_NEXT_MAKING_DEMANDS코0=Next country is $COUNTRY$. Score: $SCORE$
+PEACE_THREAT_GENERATED코0=World tension: $VALUE|-$%
 PEACE_THREAT_GENERATED_TOTAL코1=$SUMMED|Y%$ ($VALUE|-%$)
-PEACE_CONFERENCE_RIGHTCLICK_GOTO_CAPITAL코0=§G오른쪽 클릭§\!하여 수도로 가기.
-PEACE_CONFERENCE_RIGHTCLICK_GOTO_STATE코0=§G오른쪽 클릭§\!하여 해당 주로 가기.
-PEACE_TREATY_THREAT코0=평화 협정 - $TREATY$
-CONFERENCE_LOSER_IS_UNTOUCHED코0=어떤 승전국도 $NAME|Y$에게 손대지 않았고, 아무런 요구도 하지 않았습니다
-CAPITULATE_TITLE코0=$LOSER$ 항복
-CAPITULATE_HOME_AREA_DESC코0=$LOSER|Y$이(가) 항복했습니다.\n$LOSER_ADJ$ 정부는 추방 당했으며 주력군은 현재 그들의 국토를 점령중인 $WINNER|Y$에게 항복했습니다.
-CAPITULATE_NEW_FACTION_LEADER_DESC코0=$FACTION_NAME|Y$의 새로운 지도국은 $COUNTRY|Y$입니다.
-DIPLOMACY_EFFECT_HEADER코0=선언
-PEACE_CONFERENCE_TURN코0=$TURN|Y$ 차례
-PEACE_CONFERENCE_TURN_DESC코0=$TURN|Y$ 차례 동안 취할 수 있는 평화 행동
-PEACE_CONFERENCE_TURN_CURRENT코0=$TURN|Y$ 차례- 진행중
-PEACE_CONFERENCE_TURN_CURRENT_DESC코0=이번 차례의 평화 행동
-PEACE_PARTICIPANT_DELIMITER_ITEM코0=클릭하여 토글 열고/닫음
-PEACE_PARTICIPANT_TAKE_ALL_STATES코0=클릭하여 모든 주 획득하기, 오른쪽 클릭하여 모든 주의 목록 토글하기
-PEACE_PARTICIPANT_TAKE_ALL_STATES_EXPAND코0=클릭하여 모든 주의 목록 토글하기
-PEACECONFERENCE_COMPLETE코0=평화 회담 종료\n효력 계산 중...
+PEACE_CONFERENCE_RIGHTCLICK_GOTO_CAPITAL코0=§GRight click§! to go to capital.
+PEACE_CONFERENCE_RIGHTCLICK_GOTO_STATE코0=§GRight click§! to go to state.
+PEACE_TREATY_THREAT코0=Peace - $TREATY$
+CONFERENCE_LOSER_IS_UNTOUCHED코0=$NAME|Y$ is untouched by any of the winners, no demands can be made against them
+CAPITULATE_TITLE코0=$LOSER$ capitulates
+CAPITULATE_HOME_AREA_DESC코0=$LOSER|Y$ has fallen.\nThe $LOSER_ADJ$ government has gone into exile and the main forces have capitulated to $WINNER|Y$, who now control their home area.
+CAPITULATE_NEW_FACTION_LEADER_DESC코0=New faction leader for $FACTION_NAME|Y$ is $COUNTRY|Y$.
+DIPLOMACY_EFFECT_HEADER코0=On Declare
+PEACE_CONFERENCE_TURN코0=Turn $TURN|Y$
+PEACE_CONFERENCE_TURN_DESC코0=Peace Actions that where taken during Turn $TURN|Y$
+PEACE_CONFERENCE_TURN_CURRENT코0=Turn $TURN|Y$ - In progress
+PEACE_CONFERENCE_TURN_CURRENT_DESC코0=Peace Actions for this turn
+PEACE_PARTICIPANT_DELIMITER_ITEM코0=Click to toggle open/close
+PEACE_PARTICIPANT_TAKE_ALL_STATES코0=Click to Take all States, Right-click to toggle a list of all states
+PEACE_PARTICIPANT_TAKE_ALL_STATES_EXPAND코0=Click to toggle a list of all states
+PEACECONFERENCE_COMPLETE코0=Peace Conference is over\nCalculating Effects...
