--- a/scripted_triggers_l_english.properties
+++ b/scripted_triggers_l_english.properties
@@ -1,1 +1,1 @@
-is_controlled_by_ROOT_or_ally코0=§H{Root.GetNameDef}§\! 또는 그들의 동맹 중 하나가 지배합니다.
+is_controlled_by_ROOT_or_ally코0=Controlled by §H{Root.GetNameDef}§! or one of their allies.
