--- a/tactics_l_english.properties
+++ b/tactics_l_english.properties
@@ -1,47 +1,47 @@
-TACTIC_ATTACKER코0=(공격측)
-TACTIC_DEFENDER코0=(방어측)
-TACTIC_DESC코0=각 진영의 지휘관은 전투 전개에 영향을 미치게 될 전술을 고를 것입니다. 지휘관이 높은 기술을 가지거나 더 앞선 정찰력을 가지고 있다면 더 높은 확율로 상대방에게 부정적인 역전술을 고를 것입니다.
-tactic_basic_attack코0=공격
-tactic_basic_defend코0=방어
-tactic_counterattack코0=반격
-tactic_assault코0=돌격
-tactic_cc_attack코0=백병전 공격
-tactic_cc_defend코0=백병전 방어
-tactic_cc_storm코0=백병전 기습
-tactic_cc_local_strong_point코0=지역거점 백병전
-tactic_cc_withdraw코0=백병전 후퇴
-tactic_encirclement코0=포위
-tactic_delay코0=지연
-tactic_shock코0=충격
-tactic_tactical_withdrawal코0=전술적 후퇴
-tactic_tw_attack코0=전술적 후퇴 공격
-tactic_tw_defend코0=후퇴
-tactic_tw_chase코0=추격
-tactic_tw_evade코0=회피
-tactic_tw_intercept코0=차단
-tactic_breakthrough코0=돌파
-tactic_ambush코0=매복
-tactic_blitz코0=전격
-tactic_elastic_defense코0=탄력적인 방어
-tactic_backhand_blow코0=유인 후 역습
-tactic_seize_bridge코0=교량 점거
-tactic_attacker_sb_hold코0=교량 사수
-tactic_attacker_sb_skillful_defence코0=교량 방어
-tactic_defender_sb_assault코0=교량 공격
-tactic_defender_sb_reckless_assault코0=무모한 돌격
-tactic_defender_sb_retake_bridge코0=교량 탈환
-tactic_hold_bridge코0=교량 사수
-tactic_attacker_hb_attack코0=공격
-tactic_attacker_hb_rush코0=교량 돌진
-tactic_attacker_hb_storm코0=교량 기습
-tactic_defender_hb_hold코0=교량 사수
-tactic_defender_hb_skillful_defence코0=교량 방어
-tactic_guerrilla_tactics코0=게릴라 전술
-tactic_human_wave_tactics코0=대규모 돌격
-tactic_banzai_charge코0=반자이 돌격
-tactic_infantry_charge코0=침투 공격
-tactic_planned_attack코0=잘 계획된 공격
-tactic_relentless_assault코0=가차없는 공격
-tactic_unexpected_thrust코0=예상치 못한 진군
-tactic_overwhelming_fire코0=압도적 화력
-tactic_barrage코0=제압 사격
+TACTIC_ATTACKER코0= (Attacker)
+TACTIC_DEFENDER코0= (Defender)
+TACTIC_DESC코0=Each side's leader will pick a tactic for the battle that will affect how it unfolds. A leader with higher skill or more advanced reconnaissance has a higher chance of picking a counter tactic that negates their opponent's.
+tactic_basic_attack코0=Attack
+tactic_basic_defend코0=Defend
+tactic_counterattack코0=Counter-Attack
+tactic_assault코0=Assault
+tactic_cc_attack코0=Close Quarters Attack
+tactic_cc_defend코0=Close Quarters Defense
+tactic_cc_storm코0=Close Quarters Storm
+tactic_cc_local_strong_point코0=Close Quarters Local Strongpoint
+tactic_cc_withdraw코0=Close Quarters Withdraw
+tactic_encirclement코0=Encirclement
+tactic_delay코0=Delay
+tactic_shock코0=Shock
+tactic_tactical_withdrawal코0=Tactical Withdrawal
+tactic_tw_attack코0=Tactical Withdrawal Attack
+tactic_tw_defend코0=Withdrawal
+tactic_tw_chase코0=Pursuit
+tactic_tw_evade코0=Evade
+tactic_tw_intercept코0=Intercept
+tactic_breakthrough코0=Breakthrough
+tactic_ambush코0=Ambush
+tactic_blitz코0=Blitz
+tactic_elastic_defense코0=Elastic Defense
+tactic_backhand_blow코0=Backhand Blow
+tactic_seize_bridge코0=Seize Bridge
+tactic_attacker_sb_hold코0=Hold Bridge
+tactic_attacker_sb_skillful_defence코0=Defend Bridge
+tactic_defender_sb_assault코0=Assault Bridge
+tactic_defender_sb_reckless_assault코0=Reckless Assault
+tactic_defender_sb_retake_bridge코0=Recapture Bridge
+tactic_hold_bridge코0=Hold Bridge
+tactic_attacker_hb_attack코0=Attack
+tactic_attacker_hb_rush코0=Rush Bridge
+tactic_attacker_hb_storm코0=Storm Bridge
+tactic_defender_hb_hold코0=Hold Bridge
+tactic_defender_hb_skillful_defence코0=Defend Bridge
+tactic_guerrilla_tactics코0=Guerrilla Tactics
+tactic_human_wave_tactics코0=Mass Charge
+tactic_banzai_charge코0=Banzai Charge
+tactic_infantry_charge코0=Infiltration Assault
+tactic_planned_attack코0=Well-Planned Attack
+tactic_relentless_assault코0=Relentless Assault
+tactic_unexpected_thrust코0=Unexpected Thrust
+tactic_overwhelming_fire코0=Overwhelming Fire
+tactic_barrage코0=Suppressive Barrage
