--- a/loading_tips_l_english.properties
+++ b/loading_tips_l_english.properties
@@ -1,87 +1,87 @@
-LOADING_TIP_0코0=다른 나라가 역사를 쓰고 있을 때 수수방관하는 것은 부끄러운 일이다. 승자가 된다면 문제가 아니다.\n- 베니토 무솔리니
-LOADING_TIP_1코0=인민을 계몽하려면 그들을 자극해 전투로 내몰아야 한다. 바로 내가 해야 할 일이다. \n- 베니토 무솔리니
-LOADING_TIP_2코0=아무리 작은 싸움도 큰 그림을 이루는 일부임을, 전투로 나서려는 모든 군인은 알아야만 한다. \n- 버나드 L. 몽고메리
-LOADING_TIP_3코0=공중전에서 패배한다면 전쟁에서 패배하는 것이고, 이는 아주 빠른 패전이 될 것이다. \n- 버나드 L. 몽고메리
-LOADING_TIP_4코0=타인을 믿는 것은 좋지만, 안 믿는 것은 더 좋다.\n- 베니토 무솔리니
-LOADING_TIP_5코0=철학적 그리고 교리적 관점에서 나는 영원한 평화 따위는 믿지 않는다. \n- 베니토 무솔리니
-LOADING_TIP_6코0=기린은 무정한 생물이다.
-LOADING_TIP_7코0=강력한 국력을 지닌 주권국이 있는 한, 전쟁은 불가피하다.\n-알버트 아인슈타인
-LOADING_TIP_8코0=표를 던지는 사람은 아무 것도 결정할 수 없다. 표를 세는 사람이 모든 것을 결정한다.\n-이오시프 스탈린
-LOADING_TIP_9코0=인류 역사상 무적의 군대란 존재하지 않았으며, 앞으로도 결코 존재하지 않을 것이다.\n-이오시프 스탈린
-LOADING_TIP_10코0=교황이라\! 그 자는 몇 개 사단을 가지고 있지?\n-이오시프 스탈린
-LOADING_TIP_11코0=쾌활함이야말로 소비에트 연방의 가장 큰 특징이다. \n- 이오시프 스탈린
-LOADING_TIP_12코0=진정한 권력은 오직 총에서 나온다.\n-이오시프 스탈린
-LOADING_TIP_13코0=전쟁이 목적이 아니라면 어떤 동맹도 무의미하며 무가치하다.\n-아돌프 히틀러
-LOADING_TIP_14코0=위대한 거짓말쟁이들은 위대한 마법사들이다.\n-아돌프 히틀러
-LOADING_TIP_15코0=만약 내가 오늘 혁명가로서 여기 서게 된다면, 그것은 혁명에 맞선 혁명가로서다.\n- 아돌프 히틀러
-LOADING_TIP_16코0=큰 거짓말이 잦아지면 곧 사실이 될 것이다.\n-아돌프 히틀러
-LOADING_TIP_17코0=독일은 세계 최강국이 되거나 사라지거나 둘 중 하나가 될 것이다.\n-아돌프 히틀러
-LOADING_TIP_18코0=성공은 열정을 잃지 않고 실패에서 실패로 전진하면서 이뤄진다.\n-윈스턴 처칠
-LOADING_TIP_19코0=만약 지옥길을 걷고 있다면, 계속 전진하라.\n-윈스턴 처칠
-LOADING_TIP_20코0=민주주의에 대한 최고의 반론은 평범한 유권자와의 5분 대화이다.\n-윈스턴 처칠
-LOADING_TIP_21코0=미래전에서는 기갑부대가 결정적인 역할을 할 것이다.\n-하인츠 구데리안
-LOADING_TIP_22코0=신형 판터와 티거를 노획했다면 수리를 시도하지 말고 폐기하라. 이 전차의 엔진, 변속기, 현가장치는 전부 열악하다. \n- 붉은 군대의 병기국
-LOADING_TIP_23코0=조국을 위해 죽는 놈은 전쟁에서 이길 수 없다. 이기려면 불쌍하고 멍청한 놈들이 조국을 위해 죽게 만들어야 한다.\n-조지 S. 패튼
-LOADING_TIP_24코0=지금 적극적으로 추진되는 좋은 계획이 다음 주의 완벽한 계획보다 낫다.\n-조지 S. 패튼
-LOADING_TIP_25코0=나를 이끌든지, 따르든지, 그도 저도 아니면 내 길에서 비켜라.\n- 조지 S. 패튼
-LOADING_TIP_26코0=모든 것을 영원히 지켜내는 것에 성공한 사람은 아무도 없다. 공격, 공격하는 것만이 성공하는 길이다.\n- 조지 S. 패튼
-LOADING_TIP_27코0=전쟁은 무기로써 싸우지만 승리는 인간이 쟁취한다. 승리는 따르고 이끌 수 있는 자들의 정신에 달려있다.\n- 조지 S. 패튼
-LOADING_TIP_28코0=내가 처음 제트기를 봤을 때, 쏴서 격추시켰지.\n- 척 예거 , 미 공군
-LOADING_TIP_29코0=테오, 여기는 하인리히. 폭격기 둘을 격추시켰다. 이제 탄약은 없다. 이대로 들이받겠다. 안녕히, 발할라에서 만나자\!\n- 하인리히 엘러, 루프트바페
-LOADING_TIP_30코0=지도력이란 선택된 인격자와 최선을 다해 그를 돕는 이들이 만든다.\n- 체스터 W. 니미츠
-LOADING_TIP_31코0=제안된 작전이 성공할 수 있는 것인가? 물자 보급의 측면에서 실현 가능한 것인가? \n- 체스터 W. 니미츠
-LOADING_TIP_32코0=싸움을 대비하면서 언제나 계획이 쓸모없어지는 것을 봤지만, 계획은 필수적이다. \n- 드와이트 D. 아이젠하워
-LOADING_TIP_33코0=개들의 싸움에서 중요한 것은 개의 몸집이 아니라, 투쟁심의 크기이다.\n-드와이트 D. 아이젠 하워
-LOADING_TIP_34코0=생존이 위협당할 때 민족 간에 다툼이 일어나고, 국가 간에 불행한 전쟁이 시작되는 것은 말할 필요도 없다.\n- 도조 히데키
-LOADING_TIP_35코0=일대일 전투에서는 탄창에 하나라도 많은 탄약이 든 쪽이 승자가 된다.\n- 에르빈 롬멜
-LOADING_TIP_36코0=나는 모루보다는 망치에 가깝다.\n- 에르빈 롬멜
-LOADING_TIP_37코0=땀을 흘려 피를 구하고, 피를 흘려 생명을 구하지만, 뛰어난 두뇌는 둘 다 구한다. \n- 에르빈 롬멜
-LOADING_TIP_38코0=불쌍한 네빌 체임벌린은 히틀러를 신뢰할 수 있다고 믿었습니다. 그는 틀렸습니다. 하지만 제가 스탈린을 잘못 알았다고 생각지는 않습니다.\n- 윈스턴 처칠 (얄타 회담 후)
-LOADING_TIP_39코0=이것이 우리 시대의 평화임을 믿고 있다.\n- 네빌 체임벌린, 1938년 뮌헨 협정 체결 후.
-LOADING_TIP_40코0=적 폭격기는 루르에 도달할 수 없다. 한 기라도 그럴 수 있다면 난 괴링이 아니다. 마이어라고 불러라.\n- 헤르만 괴링
-LOADING_TIP_41코0=문을 한번 걷어차는것만으로도 썩은 건물 전체를 무너뜨릴 수 있을 것이다. \n- 아돌프 히틀러 (소비에트 연방에 대해)
-LOADING_TIP_42코0=미국, 영국과 전쟁을 시작한 첫 6~12개월 간은 승리할 수 있을 것이다. 그 후에는, 성공을 장담할 수 없다.\n- 야마모토 이소로쿠
-LOADING_TIP_43코0=설령 지뢰밭을 마주쳐도, 우리의 보병들은 개의치 않고 공격할 것이다. \n- 게오르기 주코프
-LOADING_TIP_44코0=러시아의 거대함은 우리가 헤아릴 수가 없다... 사단 12개를 쳐부술 때마다 또 다른 사단 12개가 나타난다.\n- 프란츠 할더
-LOADING_TIP_45코0=독일 지휘관에게\: 미친놈\!\n미군 지휘관이.\n- 앤서니 C. 맥컬리프 (독일의 항복 권고에 대한 답장에서)
-LOADING_TIP_46코0=오늘 우리에게 일어난 일이 내일 여러분에게 일어날 수도 있다. \n- 하일레 셀라시에 1 세, 1936년
-LOADING_TIP_47코0=한 발짝도 물러나지 마라\!\n- 소비에트 명령 227호
-LOADING_TIP_48코0=도라\! 도라\! 도라\!\n- 후치다 미쓰오, 1941년 12월 7일
-LOADING_TIP_49코0=너의 이름은 무명이다. 너의 행동은 불멸이다.\n- 무명 용사의 묘 (모스크바)
-LOADING_TIP_50코0=어디에 있는가. 반복한다. 제 34 임무 부대는 어디에 있는가? 전 세계가 궁금해 한다.\n- 체스터 니미츠, 레이테만 전투
-LOADING_TIP_51코0=모두가 최선을 다했지만, 전황이 호전되진 않았다.\n- 천황 히로히토, 1945년
-LOADING_TIP_52코0=우리는 첫 번째 전쟁 이후 깨달았어야 했다. \n- 게르트 폰 룬트슈테트
-LOADING_TIP_53코0=러시아의 광대함이 우리를 집어삼킨다. \n- 게르트 폰 룬트슈테트
-LOADING_TIP_54코0=묻겠다, 제군은 총력전을 원하는가? 만약 필요하다면, 우리가 지금 상상하는 것 이상의 전면적이고 철저한 전쟁을 원하는가?\n - 요제프 괴벨스
-LOADING_TIP_55코0=독일군과 소련군의 일격은 베르사유의 추악한 산물에 종지부를 찍었다. \n- 뱌체슬라프 몰로토프 (폴란드 멸망 후)
-LOADING_TIP_56코0=적 항모를 날려버렸다\! 항모 여기는 딕슨, 적 항모를 날려버렸다\! \n- 로버트 E. 딕슨, 산호해 해전에서
-LOADING_TIP_57코0=무섭지 않나? 이런 곳에서, 독일의 참모 2명이 우리의 최고사령관 각하를 어떻게 죽일지 논의하고 있다니 말일세. \n- 헤닝 폰 토레스코우
-LOADING_TIP_58코0=히틀러는 춤추는 이슬람 탁발승이다. 그를 제거해야 한다. \n- 헤닝 폰 토레스코우
-LOADING_TIP_59코0=다른 사람 모두를 폭격하지만 자신들은 폭격당하지 않을 것이라는, 약간 유치한 망상으로 나치는 전쟁을 시작했다.  \n-아서 "폭격기"해리스
-LOADING_TIP_60코0=만약 히틀러가 지옥을 침공한다면, 하원 의회에서 악마를 옹호할 수도 있다.\n- 윈스턴 처칠, 1941년 6월 21일
-LOADING_TIP_61코0=그 개자식이 죽었다고? 살아서 잡히지 않은 게 안타깝구만\! \n- 이오시프 스탈린 (히틀러의 자살 소식을 듣고)
-LOADING_TIP_62코0=우리는 패전했다. 우리는 패배했고, 전투에서 졌다.\n-  폴 레노, 1940년 5월 15일
-LOADING_TIP_63코0=내게는 오직 나를 승리자로서 평화 회담에 출석시킬 수 있는 수천 명의 희생이 필요하다.\n-베니토 무솔리니
-LOADING_TIP_64코0=프랑스인은 곧 공격할 것이라고 폴란드인을 속였다. 그럴 생각은 전혀 없음에도.\n- 에드먼드 아이언사이드
-LOADING_TIP_65코0=왜 단치히를 위해 죽어야 하는가?\n- 프랑스의 반전 구호, 1939년
-LOADING_TIP_66코0=이 전쟁은 거짓같다.\n- 미 상원 의원 윌리엄 보라, 1939년
-LOADING_TIP_67코0=스위스는 가장 추악하고 가여운 국민들과 정치 체제에 사로잡혀 있다. 스위스는 새로운 독일이 만난 불구대천의 원수이다.\n- 아돌프 히틀러
-LOADING_TIP_68코0=승리의 과실이 우리의 입안으로 너무나 빨리 들어오고 있소.\n-천황 히로히토
-LOADING_TIP_69코0=당신은 독일의 구두나 닦고 말 셈인가\!\n- 이탈로 발보
-LOADING_TIP_70코0=침몰시켜라, 불태워라, 붙잡아라, 파괴하라. 아무도 통과하게 하지 마라.\n- 앤드류 커닝햄, 튀니지 전투
-LOADING_TIP_71코0=내 생각에는 너무 멀리 있는 다리까지 가려고 한 것 같소.\n - 프레드릭 브라우닝 (마켓 가든 작전의 개시 전)
-LOADING_TIP_72코0=하느님, 프랑스군을 구해주셔서 감사합니다.\n-  윈스턴 처칠, 1933년
-LOADING_TIP_73코0=공격을 하려는 방울뱀을 보았다면, 정말 뱀이 덮쳐올 때까지 기다리지 않을 것이다.\n- 프랭클린 D. 루스벨트
-LOADING_TIP_74코0=규칙이 반드시 신성한 것은 아니다.\n- 프랭클린 D. 루즈벨트
-LOADING_TIP_75코0=굶주리고 직업이 없는 국민은 독재가 시행될 구실이 된다.\n- 프랭클린 D. 루즈벨트
-LOADING_TIP_76코0=살고 싶으면 경계를 게을리 마라. 안 그러면, 독일군 개자식들이 소리없이 배후로 다가와 죽도록 두들겨 팰 테니까. \n- 조지 S. 패튼
-LOADING_TIP_77코0=군인들에게 조국을 지키고 있다는 의식이 없다면, 요새, 대포, 대외원조 같은 것은 아무런 의미가 없다.\n- 카를 구스타프 에밀 만네르하임
-LOADING_TIP_78코0=진흙과 피를 헤쳐 저 너머 푸른 들로 가자.\n- 왕립 캐나다 기갑 군단의 표어
-LOADING_TIP_79코0=영국 함대에는 이탈리아 인들이 전쟁 끝까지 버틸지 아니면 완전 쓰러질지 알고 싶어하는 호기심 많은 장군들이 있다.\n- 윈스턴 처칠 (이탈리아의 참전 선언 때)
-LOADING_TIP_80코0=그리고 우리는 가진게 열혈 단신만 있기에 깨진 맥주병 날을 가지고 들이받아 그들과 싸울 것입니다.\!\n - 윈스턴 처칠(시가지와 야지에서 싸울 것을 약속 한 직후)
-LOADING_TIP_81코0=경험에 의하면 전차를 상대로 공격시 충분히 결연한 사람에게 근접전 무기가 있다면 항상 승리할 것입니다\n - 독일 기갑군 대전차 대응 안내서 중
-LOADING_TIP_82코0="나에게 더글러스 DC-3 50대를 주면 일본이 버마 로드를 가질 수 있소."\n - 장제스
-LOADING_TIP_83코0="정치란 유혈 없는 전쟁이고, 전쟁이란 유혈 있는 정치이다."\n- 마오쩌둥
-LOADING_TIP_84코0="사람을 지키고, 땅을 잃으면 땅을 다시 되찾을 수 있지만. 땅을 지키고, 사람을 잃으면 땅과 사람 모두 잃는 것이다."\n - 마오쩌둥
-LOADING_TIP_85코0="나는 작은 루마니아의 낙원에서 살기보다 대루마니아의 늪지에서 죽기를 바란다."\n- 이온 안토네스쿠
-LOADING_TIP_86코0="국민들은 다른 무엇도 아닌, 무엇이 그들을 대표하는지만을 신경쓴다."\n- 이온 안토네스쿠
+LOADING_TIP_0코0=It is humiliating to remain with our hands folded while others write history. It matters little who wins.\n- Benito Mussolini
+LOADING_TIP_1코0=To make a people great it is necessary to send them to battle even if you have to kick them in the pants. That is what I shall do.\n- Benito Mussolini
+LOADING_TIP_2코0=Every soldier must know, before he goes into battle, how the little battle he is to fight fits into the larger picture.\n- Bernard L. Montgomery
+LOADING_TIP_3코0=If we lose the war in the air we lose the war and we lose it quickly.\n- Bernard L. Montgomery
+LOADING_TIP_4코0=It's good to trust others, but, not to do so is much better.\n- Benito Mussolini
+LOADING_TIP_5코0=From a philosophical and doctrinal viewpoint, I do not believe in perpetual peace.\n- Benito Mussolini
+LOADING_TIP_6코0=Giraffes are heartless creatures
+LOADING_TIP_7코0=As long as there are sovereign nations possessing great power, war is inevitable.\n- Albert Einstein
+LOADING_TIP_8코0=Those who vote decide nothing. Those who count the vote decide everything.\n- Joseph Stalin
+LOADING_TIP_9코0=History shows that there are no invincible armies and that there never have been.\n- Joseph Stalin
+LOADING_TIP_10코0=The Pope! How many divisions has he got?\n- Joseph Stalin
+LOADING_TIP_11코0=Gaiety is the most outstanding feature of the Soviet Union.\n- Joseph Stalin
+LOADING_TIP_12코0=The only real power comes out of a long rifle.\n- Joseph Stalin
+LOADING_TIP_13코0=Any alliance whose purpose is not the intention to wage war is senseless and useless.\n- Adolf Hitler
+LOADING_TIP_14코0=Great liars are also great magicians.\n- Adolf Hitler
+LOADING_TIP_15코0=If today I stand here as a revolutionary, it is as a revolutionary against the Revolution.\n- Adolf Hitler
+LOADING_TIP_16코0=If you tell a big enough lie and tell it frequently enough, it will be believed.\n- Adolf Hitler
+LOADING_TIP_17코0=Germany will either be a world power or will not be at all.\n- Adolf Hitler
+LOADING_TIP_18코0=Success consists of going from failure to failure without loss of enthusiasm.\n- Winston Churchill
+LOADING_TIP_19코0=If you're going through hell, keep going.\n- Winston Churchill
+LOADING_TIP_20코0=The best argument against democracy is a five-minute conversation with the average voter.\n- Winston Churchill
+LOADING_TIP_21코0=Whenever in future wars the battle is fought, panzer troops will play the decisive role.\n- Heinz Guderian
+LOADING_TIP_22코0=The new German Panther and Tiger can be used until they break down without trying to repair them. They have bad engines, transmission and suspension.\n- Department of Weaponry of the Red Army
+LOADING_TIP_23코0=No bastard ever won a war by dying for his country. He won it by making the other poor dumb bastard die for his country.\n- George S. Patton
+LOADING_TIP_24코0=A good plan violently executed now is better than a perfect plan executed next week.\n- George S. Patton
+LOADING_TIP_25코0=Lead me, follow me, or get out of my way.\n- George S. Patton
+LOADING_TIP_26코0=Nobody ever defended anything successfully, there is only attack and attack and attack some more.\n- George S. Patton
+LOADING_TIP_27코0=Wars may be fought with weapons, but they are won by men. It is the spirit of men who follow and of the man who leads that gains the victory.\n- George S. Patton
+LOADING_TIP_28코0=The first time I ever saw a jet, I shot it down.\n- Chuck Yeager, USAAF
+LOADING_TIP_29코0=Theo, Heinrich here. Have just shot down two bombers. No more ammunition. I'm going to ram. Auf Wiedersehen, see you in Valhalla!\n- Heinrich Ehrler, Luftwaffe
+LOADING_TIP_30코0=Leadership consists of picking good men and helping them do their best.\n- Chester W. Nimitz
+LOADING_TIP_31코0=Is the proposed operation likely to succeed? Is it in the realm of practicability in terms of material and supplies?\n- Chester W. Nimitz
+LOADING_TIP_32코0=In preparing for battle I have always found that plans are useless, but planning is indispensable.\n- Dwight D. Eisenhower
+LOADING_TIP_33코0=What counts is not necessarily the size of the dog in the fight - it's the size of the fight in the dog.\n- Dwight D. Eisenhower
+LOADING_TIP_34코0=It goes without saying that when survival is threatened, struggles erupt between peoples, and unfortunate wars between nations result.\n- Hideki Tojo
+LOADING_TIP_35코0=In a man-to-man fight, the winner is he who has one more round in his magazine.\n- Erwin Rommel
+LOADING_TIP_36코0=I would rather be the hammer than the anvil.\n- Erwin Rommel
+LOADING_TIP_37코0=Sweat saves blood, blood saves lives, but brains saves both.\n- Erwin Rommel
+LOADING_TIP_38코0=Poor Neville Chamberlain believed he could trust Hitler. He was wrong. But I don't think I'm wrong about Stalin.\n- Winston Churchill (after Yalta)
+LOADING_TIP_39코0=I believe it is peace for our time.\n- Neville Chamberlain, 1938 after Munich agreement.
+LOADING_TIP_40코0=No enemy bomber can reach the Ruhr. If one reaches the Ruhr, my name is not Göring. You may call me Meyer.\n- Hermann Meyer
+LOADING_TIP_41코0=We have only to kick in the door and the whole rotten structure will come crashing down.\n- Adolf Hitler (on the Soviet Union)
+LOADING_TIP_42코0=I can run wild for the first six to twelve months of a war with the United States and the United Kingdom. After that, I have no expectation of success.\n- Isoroku Yamamoto
+LOADING_TIP_43코0=If we come to a minefield, our infantry attacks exactly as if it were not there.\n- Georgy Zhukov
+LOADING_TIP_44코0=The Russian colossus has been underestimated by us... whenever a dozen divisions are destroyed, the Russians replace them with another dozen.\n- Franz Halder
+LOADING_TIP_45코0=To the German Commander: NUTS!\nThe American Commander.\n- Anthony C. McAuliffe (responding to German demand for surrender)
+LOADING_TIP_46코0=It is us today. It will be you tomorrow.\n- Haile Selassie I, 1936
+LOADING_TIP_47코0=Not one step back!\n- Soviet Order No. 227
+LOADING_TIP_48코0=Tora! Tora! Tora!\n- Mitsuo Fuchida, 7 December, 1941
+LOADING_TIP_49코0=Your name is unknown. Your deed is immortal.\n- Tomb of the Unknown Soldier (Moscow)
+LOADING_TIP_50코0=Where is, repeat, where is Task Force Thirty-Four? The world wonders.\n- CINCPAC, Battle of Leyte Gulf
+LOADING_TIP_51코0=The war situation has developed not necessarily to Japan's advantage.\n- Emperor Hirohito, 1945
+LOADING_TIP_52코0=We should have known better after the first war.\n- Gerd von Rundstedt
+LOADING_TIP_53코0=The vastness of Russia devours us.\n- Gerd von Rundstedt
+LOADING_TIP_54코0=I ask you, do you want total war? If necessary, do you want a war more total and radical than anything that we can even yet imagine?\n- Joseph Goebbels
+LOADING_TIP_55코0=One blow from the German army and another from the Soviet army put an end to this ugly product of Versailles.\n- Vyacheslav Molotov (after the fall of Poland)
+LOADING_TIP_56코0=Scratch one flattop! Dixon to carrier: scratch one flattop!\n- Robert E. Dixon, Battle of the Coral Sea
+LOADING_TIP_57코0=Isn't it dreadful? Here we are, two officers of the German General Staff, discussing how best to murder our commander in chief.\n- Henning von Tresckow
+LOADING_TIP_58코0=Hitler is a dancing dervish. He must be shot down.\n- Henning von Tresckow
+LOADING_TIP_59코0=The Nazis entered this war under the rather childish delusion that they were going to bomb everyone else, and nobody was going to bomb them.\n- Arthur 'Bomber' Harris
+LOADING_TIP_60코0=If Hitler invaded Hell, I would make at least a favorable reference to the devil in the House of Commons.\n- Winston Churchill, 21 June, 1941
+LOADING_TIP_61코0=So the bastard's dead? Too bad we didn't capture him alive!\n- Joseph Stalin (on hearing of Hitler's suicide)
+LOADING_TIP_62코0=We have been defeated. We are beaten, we have lost the battle.\n- Paul Reynaud, 15 May, 1940
+LOADING_TIP_63코0=I only need a few thousand dead so that I can sit at the peace conference as a man who has fought.\n- Benito Mussolini
+LOADING_TIP_64코0=The French had lied to the Poles in saying they are going to attack. There is no idea of it.\n- Edmund Ironside
+LOADING_TIP_65코0=Why Die for Danzig?\n- French Anti-War Slogan, 1939
+LOADING_TIP_66코0=There is something phoney about this war.\n- US Senator William Borah, 1939
+LOADING_TIP_67코0=Switzerland possesses the most disgusting and miserable people and political system. The Swiss are the mortal enemies of the new Germany.\n- Adolf Hitler
+LOADING_TIP_68코0=The fruits of victory are tumbling into our mouths too quickly.\n- Emperor Hirohito
+LOADING_TIP_69코0=You will all wind up shining the shoes of the Germans!\n- Italo Balbo
+LOADING_TIP_70코0=Sink, burn, capture, destroy. Let nothing pass.\n- Andrew Cunningham, Battle of Tunisia
+LOADING_TIP_71코0=I think we may be going a bridge too far.\n- Frederick Browning (prior to Operation Market Garden)
+LOADING_TIP_72코0=Thank God for the French Army.\n- Winston Churchill, 1933
+LOADING_TIP_73코0=When you see a rattlesnake poised to strike, you do not wait until he has struck to crush him.\n- Franklin D. Roosevelt
+LOADING_TIP_74코0=Rules are not necessarily sacred, principles are.\n- Franklin D. Roosevelt
+LOADING_TIP_75코0=People who are hungry and out of a job are the stuff of which dictatorships are made.\n- Franklin D. Roosevelt
+LOADING_TIP_76코0=A man has to be alert all the time if he expects to keep on breathing. If not, some German son-of-a-bitch will sneak up behind him and beat him to death with a sock full of shit.\n- George S. Patton
+LOADING_TIP_77코0=Fortifications, artillery, foreign aid - will be of no value, unless the ordinary soldier knows that it is HE guarding his country.\n- Carl Gustaf Emil Mannerheim
+LOADING_TIP_78코0=Through the mud and the blood to the green fields beyond.\n- Royal Canadian Armoured Corps motto
+LOADING_TIP_79코0=There is general curiosity in the British Fleet to find out whether the Italians are up to the level they were at in the last war or whether they have fallen off at all.\n- Winston Churchill (on the Italian declaration of war)
+LOADING_TIP_80코0=And we'll fight them with the butt ends of broken beer bottles because that's bloody well all we've got!\n - Winston Churchill (immediately after promising to fight in the fields and in the streets)
+LOADING_TIP_81코0=Experience has shown that attacks against tanks with close combat weapons by a sufficiently determined man will basically always succeed\n - German Army Group Center anti-tank manual
+LOADING_TIP_82코0="Give me fifty DC-3s and the Japanese can have the Burma Road."\n - Chiang Kai-Shek
+LOADING_TIP_83코0="Politics is war without bloodshed, while war is politics with bloodshed."\n - Mao Zedong
+LOADING_TIP_84코0="Keep men, lose land: land can be taken again. Keep land, lose men: land and men are both lost."\n - Mao Zedong
+LOADING_TIP_85코0="I would rather die in a swamp of Greater Romania than in a paradise of a small Romania."\n - Ion Antonescu
+LOADING_TIP_86코0="People don't matter, only what they represent."\n - Ion Antonescu
