--- a/logistics_l_english.properties
+++ b/logistics_l_english.properties
@@ -1,99 +1,113 @@
-LOGISTICS_LOGISTICS_LABEL코0=군수
-LOGISTICS_EFFICIENCY_LABEL코0=평균 생산효율 £prod_eff
-LOGISTICS_EFFICIENCY_SORT_BY코0=£prod_eff 생산효율로 정렬 하려면 클릭
-LOGISTICS_EFFICIENCY_DESC코0=장비 유형별 £prod_eff 공장 생산 효율 평균
-LOGISTICS_EQUIPMENT_TYPE_LABEL코0=장비 유형
-LOGISTICS_EQUIPMENT_TYPE_SORT_BY코0=장비 유형순으로 정렬 하려면 클릭
-LOGISTICS_STATUS_LABEL코0=상태
-LOGISTICS_STATUS_DESC코0=생산을 충당하기 위해 일일 필요한 양
-LOGISTICS_STATUS_SORT_BY코0=상태별로 정렬하려면 클릭
-LOGISTICS_IN_STOCK_LABEL코0=비축분
-LOGISTICS_IN_STOCK_SORT_BY코0=저장량순으로 정렬하려면 클릭
-LOGISTICS_IN_STOCK_DESC코0=장비의 잉여/손실 총량
-LOGISTICS_NEEDS_LABEL코0=수요
-LOGISTICS_NEEDS_SORT_BY코0=수요순으로 정렬하려면 클릭
-LOGISTICS_NEEDS_DESC코0=장비별 일일 수요량
-LOGISTICS_PRODUCED_LABEL코0=생산
-LOGISTICS_PRODUCED_LABEL_DESC코0=각 장비의 생산량
-LOGISTICS_BALANCE_LABEL코0=균형
-LOGISTICS_BALANCE_SORT_BY코0=균형순으로 정렬하려면 클릭
-LOGISTICS_BALANCE_DESC코0=매일 장비 균형
-LOGISTICS_RESOURCES_LABEL코0=자원
-LOGISTICS_RESOURCES_SORT_BY코0=필요한 자원순으로 정렬하려면 클릭
-LOGISTICS_RESOURCES_DESC코0=각 장비 유형 별로 필요한 자원량
-LOGISTICS_RESOURCE_USAGE코0=$RESOURCE|Y$ 사용
-LOGISTICS_NO_EQUIPMENT_PRODUCTION코0=$EQUIPMENT|Y$ 생산 중단 상태.
-LOGISTICS_AVERAGE_EFFICIENCY코0=$EQUIPMENT|H$을 생산하고 있는 우리 §H생산 라인§\!의 평균 £prod_eff  §H생산 효율§\!은 $EFFICIENCY|Y%$다.
-LOGISTICS_AVERAGE_EFFICIENCY_DELAYED코0=£prod_eff 생산 효율을 높여 산출량을 높이세요.
-LOGISTICS_MILITARY_FACTORIES_LABEL코0=군수 공장
-LOGISTICS_NAVAL_FACTORIES_LABEL코0=해군 조선소
-LOGISTICS_WEEKLY_PRODUCTION_LABEL코0=주간 생산
+LOGISTICS_LOGISTICS_LABEL코0=Logistics
+LOGISTICS_EFFICIENCY_LABEL코0=Average £prod_eff Production Efficiency
+LOGISTICS_EFFICIENCY_SORT_BY코0=Click to sort by £prod_eff Production Efficiency
+LOGISTICS_EFFICIENCY_DESC코0=Average £prod_eff  Production Efficiency of Factories producing each type of Equipment
+LOGISTICS_EQUIPMENT_TYPE_LABEL코0=Equipment Type
+LOGISTICS_EQUIPMENT_TYPE_SORT_BY코0=Click to sort by Equipment Type
+LOGISTICS_STATUS_LABEL코0=Status
+LOGISTICS_STATUS_DESC코0=How much of the daily need that is covered by production
+LOGISTICS_STATUS_SORT_BY코0=Click to sort by status
+LOGISTICS_IN_STOCK_LABEL코0=Stored
+LOGISTICS_IN_STOCK_SORT_BY코0=Click to sort by amount stored
+LOGISTICS_IN_STOCK_DESC코0=Total amount of Equipment surplus/deficit
+LOGISTICS_NEEDS_LABEL코0=Need
+LOGISTICS_NEEDS_SORT_BY코0=Click to sort by Need
+LOGISTICS_NEEDS_DESC코0=How much of each Equipment type that is needed per day
+LOGISTICS_PRODUCED_LABEL코0=Produced
+LOGISTICS_PRODUCED_LABEL_DESC코0=Amount produced of each Equipment
+LOGISTICS_BALANCE_LABEL코0=Balance
+LOGISTICS_BALANCE_SORT_BY코0=Click to sort by Balance
+LOGISTICS_BALANCE_DESC코0=Daily Equipment Balance
+LOGISTICS_RESOURCES_LABEL코0=Resources
+LOGISTICS_RESOURCES_SORT_BY코0=Click to sort by required Resources
+LOGISTICS_RESOURCES_DESC코0=How much resources is required by each Equipment type
+LOGISTICS_RESOURCE_USAGE코0=Using $RESOURCE|Y$
+LOGISTICS_NO_EQUIPMENT_PRODUCTION코0=No current production of $EQUIPMENT|Y$.
+LOGISTICS_AVERAGE_EFFICIENCY코0=The average £prod_eff  §HProduction Efficiency§! of our §HProduction Lines§! producing $EQUIPMENT|H$ is $EFFICIENCY|Y%$.
+LOGISTICS_AVERAGE_EFFICIENCY_DELAYED코0=Increase £prod_eff  Production Efficiency to increase output.
+LOGISTICS_MILITARY_FACTORIES_LABEL코0=Military Factories
+LOGISTICS_NAVAL_FACTORIES_LABEL코0=Naval Dockyards
+LOGISTICS_WEEKLY_PRODUCTION_LABEL코0=Weekly production
 LOGISTICS_VIEW_GRAPH_VALUE코0=$VALUE|0*$
-LOGISTICS_EQUIPMENT_VARIANT_LABEL코0=장비
-LOGISTICS_AMOUNT_PRODUCTION_LINES코0=$AMOUNT|Y1$/주 만큼 $NUMBER|Y0$ 생산 라인에서 생산됨.
+LOGISTICS_VIEW_FUEL_CONSUMPTION_VALUE코1=$VALUE|.1*$/d
+LOGISTICS_EQUIPMENT_VARIANT_LABEL코0=Equipment
+LOGISTICS_AMOUNT_PRODUCTION_LINES코0=$AMOUNT|Y1$/week produced in $NUMBER|Y0$ lines.
 LOGISTICS_EQUIPMENT_VALUE코0=$EQUIPMENT|H$
 LOGISTICS_WEEKLY_SPEED_VALUE코0=$AMOUNT|Y1$
-LOGISTICS_IN_STOCK_LOW_VALUE코0=$AMOUNT|^+\=1$
-LOGISTICS_IN_STOCK_HIGH_VALUE코0=$AMOUNT|^+\=0$
+LOGISTICS_IN_STOCK_LOW_VALUE코0=$AMOUNT|^+=1$
+LOGISTICS_IN_STOCK_HIGH_VALUE코0=$AMOUNT|^+=0$
 LOGISTICS_NEEDS_LOW_VALUE코0=$AMOUNT|^1Y$
 LOGISTICS_NEEDS_HIGH_VALUE코0=$AMOUNT|^0Y$
 LOGISTICS_PRODUCED_LOW_VALUE코0=$AMOUNT|^1Y$
 LOGISTICS_PRODUCED_HIGH_VALUE코0=$AMOUNT|^0Y$
-LOGISTICS_BALANCE_LOW_VALUE코0=$AMOUNT|^+\=1$
-LOGISTICS_BALANCE_HIGH_VALUE코0=$AMOUNT|^+\=1$
-LOGISTICS_LAND_OTHER_LABEL코0=다른 부대
-LOGISTICS_NAVAL_OTHER_LABEL코0=다른 함선
-LOGISTICS_AIR_OTHER_LABEL코0=다른 비행기
-LOGISTICS_STATUS_LOW_VALUE코0=우리는 하루에 $EQUIPMENT|H$이(가) $NEED|^1Y$ 만큼 필요합니다.
-LOGISTICS_STATUS_HIGH_VALUE코0=우리는 하루에 $EQUIPMENT|H$이(가) $NEED|^0Y$ 만큼 필요합니다.
-LOGISTICS_SURPLUS_LOW_VALUE코0=대체로 우리는  $EQUIPMENT|H$를 하루에 $BALANCE|^2Y$만큼 잉여생산 합니다.
-LOGISTICS_SURPLUS_HIGH_VALUE코0=대체로 우리는 $EQUIPMENT|H$를 하루에 $BALANCE|^1Y$만큼 잉여생산 합니다.
-LOGISTICS_DEFICIT_LOW_VALUE코0=대체로 우리는 $EQUIPMENT|H$를 하루에 $BALANCE|^1Y$만큼 부족합니다.
-LOGISTICS_DEFICIT_HIGH_VALUE코0=대체로 우리는 $EQUIPMENT|H$를 하루에 $BALANCE|^0Y$만큼 부족합니다.
-LOGISTICS_NEED_LOW_VALUE코0=우리의 현재 $EQUIPMENT|H$ 평균 수요량은 $NEED|^1Y$ 입니다.
-LOGISTICS_NEED_HIGH_VALUE코0=우리의 현재 $EQUIPMENT|H$ 평균 수요량은 $NEED|^0Y$ 입니다.
-LOGISTICS_NEED_ARMY_REINFORCEMENTS_LOW_VALUE코0=대체적으로 우리는 사단 보충을 위해 하루에 $NEED|^1Y$를 보내고 있습니다.
-LOGISTICS_NEED_ARMY_REINFORCEMENTS_HIGH_VALUE코0=대체적으로 우리는 사단 보충을 위해 하루에 $NEED|^0Y$를 보내고 있습니다.
-LOGISTICS_NEED_AIR_REINFORCEMENTS_LOW_VALUE코0=대체적으로 우리는 공군 보충을 위해 하루에 $NEED|^1Y$를 보내고 있습니다.
-LOGISTICS_NEED_AIR_REINFORCEMENTS_HIGH_VALUE코0=대체적으로 우리는 공군 보충을 위해 하루에 $NEED|^0Y$를 보내고 있습니다.
-LOGISTICS_EFFICIENCY_NOT_HUNDRED_LOW_VALUE코0=$EQUIPMENT|H$을 생산하고 있는 우리 §H생산 라인§\!이 $EFFICIENCY|Y%$의 평균 §H효율§\!로 가동중입니다. 우리는 잠재적으로 매일 $ADDITIONAL|^1Y$개를 추가 생산 할 수 있습니다.
-LOGISTICS_EFFICIENCY_NOT_HUNDRED_HIGH_VALUE코0=$EQUIPMENT|H$을 생산하고 있는 우리 §H생산 라인§\!이 $EFFICIENCY|Y%$의 평균 §H효율§\!로 가동중입니다. 우리는 잠재적으로 매일 $ADDITIONAL|^0Y$개를 추가 생산 할 수 있습니다.
-LOGISTICS_ACQUIRED_TOTAL_LOW_VALUE코0=대체적으로 우리는 $EQUIPMENT|H$를 하루에 $PRODUCED|^1Y$만큼 생산하고 있습니다.
-LOGISTICS_ACQUIRED_TOTAL_HIGH_VALUE코0=대체적으로 우리는 $EQUIPMENT|H$를 하루에 $PRODUCED|^0Y$만큼 생산하고 있습니다.
-LOGISTICS_GAINED_PRODUCTION_LOW_VALUE코0=생산으로부터\: $GAINED|^1Y$ 개
-LOGISTICS_GAINED_PRODUCTION_HIGH_VALUE코0=생산으로부터\: $GAINED|^0Y$ 개
-LOGISTICS_STOCK_REQUEST코0=\n새 사단과 충원은 $COUNT|H$ 개를 요구합니다.
-LOGISTICS_PRODUCING코0=우리의 §H생산 라인§\!은 일주일에 $PRODUCING|H2$개를 생산하고 있습니다\:
-LOGISTICS_VARIANT_SPEED코0=$VARIANT|H$\: $SPEED|H2$ 개.
-LOGISTICS_BALANCE코0=지난 $DAYS|Y$일간 $EQUIPMENT|Y$의 평균 수요와 일일 생산량에 기초한 우리의 평균 잔고는 $BALANCE|H$입니다.
-LOGISTICS_LOW_ON_RESOURCE코0=우리 $EQUIPMENT|H$ 장비를 생산하는 §H생산라인§\!에서 충분하지 못 한 $RESOURCES|H$ 자원 수급문제로 인해 최대 생산효율내는데 문제가 있습니다.
-LOGISTICS_INSTOCK_DEFICIT_LOW_VALUE코0=우리는 현재 창고에 $EQUIPMENT|H$가 $INSTOCK|^2Y$개 모자라다 .
-LOGISTICS_INSTOCK_DEFICIT_HIGH_VALUE코0=우리는 현재 비축된 장비중 $EQUIPMENT|H$이(가) $INSTOCK|^0Y$ 부족합니다.
-LOGISTICS_INSTOCK_SURPLUS_LOW_VALUE코0=창고에 $EQUIPMENT|H$가 $INSTOCK|^2Y$만큼 비축되어있습니다.
-LOGISTICS_INSTOCK_SURPLUS_HIGH_VALUE코0=우리는 현재 비축된 장비중 $EQUIPMENT|H$이(가) $INSTOCK|^0Y$ 여분으로 있습니다.
-LOGISTICS_ESTIMATED_EMPTY코0=우리의 현재 $EQUIPMENT|Y$ 수요와 생산으로 볼 때, 우리의 재고는 $DAYS|Y$ 일간 지속될 것입니다.
-LOGISTICS_ESTIMATED_NO_SHORTAGE코0=우리의 현재 $EQUIPMENT|Y$ 생산으로 볼 때 , 부족한 상태는 $DAYS|Y$일간 지속될 것입니다.
-LOGISTICS_ESTIMATED_NO_PRODUCTION코0=우리는 현재 $EQUIPMENT|Y$ 장비를 생산하고 있지 않습니다.
-LOGISTICS_RESOURCE코0=우리 §H생산 라인§\!은 $EQUIPMENT|H$을 생산하기 위해서 $RESOURCE|H$를 필요로 합니다 .
-LOGISTICS_RESOURCE_OTHER_LINES코0=우리는 $EQUIPMENT|H$ 장비를 생산하는 곳 외에도 $RESOURCE|H$ 가 필요한 $LINES|Y$ 개의 §H생산라인§\!이 있습니다.
-LOGISTICS_RESOURCE_SHORTAGE코0=우리 $EQUIPMENT|H$ 장비를 생산하는 §H생산라인§\!에서 충분하지 못 한 $RESOURCES|H$ 자원 수급문제로 인해 최대 생산효율내는데 문제가 있습니다.
-LOGISTICS_MILITARY_FACTORY코0=우리 §H군수공장§\!의 $PERCENTAGE|%0Y$가 현재 장비를 생산중입니다.
-LOGISTICS_NAVAL_FACTORY_NONE코0=우리는 §H해군 조선소§\!가 없습니다\!
-LOGISTICS_NAVAL_FACTORY코0=우리 §H해군 조선소§\!의 $PERCENTAGE|%0Y$가 현재 함선을 건조중입니다.
-LOGISTICS_RESOURCES_SUMMERY코0=우리는 현재 $RESOURCE|H$가 $HAVE|Y$개 있으며 최대 생산량을 위해서 $NEED|Y$개가 필요합니다.
-LOGISTICS_RESOURCES_NAVAL코0=우리의 해군 장비 생산은 최대 산출량을 위해서 $RESOURCE|H$를 $NEED|Y$개 요구합니다.
-LOGISTICS_RESOURCES_LAND코0=우리의 육군 장비 생산은 최대 산출량을 위해서 $RESOURCE|H$를 $NEED|Y$개 요구합니다.
-LOGISTICS_RESOURCES_AIR코0=우리의 공군 장비 생산은 최대 산출량을 위해서 $RESOURCE|H$를 $NEED|Y$개 요구합니다.
-LOGISTICS_RESOURCE_NEED_SUMMERY코0=우리는 현재 최대 생산량을 위해 $RESOURCE|H$가 $NEED|Y$개 추가적으로 더 필요합니다.
-LOGISTICS_NEED_LEND_LEASE_LOW_VALUE코0=무기 대여\: $NEED|^1Y$ 병력
-LOGISTICS_NEED_LEND_LEASE_HIGH_VALUE코0=무기 대여\: $NEED|^0Y$ 병력
-LOGISTICS_GAINED_LEND_LEASE코0=무기 대여\: $GAINED|Y$ 병력
-LOGISTICS_STORAGE_DEPLOYMENT코0=§T신규 배치\: $AMOUNT|Y$ 병력§\!
-LOGISTICS_STORAGE_ARMY_REINFORCEMENT코0=§T사단 충원\: $AMOUNT|Y$ 병력§\!
-LOGISTICS_STORAGE_AIR_REINFORCEMENT코0=§T공군 충원\: $AMOUNT|Y$ 병력§\!
-LOGISTICS_STORAGE_FOREIGN코0=§T외국 장비\: $AMOUNT|Y$ 병력§\!
-LOGISTICS_STORAGE_PRODUCTION_POOL코0=§T생산으로부터\: $AMOUNT|Y$ 병력§\!
-PRODUCTION_OUTPUT코1=비축량
-LOGISTICS_DELETE_EQUIPMENT코0=§R파괴§\!
-LOGISTICS_DELETE_EQUIPMENT_CONFIRM_TITLE코0=§H비축 장비 파괴§\!
-LOGISTICS_DELETE_EQUIPMENT_CONFIRM_DESC코0=\n\n정말 $EQUIPMENT|Y$를 §R파괴§\!하시겠습니까?\n\n장비는 비축분에서 제거될 것이며 더는 사용할 수 없습니다. 이 절차는 되돌릴 수 없습니다.\n\n$NUM_DAYS|Y$일이 지나기 전에 항복하거나 합병된다면 적이 장비를 입수할 수도 있습니다.
+LOGISTICS_BALANCE_LOW_VALUE코0=$AMOUNT|^+=1$
+LOGISTICS_BALANCE_HIGH_VALUE코0=$AMOUNT|^+=1$
+LOGISTICS_LAND_OTHER_LABEL코0=Other military
+LOGISTICS_NAVAL_OTHER_LABEL코0=Other ships
+LOGISTICS_AIR_OTHER_LABEL코0=Other planes
+LOGISTICS_STATUS_LOW_VALUE코0=We currently need an average of $NEED|^1Y$ units of $EQUIPMENT|H$ equipment per day.
+LOGISTICS_STATUS_HIGH_VALUE코0=We currently need an average of $NEED|^0Y$ units of $EQUIPMENT|H$ equipment per day.
+LOGISTICS_SURPLUS_LOW_VALUE코0=On average we have a production surplus of $BALANCE|^2Y$ units of $EQUIPMENT|H$ per day.
+LOGISTICS_SURPLUS_HIGH_VALUE코0=On average we have a production surplus of $BALANCE|^1Y$ units of $EQUIPMENT|H$ per day.
+LOGISTICS_DEFICIT_LOW_VALUE코0=On average we have a production deficit of $BALANCE|^1Y$ units of $EQUIPMENT|H$ per day.
+LOGISTICS_DEFICIT_HIGH_VALUE코0=On average we have a production deficit of $BALANCE|^0Y$ units of $EQUIPMENT|H$ per day.
+LOGISTICS_NEED_LOW_VALUE코0=Our current average need of $EQUIPMENT|H$ is $NEED|^1Y$ units.
+LOGISTICS_NEED_HIGH_VALUE코0=Our current average need of $EQUIPMENT|H$ is $NEED|^0Y$ units.
+LOGISTICS_NEED_ARMY_REINFORCEMENTS_LOW_VALUE코0=On average we send $NEED|^1Y$ units per day as division reinforcements
+LOGISTICS_NEED_ARMY_REINFORCEMENTS_HIGH_VALUE코0=On average we send $NEED|^0Y$ units per day as division reinforcements
+LOGISTICS_NEED_AIR_REINFORCEMENTS_LOW_VALUE코0=On average we send $NEED|^1Y$ units per day as air reinforcements
+LOGISTICS_NEED_AIR_REINFORCEMENTS_HIGH_VALUE코0=On average we send $NEED|^0Y$ units per day as air reinforcements
+LOGISTICS_EFFICIENCY_NOT_HUNDRED_LOW_VALUE코0=Our §HProduction Lines§! producing $EQUIPMENT|H$ equiment operate at an average of $EFFICIENCY|Y%$ §HEfficiency§!. We could potentially produce an additional $ADDITIONAL|^1Y$ units daily.
+LOGISTICS_EFFICIENCY_NOT_HUNDRED_HIGH_VALUE코0=Our §HProduction Lines§! producing $EQUIPMENT|H$ equiment operate at an average of $EFFICIENCY|Y%$ §HEfficiency§!. We could potentially produce an additional $ADDITIONAL|^0Y$ units daily.
+LOGISTICS_ACQUIRED_TOTAL_LOW_VALUE코0=On average we produce $PRODUCED|^1Y$ units of $EQUIPMENT|H$ per day.
+LOGISTICS_ACQUIRED_TOTAL_HIGH_VALUE코0=On average we produce $PRODUCED|^0Y$ units of $EQUIPMENT|H$ per day.
+LOGISTICS_GAINED_PRODUCTION_LOW_VALUE코0=From production: $GAINED|^1Y$ units
+LOGISTICS_GAINED_PRODUCTION_HIGH_VALUE코0=From production: $GAINED|^0Y$ units
+LOGISTICS_STOCK_REQUEST코0=\nReinforcements and new divisions are requesting $COUNT|H$ units.
+LOGISTICS_PRODUCING코0=Our §HProduction Lines§! produce $PRODUCING|H2$ units per week:
+LOGISTICS_VARIANT_SPEED코0=$VARIANT|H$: $SPEED|H2$ units.
+LOGISTICS_BALANCE코0=Our current average balance based on our daily production and average needs of $EQUIPMENT|Y$ for the last $DAYS|Y$ days is $BALANCE|H$.
+LOGISTICS_LOW_ON_RESOURCE코0=Our §HProduction Lines§! producing $EQUIPMENT|H$ equipment have trouble obtaining enough $RESOURCES|H$ for maximal production efficiency.
+LOGISTICS_INSTOCK_DEFICIT_LOW_VALUE코0=We currently have a deficit of $INSTOCK|^2Y$ units of $EQUIPMENT|H$ equipment in storage.
+LOGISTICS_INSTOCK_DEFICIT_HIGH_VALUE코0=We currently have a deficit of $INSTOCK|^0Y$ units of $EQUIPMENT|H$ equipment in storage.
+LOGISTICS_INSTOCK_SURPLUS_LOW_VALUE코0=We currently have a surplus of $INSTOCK|^2Y$ units of $EQUIPMENT|H$ equipment in storage.
+LOGISTICS_INSTOCK_SURPLUS_HIGH_VALUE코0=We currently have a surplus of $INSTOCK|^0Y$ units of $EQUIPMENT|H$ equipment in storage.
+LOGISTICS_ESTIMATED_EMPTY코0=With our current need and production of $EQUIPMENT|Y$ equipment, our storage will last for $DAYS|Y$ days.
+LOGISTICS_ESTIMATED_NO_SHORTAGE코0=With our current production of $EQUIPMENT|Y$ equipment, the shortage will last for $DAYS|Y$ days.
+LOGISTICS_ESTIMATED_NO_PRODUCTION코0=We're not currently producing $EQUIPMENT|Y$ equipment.
+LOGISTICS_RESOURCE코0=Our §HProduction Lines§! require $RESOURCE|H$ for their production of $EQUIPMENT|H$.
+LOGISTICS_RESOURCE_OTHER_LINES코0=We have $LINES|Y$ §HProduction Lines§! producing equipment other than $EQUIPMENT|H$ that also require $RESOURCE|H$ for their production.
+LOGISTICS_RESOURCE_SHORTAGE코0=Our §HProduction Lines§! producing $EQUIPMENT|H$ equipment have trouble obtaining enough $RESOURCE|H$ for maximal production efficiency.
+LOGISTICS_MILITARY_FACTORY코0=$PERCENTAGE|%0Y$ of our §HMilitary Factories§! are currently producing equipment.
+LOGISTICS_NAVAL_FACTORY_NONE코0=We have no §HNaval Dockyards§!!
+LOGISTICS_NAVAL_FACTORY코0=$PERCENTAGE|%0Y$ of our §HNaval Dockyards§! are currently constructing ships.
+LOGISTICS_RESOURCES_SUMMERY코0=We currently have access to $HAVE|Y$ units of $RESOURCE|H$ and we need $NEED|Y$ units for maximal output.
+LOGISTICS_RESOURCES_NAVAL코0=Our production of Naval equipment require $NEED|Y$ units of $RESOURCE|H$ for maximal output.
+LOGISTICS_RESOURCES_LAND코0=Our production of land equipment require $NEED|Y$ units of $RESOURCE|H$ for maximal output.
+LOGISTICS_RESOURCES_AIR코0=Our production of aircraft equipment require $NEED|Y$ units of $RESOURCE|H$ for maximal output.
+LOGISTICS_RESOURCE_NEED_SUMMERY코0=We currently need access to $NEED|Y$ additional units of $RESOURCE|H$ for maximal output.
+LOGISTICS_NEED_LEND_LEASE_LOW_VALUE코0=Lend-Lease: $NEED|^1Y$ units
+LOGISTICS_NEED_LEND_LEASE_HIGH_VALUE코0=Lend-Lease: $NEED|^0Y$ units
+LOGISTICS_GAINED_LEND_LEASE코0=From Lend-Lease: $GAINED|Y$ units
+LOGISTICS_STORAGE_DEPLOYMENT코0=§TFrom new Deployments: $AMOUNT|Y$ units§!
+LOGISTICS_STORAGE_ARMY_REINFORCEMENT코0=§TFrom Division Reinforcement: $AMOUNT|Y$ units§!
+LOGISTICS_STORAGE_AIR_REINFORCEMENT코0=§TFrom Air Reinforcement: $AMOUNT|Y$ units§!
+LOGISTICS_STORAGE_FOREIGN코0=§TForeign equipment: $AMOUNT|Y$ units§!
+LOGISTICS_STORAGE_PRODUCTION_POOL코0=§TFrom Production: $AMOUNT|Y$ units§!
+PRODUCTION_OUTPUT코1=Stockpile
+LOGISTICS_DELETE_EQUIPMENT코0=§RDestroy§!
+LOGISTICS_DELETE_EQUIPMENT_CONFIRM_TITLE코0=§HDestroy Stockpiled Equipment§!
+LOGISTICS_DELETE_EQUIPMENT_CONFIRM_DESC코0=\n\nAre you sure you want to §Rdestroy§! $EQUIPMENT|Y$?\n\nThe equipment will be removed from your stockpile and you won't be able to use it anymore. This process is irreversible.\n\nThe equipment will be still accessible for enemies for $NUM_DAYS|Y$ days in case of capitulation or annexation.
+LOGISTICS_FUEL_PRIORITIZATION코0=Fuel Prioritization
+LOGISTICS_FUEL_STORED코0=Stored
+LOGISTICS_FUEL_CONSUMED코0=Consumed
+fuel_line_grid_entry_0코0=Total Stockpiled
+fuel_line_grid_entry_1코0=Total Consumption
+fuel_line_grid_entry_2코0=Army Consumption
+fuel_line_grid_entry_3코0=Navy Consumption
+fuel_line_grid_entry_4코0=Air Consumption
+fuel_line_grid_entry_5코0=Other Consumption
+fuel_line_grid_entry_6코0=Total Production
+FUEL_LOW_PRIORITY_DESC코0=Low Fuel Priority
+FUEL_MEDIUM_PRIORITY_DESC코0=Medium Fuel Priority
+FUEL_HIGH_PRIORITY_DESC코0=High Fuel Priority
