--- a/multiplayer_l_english.properties
+++ b/multiplayer_l_english.properties
@@ -1,143 +1,145 @@
-MULTIPLAYER_LOBBY코0=멀티플레이어 대기실
-START코0=시작
-ABANDON_GAME코0=게임 취소
-SERVER_IS_UP코0=§G서버를 사용 할 수 있음.§\!
-SYSTEM_PLAYER_LEFT코0=§G§Y$NAME$§\! 가 게임을 나갔습니다.§\!
-SYSTEM_PLAYER_LOST코0=§G§Y$NAME$§\! 가 연결이 끊겼습니다.§\!
-SYSTEM_PLAYER_KICKED코0=§G§Y$NAME$§\! 가 게임에서 강퇴되었습니다.§\!
-SYSTEM_PLAYER_BANNED코0=§G§Y$NAME$§\! 가 게임에서 밴 되었습니다.§\!
-SYSTEM_PLAYER_ARRIVED코0=§G§Y$NAME$§\! 가 게임에 참여했습니다.§\!
-CONNECTED코0=§G연결됨.§\!
-NAME_TAKEN코0=당신의 이름은 이미 사용중입니다. 나가서 다른 이름을 설정하세요.
-CONNECTING코0=접속중...
-BANNED코0=당신은 이 게임에서 추방되었습니다.
-YOUKICKED_TITLE코0=서버로부터 추방당함
-YOUKICKED코0=당신은 호스트로부터 추방당했습니다.
-YOUBANNED_TITLE코0=서버로부터 차단됨
-YOUBANNED코0=당신은 방장으로부터 차단당했습니다.
-HOST_LOADING_SAVEGAME코0=방장이 저장된 게임을 불러오기 시작했습니다\: $NAME|Y$.
-CONNECTION_FAILED코0=§R연결 실패\!§\!
-GAME_NOT_FOUND코0=게임을 찾을 수 없습니다.
-WAITING_FOR_PLAYERS코0=플레이어 기다리는 중...
-LOOKING_FOR_HOST코0=호스트를 찾는중...
-LOST_PLAYER코0=플레이어 사라짐
-SERVER_LOST코0=서버와 연결이 끊겼습니다.
-HOST_BUTTON코0=호스트
-JOIN_BUTTON코0=참여
-SERVER_ID코0=서버 ID\: $ID|H$
-SERVER_ID_COPY코0=우-클릭하여 서버 ID를 클립보드에 복사
-VERSION코0=버전\: $VERSION|H$
-NUM_PLAYERS코0=플레이어의 수\: $NUM|H$
-PLAYER_LOST_TITLE코0=플레이어의 연결이 끊겼습니다.
-PLAYER_LOST_DESC코0=$playername$ 의 연결이 끊겼습니다. 어떻게 하시겠습니까.
-SERVER_LOST_TITLE코0=서버 끊김\!
-SERVER_LOST_DESC코0=서버와의 연결이 끊겼습니다. 어떻게 하시겠습니까.
-CONNECT_TO_IP코0=서버 ID에 연결 중
-FE_PLAYERS코0=플레이어
-LEDGER_COUNTRY코0=국가
-FE_ACCEPT코0=승인
-FE_CONFIRM코0=승인
-FE_DECLINE코0=거부
-FE_CANCEL코0=취소
-TIP_MUTE코0=음소거
-TIP_KICK코0=강퇴
-TIP_BAN코0=밴
-LOBBY코0=대기실
-CONTINUE코0=이어서 하기
-OBSERVE코0=관전자
-SAVE코0=저장
-QUIT코0=나가기
-MP_FEW_PLAYERS코0=§R한 명 이상의 플레이어가 더 필요합니다§\!
-COUNTRY_CONTROLLER코0=$PLAYER|H$는 $COUNTRY|H$의 조작자입니다.
-COUNTRY_CO_PLAYER코0=$PLAYER|H$는 $COUNTRY|H$를 협동해서 플레이할 것입니다.
-COUNTRY_PROMOTE코0=§G클릭§\!하여 $PLAYER|H$를 $COUNTRY|H$의 주 조작자로 임명합니다.
-COUNTRY_PROMOTE_HINT코0=$PLAYER|H$는 당신을 $COUNTRY|H$의 메인 조작자로 임명할 수 있습니다.
+MULTIPLAYER_LOBBY코0=Multiplayer Lobby
+START코0=Start
+ABANDON_GAME코0=Abandon Game
+SERVER_IS_UP코0=§GServer is up.§!
+SYSTEM_PLAYER_LEFT코0=§G§Y$NAME$§! left the game.§!
+SYSTEM_PLAYER_LOST코0=§G§Y$NAME$§! lost the connection.§!
+SYSTEM_PLAYER_KICKED코0=§G§Y$NAME$§! was kicked from the game.§!
+SYSTEM_PLAYER_BANNED코0=§G§Y$NAME$§! was banned from the game.§!
+SYSTEM_PLAYER_ARRIVED코0=§G§Y$NAME$§! joined the game.§!
+CONNECTED코0=§GConnected.§!
+NAME_TAKEN코0=Your name is taken. Please leave and select another.
+CONNECTING코0=Connecting...
+BANNED코0=You have been banned from this game
+YOUKICKED_TITLE코0=Kicked from server
+YOUKICKED코0=You were kicked by the host.
+YOUBANNED_TITLE코0=Banned from server
+YOUBANNED코0=You were banned by the host.
+HOST_LOADING_SAVEGAME코0=Host started loading savegame: $NAME|Y$.
+CONNECTION_FAILED코0=§RConnection failed!§!
+GAME_NOT_FOUND코0=Game not found.
+WAITING_FOR_PLAYERS코0=Waiting for players...
+LOOKING_FOR_HOST코0=Looking for host...
+LOST_PLAYER코0=A player was lost...
+SERVER_LOST코0=The server was lost.
+HOST_BUTTON코0=Host
+JOIN_BUTTON코0=Join
+SERVER_ID코0=Server ID: $ID|H$
+SERVER_ID_COPY코0=Right-click to copy Server ID to clipboard.
+VERSION코0=Version: $VERSION|H$
+NUM_PLAYERS코0=Number of Players: $NUM|H$
+PLAYER_LOST_TITLE코0=Player disconnected.
+PLAYER_LOST_DESC코0=Player(s) $playername$ disconnected. Choose your action.
+SERVER_LOST_TITLE코0=Server Lost!
+SERVER_LOST_DESC코0=Lost connection to the server. Choose your action.
+CONNECT_TO_IP코0=Connect to Server ID
+FE_PLAYERS코0=Players
+LEDGER_COUNTRY코0=Country
+FE_ACCEPT코0=Accept
+FE_CONFIRM코0=Confirm
+FE_DECLINE코0=Decline
+FE_CANCEL코0=Cancel
+TIP_MUTE코0=Mute
+TIP_KICK코0=Kick
+TIP_BAN코0=Ban
+LOBBY코0=Lobby
+CONTINUE코0=Continue
+OBSERVE코0=Observe
+SAVE코0=Save
+QUIT코0=Quit
+MP_FEW_PLAYERS코0=§RNeeds more than one player§!
+COUNTRY_CONTROLLER코0=$PLAYER|H$ is the main controller of $COUNTRY|H$.
+COUNTRY_CO_PLAYER코0=$PLAYER|H$ will be co-playing $COUNTRY|H$.
+COUNTRY_PROMOTE코0=§GClick§! to promote $PLAYER|H$ to be the main controller of $COUNTRY|H$.
+COUNTRY_PROMOTE_HINT코0=$PLAYER|H$ can promote you to be the main controller of $COUNTRY|H$.
 SAVE_PROG코0=$VALUE|%0$
-START_FILE_TRANSFER코0=$NAME|H$ 에게 저장된 게임을 전송 중입니다.
-SAVEGAME_LOADED코0=§G로딩됨§\!
-NOT_ALLOWED_TO_CHANGE_COUNTRY코0=§R당신은 아직 국가를 변경할 수 없습니다.§\!
-OOS_TITLE코0=당신의 게임이 더이상 동기화 되지 않습니다.
-OOS_DESC코1=$WHO|H$ 는 더이상 정확한 게임상태가 아닙니다.\n에러코드\: $CODE|R$ \n($CODE_DESC$) \n \n 호스트는 더 이상 모든 플레이어들에게 정확한 게임상태를 보장할 수 없습니다. 가능한 해결책\: \n 1. 서버 내에서 게임 재동기화. \n 2. 사용자가 게임을 종료한 후 서버 참여가 가능할 시 재접속한다.\n 3. 서버 내에서 게임 재시작\n 4. 오류가 난 게임상태로 계속 하기. (추천하지 않음. 나중에 아마도 사고가 발생할 겁니다.)
-OOS_ERROR_CODE코0=에러 코드\: $CODE$
-GAME_IS_OOS코0=게임 동기화가 어긋났습니다. 에러 코드\: $CODE$, 기재\: $LONG$
-OOS_0코0=무작위 시드
-OOS_1코0=무작위 카운트
-OOS_2코1=게임상태 체크섬
-OOS_3코0=육군의 수
-OOS_4코0=지휘관의 수
-OOS_5코0=육군 점수
-OOS_6코0=해군 점수
-OOS_7코0=공군 점수
-OOS_8코0=육군 경험치
-OOS_9코0=해군 경험치
-OOS_10코0=공군 경험치
-OOS_11코0=총 함선 내구도
-OOS_12코0=총 민간 공장의 수
-OOS_13코0=사용할 수 있는 민간 공장의 수
-OOS_14코0=총 군수 공장의 수
-OOS_15코0=사용할 수 있는 군수 공장의 수
-OOS_16코0=총 해군 조선소의 수
-OOS_17코0=사용할 수 있는 해군 조선소의 수
-OOS_18코0=민간 생산의 진행도
-OOS_19코0=군수 생산의 진행도
-OOS_20코0=해군 생산의 진행도
-OOS_21코0=건물의 수
-OOS_22코0=전선의 수
-OOS_23코0=전선에 있는 프로빈스의 수
-OOS_24코0=전선의 적
-OOS_25코0=전구의 수
-OOS_26코0=전구의 최고 프로빈스
-OOS_27코0=증원 우선도
-OOS_28코0=국가 변동치
-OOS_29코0=주 변동치
-OOS_30코0=기온
-OOS_31코0=지배 지역 수
-OOS_32코0=통제 지역에 있는 프로빈스들
-OOS_33코0=통제 지역의 크기
-OOS_34코0=소유한 지역의 수
-OOS_35코0=소유 지역에 있는 프로빈스들
-OOS_36코0=소유 지역의 크기
-OOS_37코0=생산된 자원
-OOS_38코0=수입된 자원
-OOS_39코0=소모된 자원
-OOS_40코0=수출된 자원
-OOS_41코0=자원 생산 풀
-OOS_42코0=자원 생산 풀
-OOS_43코0=전구에 있는 프로빈스의 수
-OOS_44코0=총 경과한 활동시간
-OOS_45코0=총 정치력
-OOS_46코0=AI 국가들
-OOS_47코0=명령 그룹
-OOS_48코0=전투 중인 부대
-OOS_49코0=완료된 국가적 집중
-OOS_50코0=해군 임무 범위
-OOS_51코0=해상 임무 중인 지역
-OOS_52코0=지휘력
-OOS_53코0=할당된 지휘력
-OOS_54코0=총 지휘력
-OOS_55코0=다음 ID
-OOS_56코0=군 지휘관의 수
-OOS_57코0=해군 지휘관의 수
-OOS_58코0=사용 중인 수송선의 수
-OOS_59코0=가용할 수 있는 수송선의 수
+START_FILE_TRANSFER코0=Sending savegame to $NAME|H$.
+SAVEGAME_LOADED코0=§GLoaded§!
+NOT_ALLOWED_TO_CHANGE_COUNTRY코0=§RYou're not allowed to change country yet.§!
+OOS_TITLE코0=Your game is no longer in synch
+OOS_DESC코1=$WHO|H$ does no longer have the correct gamestate.\nError code: $CODE|R$ \n($CODE_DESC$) \n \n The host can no longer guarantee that all players has a correct gamestate. Possible solutions: \n 1. The server can resync the game. \n 2. The player can leave the game and then reconnect if hotjoin is enabled.\n 3. The server can rehost the game. \n 4. Continue playing with a corrupt gamestate. (Not recommended. Will most likely result in a crash later on.)
+OOS_ERROR_CODE코0=Error code: $CODE$
+GAME_IS_OOS코0=Games is out of sync. Error code: $CODE$, Description: $LONG$
+OOS_0코0=Random seed
+OOS_1코0=Random count
+OOS_2코1=Gamestate checksum
+OOS_3코0=Number of Armies
+OOS_4코0=Number of Leaders
+OOS_5코0=Army Score
+OOS_6코0=Navy Score
+OOS_7코0=Air Score
+OOS_8코0=Army Experience
+OOS_9코0=Navy Experience
+OOS_10코0=Air Experience
+OOS_11코0=Total ship strength
+OOS_12코0=Total Civilian Factories
+OOS_13코0=Available Civilian Factories
+OOS_14코0=Total Military Factories
+OOS_15코0=Available Military Factories
+OOS_16코0=Total Naval Dockyards
+OOS_17코0=Available Naval Dockyards
+OOS_18코0=Progress for Civilian Productions
+OOS_19코0=Progress for Military Productions
+OOS_20코0=Progress for Naval Productions
+OOS_21코0=Number of Buildings
+OOS_22코0=Number of Fronts
+OOS_23코0=Number of Provinces in Fronts
+OOS_24코0=Enemy for Fronts
+OOS_25코0=Number of Theaters
+OOS_26코0=Best Province in Theater
+OOS_27코0=Reinforcement Priority
+OOS_28코0=Country Modifiers
+OOS_29코0=State Modifiers
+OOS_30코0=Temperature
+OOS_31코0=Number of controller areas
+OOS_32코0=Provinces in controller areas
+OOS_33코0=Size of controller areas
+OOS_34코0=Number of owner areas
+OOS_35코0=Provinces in owner areas
+OOS_36코0=Size of owner areas
+OOS_37코0=Produced resources
+OOS_38코0=Imported resources
+OOS_39코0=Consumed resources
+OOS_40코0=Exported resources
+OOS_41코0=Produced resources pool
+OOS_42코0=Produced resources pool
+OOS_43코0=Number of provinces in theaters
+OOS_44코0=Total timed activity progress
+OOS_45코0=Total political power
+OOS_46코0=AI Countries
+OOS_47코0=Orders Groups
+OOS_48코0=Armies in combat
+OOS_49코0=Completed focuses
+OOS_50코0=Naval mission coverage
+OOS_51코0=Regions in naval missions
+OOS_52코0=Command Power
+OOS_53코0=Allocated Command Power
+OOS_54코0=Total Command Power
+OOS_55코0=Next ID
+OOS_56코0=Number of Army Leaders
+OOS_57코0=Number of Naval Leaders
+OOS_58코0=Number of convoys used
+OOS_59코0=Number of free convoys
+OOS_60코0=Army Strength and Organization
+OOS_61코0=Country Fuel Stockpiles
 MULTIPLAYER_PLAYERS코0=$NUM$
 MULTIPLAYER_MESSAGES코0=$NUM$
-MATCHMAKING_FRIEND_STATUS_PLAYING_THIS코0=§G이미 진행중§\!
-MATCHMAKING_FRIEND_STATUS_PLAYING_OTHER코0=§Y다른 게임에 있음§\!
-MATCHMAKING_FRIEND_STATUS_ONLINE코0=§G온라인§\!
-MATCHMAKING_SERVER_CONNECTING코0=접속중
-MATCHMAKING_SERVER_DENIED코0=접속 연결 시간 초과
-SERVER_NAME코0=서버 이름\: $NAME$
-SERVER_PASSWORD코0=암호\: $PASSWORD$
-SERVER_BOOKMARK코0=북마크\: $BOOKMARK$
-SERVER_START_DATE코0=시작 날짜\: $DATE$
-SERVER_LAUNCHING_MP코0=*** 멀티플레이 게임을 실행 중 ***
-OOS_CHECKS코0=§G서버는 다음과 같은 oos 체크를 따로도록 설정 되었습니다\: $CHECKS|Y$.§\!
-ACTIVATE_OBSERVER_MODE코0=관전자 모드 활성화
-DEACTIVATE_OBSERVER_MODE코0=관전자 모드 비활성화
-OBSERVER_MODE_DESC코0=관전자모드에서 당신은 다른 플레이어의 시점으로 게임을 볼 수 있지만 어떠한 상호작용도 할 수 없습니다.
-USER_NAME코0=사용자이름\: $USER|Y$
-PLAYER_REMOVED_TITLE코0=$PLAYER$ 가 나갔습니다.
-PLAYER_REMOVED_DESC코0=$PLAYER|Y$ 가 아쉽게도 게임을 떠났습니다.¶\nAI에게 $COUNTRY|Y$  의 운영을 맡기시겠습니까?
-MULTIPLAYER_RESYC코1=재동기화
-FAILED_TO_CONNECT코0=연결 실패
+MATCHMAKING_FRIEND_STATUS_PLAYING_THIS코0=§GAlready Playing§!
+MATCHMAKING_FRIEND_STATUS_PLAYING_OTHER코0=§YIn other game§!
+MATCHMAKING_FRIEND_STATUS_ONLINE코0=§GOnline§!
+MATCHMAKING_SERVER_CONNECTING코0=Connecting
+MATCHMAKING_SERVER_DENIED코0=Connection timed out
+SERVER_NAME코0=Server name: $NAME$
+SERVER_PASSWORD코0=Password: $PASSWORD$
+SERVER_BOOKMARK코0=Bookmark: $BOOKMARK$
+SERVER_START_DATE코0=Start date: $DATE$
+SERVER_LAUNCHING_MP코0=*** Launching MULTIPLAYER-game ***
+OOS_CHECKS코0=§GServer sets the following oos checks: $CHECKS|Y$.§!
+ACTIVATE_OBSERVER_MODE코0=Activate Observer Mode
+DEACTIVATE_OBSERVER_MODE코0=Deactivate Observer Mode
+OBSERVER_MODE_DESC코0=Observer Mode allows you to view the game from any other player's perspective but not interact with anything
+USER_NAME코0=Username: $USER|Y$
+PLAYER_REMOVED_TITLE코0=$PLAYER$ has left
+PLAYER_REMOVED_DESC코0=$PLAYER|Y$ has unfortunately left the game.\nDo you want $COUNTRY|Y$ to become AI controlled?
+MULTIPLAYER_RESYC코1=Resync
+FAILED_TO_CONNECT코0=Failed to connect
