--- a/province_names_l_english.properties
+++ b/province_names_l_english.properties
@@ -1,16 +1,16 @@
-europe코0=유럽
-europe_adj코0=유럽
-asia코0=아시아
-asia_adj코0=아시아
-africa코0=아프리카
-africa_adj코0=아프리카
-north_america코0=북아메리카
-north_america_adj코0=북아메리카
-south_america코0=남아메리카
-south_america_adj코0=남아메리카
-australia코0=오세아니아
-australia_adj코0=오세아니아
-middle_east코0=중동
-middle_east_adj코0=중동
-neighbor코0=인접국
-subject코0=속국
+europe코0=Europe
+europe_adj코0=European
+asia코0=Asia
+asia_adj코0=Asian
+africa코0=Africa
+africa_adj코0=African
+north_america코0=North America
+north_america_adj코0=North American
+south_america코0=South America
+south_america_adj코0=South American
+australia코0=Oceania
+australia_adj코0=Oceanian
+middle_east코0=Middle East
+middle_east_adj코0=Middle Eastern
+neighbor코0=Neighbor
+subject코0=Subject
