--- a/rules_l_english.properties
+++ b/rules_l_english.properties
@@ -1,9 +1,9 @@
-CAN_DECLARE_WAR_WITHOUT_WARGOAL_WHEN_IN_WAR코1=강대국과 전쟁 시 전쟁 목표 없이 인접국에 선전 포고 가능함.
-CAN_DECLARE_WAR_ON_SAME_IDEOLOGY코0=전쟁 목표 없이 같은 이념인 나라에 선전 포고 가능함.
-CAN_FORCE_GOVERNMENT코0=타국 정부에 같은 이념의 수용을 강요할 수 있음.
-CAN_GUARANTEE_OTHER_IDEOLOGIES코0=다른 이념을 가진 나라를 독립 보장할 수 있음.
-CAN_PUPPET코0=괴뢰국을 만들 수 있음.
-CAN_ONLY_JUSTIFY_WAR_ON_THREAT_COUNTRY코1=세계 긴장도를 야기하지 않은 나라에 전쟁 목표를 정당화할 수 있음.
-CAN_BOOST_OTHER_IDEOLOGIES코0=다른 이념의 인기도를 높일 수 있음
-CAN_JOIN_FACTIONS코0=세력에 가입할 수 있음
-CAN_JOIN_FACTIONS_NOT_ALLOWED_DIPLOMACY코0=$COUNTRY|NAME$은(는) 세력에 가입할 수 없음
+CAN_DECLARE_WAR_WITHOUT_WARGOAL_WHEN_IN_WAR코1=Can declare war on a neighbor without a wargoal when at war with a major.
+CAN_DECLARE_WAR_ON_SAME_IDEOLOGY코0=Can declare war on country with the same ideology group without a war goal.
+CAN_FORCE_GOVERNMENT코0=Can force government of another country to adopt the same ideology.
+CAN_GUARANTEE_OTHER_IDEOLOGIES코0=Can guarantee other ideologies.
+CAN_PUPPET코0=Can puppet a country.
+CAN_ONLY_JUSTIFY_WAR_ON_THREAT_COUNTRY코1=Can justify war goals against a country that have not generated world tension.
+CAN_BOOST_OTHER_IDEOLOGIES코0=Can boost popularity of other ideologies
+CAN_JOIN_FACTIONS코0=Can join factions
+CAN_JOIN_FACTIONS_NOT_ALLOWED_DIPLOMACY코0=$COUNTRY|NAME$ is not allowed to join factions.
