--- a/strategic_region_names_l_english.properties
+++ b/strategic_region_names_l_english.properties
@@ -1,200 +1,206 @@
-STRATEGICREGION_1코0=남잉글랜드
-STRATEGICREGION_2코0=북잉글랜드
-STRATEGICREGION_3코1=스코틀랜드
-STRATEGICREGION_4코0=아일랜드
-STRATEGICREGION_5코0=베네룩스 지역
-STRATEGICREGION_6코0=북서독일
-STRATEGICREGION_7코0=서부 독일
-STRATEGICREGION_8코0=동부 독일
-STRATEGICREGION_9코0=발트해
-STRATEGICREGION_10코0=남부 스웨덴
-STRATEGICREGION_11코0=남부 노르웨이
-STRATEGICREGION_12코0=북스칸디나비아
-STRATEGICREGION_13코0=핀란드
-STRATEGICREGION_14코0=트란스우랄
-STRATEGICREGION_16코0=북해
-STRATEGICREGION_17코0=동아프리카
-STRATEGICREGION_18코0=영국 해협
-STRATEGICREGION_19코0=북프랑스
-STRATEGICREGION_20코0=남프랑스
-STRATEGICREGION_21코0=알프스 지역
-STRATEGICREGION_22코0=체코슬로바키아
-STRATEGICREGION_23코0=이탈리아
-STRATEGICREGION_24코0=서부 발칸
-STRATEGICREGION_25코0=그리스
-STRATEGICREGION_26코0=동부 발칸
-STRATEGICREGION_27코0=북발칸
-STRATEGICREGION_28코0=중동
-STRATEGICREGION_29코0=중부 지중해
-STRATEGICREGION_30코0=흑해
-STRATEGICREGION_31코0=남인도
-STRATEGICREGION_32코0=남동태평양
-STRATEGICREGION_33코0=알래스카
-STRATEGICREGION_34코0=중앙아메리카
-STRATEGICREGION_35코0=남아메리카
-STRATEGICREGION_36코0=그린란드
-STRATEGICREGION_37코0=발트 3국
-STRATEGICREGION_38코0=서부 폴란드
-STRATEGICREGION_39코0=동부 폴란드
-STRATEGICREGION_40코1=트란스볼가
-STRATEGICREGION_41코1=이베리아 지역
-STRATEGICREGION_42코0=비스케이 만
-STRATEGICREGION_43코0=웨스턴 어프로치
-STRATEGICREGION_44코0=덴마크 해협
-STRATEGICREGION_45코0=노르웨이 해
-STRATEGICREGION_46코0=바렌츠 해
-STRATEGICREGION_47코1=이베리아 연안
-STRATEGICREGION_48코0=아프리카 연안
-STRATEGICREGION_49코0=북대서양 해령
-STRATEGICREGION_50코0=래브라도 해
-STRATEGICREGION_51코0=대서양 중부 간극
-STRATEGICREGION_52코0=멕시코만
-STRATEGICREGION_53코0=카리브해
-STRATEGICREGION_54코0=동부 연안
-STRATEGICREGION_55코0=뉴펀들랜드 해
-STRATEGICREGION_56코0=중앙 대서양
-STRATEGICREGION_57코0=사르가소 해
-STRATEGICREGION_58코0=중앙 대서양 간극
-STRATEGICREGION_59코0=데메라라 해저평원
-STRATEGICREGION_60코0=서인도양
-STRATEGICREGION_61코0=카보 베르데 해저평원
-STRATEGICREGION_62코0=기니 만
-STRATEGICREGION_63코0=아르헨티나 연안
-STRATEGICREGION_64코0=남 조지아 해
-STRATEGICREGION_65코0=아프리카 곶
-STRATEGICREGION_66코0=남부 중앙 대서양
-STRATEGICREGION_67코0=대서양-인도양 해령
-STRATEGICREGION_68코0=서부 지중해
-STRATEGICREGION_69코0=동부 지중해
-STRATEGICREGION_70코0=카스피 해
-STRATEGICREGION_71코0=동인도양
-STRATEGICREGION_72코0=말라카 해협
-STRATEGICREGION_73코0=타이 만
-STRATEGICREGION_74코0=동남인도양
-STRATEGICREGION_75코0=남중국해
-STRATEGICREGION_76코0=동중국해
-STRATEGICREGION_77코0=황해
-STRATEGICREGION_78코0=필리핀 해
-STRATEGICREGION_79코0=동해
-STRATEGICREGION_80코0=셀레베스 해
-STRATEGICREGION_81코0=산호 해
-STRATEGICREGION_82코0=카펀테리아 만
-STRATEGICREGION_83코0=솔로몬 해
-STRATEGICREGION_84코0=비스마르크 해
-STRATEGICREGION_85코0=서남인도양
-STRATEGICREGION_86코0=태즈먼 해
-STRATEGICREGION_87코0=오호츠크 해
-STRATEGICREGION_88코0=베링 해
-STRATEGICREGION_89코0=서부 연안
-STRATEGICREGION_90코0=일본 연안
-STRATEGICREGION_91코0=아라푸라 해
-STRATEGICREGION_92코0=티모르 해
-STRATEGICREGION_93코0=자와 해
-STRATEGICREGION_94코0=마리아나 지역
-STRATEGICREGION_95코0=서엠퍼러 해저 산열
-STRATEGICREGION_96코0=북엠퍼러 해저 산열
-STRATEGICREGION_97코0=동부 미크로네시아
-STRATEGICREGION_98코0=그레이트 호주만
-STRATEGICREGION_99코0=극동 인도양
-STRATEGICREGION_100코0=홍해
-STRATEGICREGION_101코0=벵골만
-STRATEGICREGION_102코0=동 아프리카 연안
-STRATEGICREGION_103코0=모잠비크 해협
-STRATEGICREGION_104코0=아라비아 해
-STRATEGICREGION_105코1=하와이 해령
-STRATEGICREGION_106코0=멕시코 연안
-STRATEGICREGION_107코0=서부 운하 지대
-STRATEGICREGION_108코0=남아메리카 연안
-STRATEGICREGION_109코0=페루 연안
-STRATEGICREGION_110코0=동 태평양 해팽
-STRATEGICREGION_111코0=북중태평양
-STRATEGICREGION_112코0=극남태평양
-STRATEGICREGION_113코0=남부 중앙 태평양 
-STRATEGICREGION_114코0=북태평양
-STRATEGICREGION_115코0=북동태평양
-STRATEGICREGION_116코0=이란
-STRATEGICREGION_117코0=동해안
-STRATEGICREGION_118코0=서해안
-STRATEGICREGION_119코0=남서부
-STRATEGICREGION_120코0=중부 미국
-STRATEGICREGION_121코0=동부 캐나다
-STRATEGICREGION_122코0=서부 캐나다
-STRATEGICREGION_123코0=멕시코
-STRATEGICREGION_124코0=북부 남아메리카
-STRATEGICREGION_125코0=브라질
-STRATEGICREGION_126코0=북아프리카
-STRATEGICREGION_127코0=사하라 사막
-STRATEGICREGION_128코0=이집트
-STRATEGICREGION_129코0=아나톨리아
-STRATEGICREGION_130코0=우크라이나
-STRATEGICREGION_131코0=벨라루스
-STRATEGICREGION_132코0=북부 전선
-STRATEGICREGION_133코0=중앙 러시아
-STRATEGICREGION_134코0=코카서스 지방
-STRATEGICREGION_135코0=쿠반 지방
-STRATEGICREGION_136코0=유라시아 초원
-STRATEGICREGION_137코0=서부 초원
-STRATEGICREGION_138코0=우랄 지역
-STRATEGICREGION_139코0=남아프리카
-STRATEGICREGION_140코0=사하라 이남 아프리카
-STRATEGICREGION_141코0=동부 인도
-STRATEGICREGION_142코0=동남아시아
-STRATEGICREGION_143코0=북중국
-STRATEGICREGION_144코0=서부 중국
-STRATEGICREGION_145코0=중앙아시아
-STRATEGICREGION_146코0=히말라야
-STRATEGICREGION_147코0=북시베리아
-STRATEGICREGION_148코0=러시아 극동 지역
-STRATEGICREGION_149코0=동부 시베리아
-STRATEGICREGION_150코0=북극 러시아
-STRATEGICREGION_151코0=서부 시베리아
-STRATEGICREGION_152코0=중앙아시아 대초원
-STRATEGICREGION_153코0=북인도
-STRATEGICREGION_154코0=일본 열도
-STRATEGICREGION_155코0=만주
-STRATEGICREGION_156코1=호주 남부
-STRATEGICREGION_157코0=뉴질랜드
-STRATEGICREGION_158코0=순다 열도
-STRATEGICREGION_159코0=보르네오
-STRATEGICREGION_160코0=필리핀
-STRATEGICREGION_161코0=아이슬란드
-STRATEGICREGION_162코0=아프가니스탄
-STRATEGICREGION_163코0=아마조나스
-STRATEGICREGION_164코0=동부 중국
-STRATEGICREGION_165코0=남부 중국
-STRATEGICREGION_166코0=허드슨 만
-STRATEGICREGION_167코0=뉴기니
-STRATEGICREGION_168코0=아드리아 해
-STRATEGICREGION_169코0=티레니아 해
-STRATEGICREGION_170코0=플로리다 해안
-STRATEGICREGION_171코0=북서 연안
-STRATEGICREGION_172코0=태평양 융기선
-STRATEGICREGION_173코0=동부 북해
-STRATEGICREGION_174코0=노르웨이 해안
-STRATEGICREGION_175코0=중앙 태평양
-STRATEGICREGION_176코0=북태평양 중부
-STRATEGICREGION_177코0=북서태평양
-STRATEGICREGION_178코0=서 폴리네시아
-STRATEGICREGION_179코0=프랑스령 폴리네시아
-STRATEGICREGION_180코0=미크로네시아 간극
-STRATEGICREGION_181코0=마다가스카르
-STRATEGICREGION_182코0=북서아프리카
-STRATEGICREGION_183코0=중부아프리카
-STRATEGICREGION_184코0=남서아프리카
-STRATEGICREGION_185코0=남동아프리카
-STRATEGICREGION_186코0=한국
-STRATEGICREGION_187코0=수마트라
-STRATEGICREGION_188코0=말레이
-STRATEGICREGION_189코0=미얀마
-STRATEGICREGION_190코1=파키스탄
-STRATEGICREGION_191코0=북노르웨이
-STRATEGICREGION_192코0=북스웨덴
-STRATEGICREGION_193코2=북호주
-STRATEGICREGION_194코0=호주 동부
-STRATEGICREGION_195코0=호주 중부
-STRATEGICREGION_196코1=아라비아
-STRATEGICREGION_197코0=뉴잉글랜드
-STRATEGICREGION_198코0=미드웨스트
-STRATEGICREGION_199코0=로키 산맥
-STRATEGICREGION_200코1=칭하이
-STRATEGICREGION_201코0=북안데스
+STRATEGICREGION_1코0=Southern England
+STRATEGICREGION_2코0=Northern England
+STRATEGICREGION_3코1=Scotland
+STRATEGICREGION_4코0=Ireland
+STRATEGICREGION_5코0=Benelux Region
+STRATEGICREGION_6코0=North-West Germany
+STRATEGICREGION_7코0=Western Germany
+STRATEGICREGION_8코0=Eastern Germany
+STRATEGICREGION_9코1=Upper Baltic Sea
+STRATEGICREGION_10코0=Southern Sweden
+STRATEGICREGION_11코0=Southern Norway
+STRATEGICREGION_12코0=Northern Scandinavia
+STRATEGICREGION_13코0=Finland
+STRATEGICREGION_14코0=Trans-Urals
+STRATEGICREGION_16코0=North Sea
+STRATEGICREGION_17코0=East Africa
+STRATEGICREGION_18코0=English Channel
+STRATEGICREGION_19코0=Northern France
+STRATEGICREGION_20코0=Southern France
+STRATEGICREGION_21코0=Alpine Region
+STRATEGICREGION_22코0=Czechoslovakia
+STRATEGICREGION_23코0=Italy
+STRATEGICREGION_24코0=Western Balkans
+STRATEGICREGION_25코0=Greece
+STRATEGICREGION_26코0=Eastern Balkans
+STRATEGICREGION_27코0=Northern Balkans
+STRATEGICREGION_28코0=Middle East
+STRATEGICREGION_29코0=Central Mediterranean Sea
+STRATEGICREGION_30코0=Black Sea
+STRATEGICREGION_31코0=Southern India
+STRATEGICREGION_32코0=South-Eastern Pacific
+STRATEGICREGION_33코0=Alaska
+STRATEGICREGION_34코0=Central America
+STRATEGICREGION_35코0=South America
+STRATEGICREGION_36코0=Greenland
+STRATEGICREGION_37코0=Baltic States
+STRATEGICREGION_38코0=Western Poland
+STRATEGICREGION_39코0=Eastern Poland
+STRATEGICREGION_40코1=Transvolga
+STRATEGICREGION_41코1=Iberian Region
+STRATEGICREGION_42코0=Bay of Biscay
+STRATEGICREGION_43코0=Western Approaches
+STRATEGICREGION_44코0=Denmark Strait
+STRATEGICREGION_45코0=Norwegian Sea
+STRATEGICREGION_46코0=Barents Sea
+STRATEGICREGION_47코1=Iberian Coast
+STRATEGICREGION_48코0=African Coast
+STRATEGICREGION_49코0=North Atlantic Ridge
+STRATEGICREGION_50코0=Labrador Sea
+STRATEGICREGION_51코0=Mid Atlantic gap
+STRATEGICREGION_52코0=Gulf of Mexico
+STRATEGICREGION_53코0=Caribbean Sea
+STRATEGICREGION_54코0=Eastern Seaboard
+STRATEGICREGION_55코0=Newfoundland Sea
+STRATEGICREGION_56코0=Mid Atlantic
+STRATEGICREGION_57코0=Sargasso Sea
+STRATEGICREGION_58코0=Central Atlantic Gap
+STRATEGICREGION_59코0=Demerara Plain
+STRATEGICREGION_60코0=West Indian Ocean
+STRATEGICREGION_61코0=Cap Verde Plain
+STRATEGICREGION_62코0=Gulf Of Guinea
+STRATEGICREGION_63코0=Argentine Coast
+STRATEGICREGION_64코0=South Georgia Sea
+STRATEGICREGION_65코0=Cape of Africa
+STRATEGICREGION_66코0=South Central Atlantic
+STRATEGICREGION_67코0=Atlantic-Indian Ridge
+STRATEGICREGION_68코0=Western Mediterranean Sea
+STRATEGICREGION_69코0=Eastern Mediterranean Sea
+STRATEGICREGION_70코0=Caspian Sea
+STRATEGICREGION_71코0=East Indian Ocean
+STRATEGICREGION_72코0=Straits of Malacca
+STRATEGICREGION_73코0=Gulf of Thailand
+STRATEGICREGION_74코0=South East Indian Ocean
+STRATEGICREGION_75코0=South China Sea
+STRATEGICREGION_76코0=East China Sea
+STRATEGICREGION_77코0=Yellow Sea
+STRATEGICREGION_78코0=Philippine Sea
+STRATEGICREGION_79코0=Sea of Japan
+STRATEGICREGION_80코0=Celebes Sea
+STRATEGICREGION_81코0=Coral Sea
+STRATEGICREGION_82코0=Gulf of Carpentaria
+STRATEGICREGION_83코0=Solomon Sea
+STRATEGICREGION_84코0=Bismarck Sea
+STRATEGICREGION_85코0=South West Indian Ocean
+STRATEGICREGION_86코0=Tasman Sea
+STRATEGICREGION_87코0=Sea of Okhotsk
+STRATEGICREGION_88코0=Bering Sea
+STRATEGICREGION_89코0=Western Seaboard
+STRATEGICREGION_90코0=Coast of Japan
+STRATEGICREGION_91코0=Arafura Sea
+STRATEGICREGION_92코0=Timor Sea
+STRATEGICREGION_93코0=Java Sea
+STRATEGICREGION_94코0=Mariana Region
+STRATEGICREGION_95코0=West Emperor Chain
+STRATEGICREGION_96코0=North Emperor Chain
+STRATEGICREGION_97코0=Eastern Micronesia
+STRATEGICREGION_98코0=Great Australian Bight
+STRATEGICREGION_99코0=Far Eastern Indian Ocean
+STRATEGICREGION_100코0=Red Sea
+STRATEGICREGION_101코0=Bay of Bengal
+STRATEGICREGION_102코0=East African Coast
+STRATEGICREGION_103코0=Mozambique Channel
+STRATEGICREGION_104코0=Arabian Sea
+STRATEGICREGION_105코1=Hawaii Ridge
+STRATEGICREGION_106코0=Mexican Coast
+STRATEGICREGION_107코0=Western Canal zone
+STRATEGICREGION_108코0=South American coast
+STRATEGICREGION_109코0=Peruvian Coast
+STRATEGICREGION_110코0=East Pacific Rise
+STRATEGICREGION_111코0=North Central Pacific
+STRATEGICREGION_112코0=Far South Pacific
+STRATEGICREGION_113코0=South Central Pacific
+STRATEGICREGION_114코0=North Pacific
+STRATEGICREGION_115코0=North East Pacific
+STRATEGICREGION_116코0=Iran
+STRATEGICREGION_117코0=East Coast
+STRATEGICREGION_118코0=West Coast
+STRATEGICREGION_119코0=South West
+STRATEGICREGION_120코0=Central USA
+STRATEGICREGION_121코0=Eastern Canada
+STRATEGICREGION_122코0=Western Canada
+STRATEGICREGION_123코1=Transvolcanic Belt
+STRATEGICREGION_124코0=Northern South America
+STRATEGICREGION_125코0=Brazil
+STRATEGICREGION_126코0=North Africa
+STRATEGICREGION_127코0=Sahara Desert
+STRATEGICREGION_128코0=Egypt
+STRATEGICREGION_129코0=Asia minor
+STRATEGICREGION_130코0=Ukraine
+STRATEGICREGION_131코0=Belarus
+STRATEGICREGION_132코0=Northern Front
+STRATEGICREGION_133코0=Central Russia
+STRATEGICREGION_134코0=Caucasus Region
+STRATEGICREGION_135코0=Kuban Region
+STRATEGICREGION_136코0=Great Steppe
+STRATEGICREGION_137코0=Western Steppe
+STRATEGICREGION_138코0=Ural Region
+STRATEGICREGION_139코0=South Africa
+STRATEGICREGION_140코0=Sub-Saharan Africa
+STRATEGICREGION_141코0=Eastern India
+STRATEGICREGION_142코0=South East Asia
+STRATEGICREGION_143코0=Northern China
+STRATEGICREGION_144코0=Western China
+STRATEGICREGION_145코0=Central Asia
+STRATEGICREGION_146코0=Himalayas
+STRATEGICREGION_147코0=Northern Siberia
+STRATEGICREGION_148코0=Russian Far East
+STRATEGICREGION_149코0=Eastern Siberia
+STRATEGICREGION_150코0=Arctic Russia
+STRATEGICREGION_151코0=Western Siberia
+STRATEGICREGION_152코0=Central Steppe
+STRATEGICREGION_153코0=Northern India
+STRATEGICREGION_154코0=Home Islands
+STRATEGICREGION_155코0=Manchuria
+STRATEGICREGION_156코1=Southern Australia
+STRATEGICREGION_157코0=New Zealand
+STRATEGICREGION_158코0=Sunda Islands
+STRATEGICREGION_159코0=Borneo
+STRATEGICREGION_160코0=Philippines
+STRATEGICREGION_161코0=Iceland
+STRATEGICREGION_162코0=Afghanistan
+STRATEGICREGION_163코0=Amazonas
+STRATEGICREGION_164코0=Eastern China
+STRATEGICREGION_165코0=Southern China
+STRATEGICREGION_166코0=Hudson Bay
+STRATEGICREGION_167코0=New Guinea
+STRATEGICREGION_168코0=Adriatic Sea
+STRATEGICREGION_169코0=Tyrrhenian Sea
+STRATEGICREGION_170코0=Florida Coast
+STRATEGICREGION_171코0=Northwest Coast
+STRATEGICREGION_172코0=Pacific Line Ridge
+STRATEGICREGION_173코0=Eastern North Sea
+STRATEGICREGION_174코0=Norwegian Coast
+STRATEGICREGION_175코0=Central Pacific
+STRATEGICREGION_176코0=Central North Pacific
+STRATEGICREGION_177코0=Western North Pacific
+STRATEGICREGION_178코0=West Polynesia
+STRATEGICREGION_179코0=French Polynesia
+STRATEGICREGION_180코0=Micronesian Gap
+STRATEGICREGION_181코0=Madagascar
+STRATEGICREGION_182코0=North West Africa
+STRATEGICREGION_183코0=Central Africa
+STRATEGICREGION_184코0=South West Africa
+STRATEGICREGION_185코0=South East Africa
+STRATEGICREGION_186코0=Korea
+STRATEGICREGION_187코0=Sumatra
+STRATEGICREGION_188코0=Malaya
+STRATEGICREGION_189코0=Burma
+STRATEGICREGION_190코1=Pakistan
+STRATEGICREGION_191코0=Northern Norway
+STRATEGICREGION_192코0=Northern Sweden
+STRATEGICREGION_193코2=Northern Australia
+STRATEGICREGION_194코0=Eastern Australia
+STRATEGICREGION_195코0=Central Australia
+STRATEGICREGION_196코1=Arabia
+STRATEGICREGION_197코0=New England
+STRATEGICREGION_198코0=Midwest
+STRATEGICREGION_199코0=Rocky Mountains
+STRATEGICREGION_200코1=Qinghai
+STRATEGICREGION_201코0=Northern Andes
+STRATEGICREGION_202코0=Aegean Sea
+STRATEGICREGION_203코0=Persian Gulf
+STRATEGICREGION_204코0=Sierra Madre
+STRATEGICREGION_205코0=Yucatan Peninsula
+STRATEGICREGION_206코0=Lower Baltic Sea
+STRATEGICREGION_207코0=Danish Belts
