--- a/terrain_l_english.properties
+++ b/terrain_l_english.properties
@@ -1,13 +1,32 @@
-unknown코0=알려지지 않음
-ocean코0=바다
-lakes코0=호수
-forest코0=숲
-hills코0=언덕
-mountain코0=산악
-plains코0=평야
-urban코0=도시
-jungle코0=밀림
-marsh코0=습지
-desert코0=사막
-UNIT_TERRAIN_MODIFIER코0=부대 효과\:
-MOVEMENT_COST코0=이 지형 유형에서의 이동 비용 x$VALUE|H$
+unknown코0=Unknown
+unknown_desc코0=
+ocean코0=Ocean
+ocean_desc코0=
+lakes코0=Lake
+lakes_desc코0=
+forest코0=Forest
+forest_desc코0=
+hills코0=Hills
+hills_desc코0=
+mountain코0=Mountain
+mountain_desc코0=
+plains코0=Plains
+plains_desc코0=
+urban코0=Urban
+urban_desc코0=
+jungle코0=Jungle
+jungle_desc코0=
+marsh코0=Marsh
+marsh_desc코0=
+desert코0=Desert
+desert_desc코0=
+water_fjords코0=Fjords and Archipelagos
+water_fjords_desc코0=
+water_shallow_sea코0=Shallow Sea
+water_shallow_sea_desc코0=
+water_deep_ocean코0=Deep Oceans
+water_deep_ocean_desc코0=
+water_arctic코0=Arctic Waters
+water_arctic_desc코0=
+UNIT_TERRAIN_MODIFIER코0=Unit effects:
+MOVEMENT_COST코0=Movement cost within this terrain type x$VALUE|H$
