--- a/trade_l_english.properties
+++ b/trade_l_english.properties
@@ -1,133 +1,136 @@
-TRADE_ALL_FACTORY_OUT_TITLE코0=모든 공장을 무역에
-TRADE_ALL_FACTORY_OUT_DESC코0=정말로 모든 공장이 무역 상품을 생산하도록 하시겠습니까?\n\n어느 건물도 건설 할 수 없게 됩니다\!
-TRADE_FILTER_BY코0=$KEY|H$ 수출국 목록
+TRADE_ALL_FACTORY_OUT_TITLE코0=All Factories for Trade
+TRADE_ALL_FACTORY_OUT_DESC코0=Are you sure that you want to have all your factories producing trade goods?\n\nYou will not be able to construct any buildings!
+TRADE_FILTER_BY코0=Filter by: $KEY|H$
 TRADE_VALUE코0=$VALUE|Y0$
 TRADE_VALUE_FRACTION코0=$VALUE|Y0$/$TOT|Y0$
 TRADE_VALUE_FRACTION_NOT_FILLED코0=$VALUE|R0$/$TOT|Y0$
 TRADE_IMPORT_VALUE코0=$VALUE|Y$     $TOT|Y$
 TRADE_EXPORT_VALUE코0=$VALUE|Y$     $TOT|Y$
-TRADEOFFER_FACTORIES_DESC_LABEL코0=수입량\: $VALUE|Y$\n할당될 민간 공장\: $CIC|Y$
-TRADE_RESET코0=§g(슬라이더를 0에 두면 거래 취소)§\!
-TRADEOFFER_FREE_CONVOY_DESC_LABEL코1=우리는 운용가능한 수송선단 $VAL|H$척을 보유하고 있고 이 무역을 위해서 $REQ|H$가 필요합니다.
-TRADEOFFER_CONVOY_PENALTY_DESC_LABEL코0=§R다른 무역로로부터 이 무역로로 수송선이 재분배 되고 무역 효율이 떨어집니다.§\!
-TRADEOFFER_CONVOY코0=§R우리는 수송선이 없습니다§\!
-TRADEVIEW_RES_PRODUCED코2=착출\:
-TRADEVIEW_RES_PRODUCTION코2=생산\:
-TRADEVIEW_RES_SURPLUS코0=잉여분\:
-TRADEVIEW_RES_IMPORTED코0=수입\:
-TRADEVIEW_RES_EXPORTED코0=수출\:
-TRADE_PRODUCED코0=§T생산량\: $VALUE|H$§\!
-TRADE_IMPORTED코0=§T수입량\: $VALUE|H$§\!
-TRADE_EXPORTED코0=§T수출량\: $VALUE|H$§\!
-TRADES_MODIFIED코0=무역량 변동치
-TRADE_WAS_MODIFIED코0=$COUNTRY|H$와의 $RESOURCE|H$ 무역량이 변동되었습니다.
-TRADE_WAS_TERMINATED코0=$COUNTRY|H$와의 $RESOURCE|H$ 무역이 종료되었습니다.
-TRADE_WAS_TERMINATED_COUNTRY코0=\ $COUNTRY|H$ 와의 무역은 낮은 무역 영향력으로 인해 종료되었습니다.
-LACK_OF_CIVIL_FACTORIES코0=민간 공장이 부족합니다.
-TRADEVIEW_RES_PRODUCED_DETAILS코0=우리는 $TOT|Y$ $RES|Y$을 생산합니다
-TRADEVIEW_RES_PRODUCED_DETAILS_LINE코0=-  $LOC|H$에서 $TYPE|H$이(가) $NUM|H$만큼 생산됨
-TRADEVIEW_RES_PRODUCED_DETAILS_LINE_PENALTY코0=- $LOC|H$의 $TYPE|H$ $NUM|R$/$MAX|H$ 개 이용 가능 (§R$PEN|%$ 운송 불이익§\!)
-TRADEVIEW_RES_PRODUCED_DETAILS_LINE_LOCKED코0=- $LOC|H$의 $TYPE|H$ $NUM|R$/$MAX|H$ 개 이용 가능
-TRADEVIEW_RES_PRODUCED_BY_BUILDING_DETAILS코0=- $NUM|H$ 만큼 건물에서 생산됨
-TRADEVIEW_RES_PRODUCED_DETAILS_LINE_MODIFIERS코0=주 변동치\: $MOD$
-TRADEVIEW_RES_PRODUCED_DETAILS_LINE_ROUTE코0=$DEL$
-TRADEVIEW_RES_USED_DETAILS코0=§T우리 생산 라인이 $RES|H$을 $NUM|H$개 소비중입니다.§\!
-TRADEVIEW_RES_NEEDED_NONE코0=§T우리의 생산 라인은 $RES|H$ 유닛을 추가하기 위해 무역을 할 필요가 없습니다. §\!
-TRADEVIEW_RES_NEEDED_DETAILS코0=§T우리 생산 라인에 $RES|H$이(가) 부족합니다. 생산 라인이 최고 속도로 가동하려면 $NUM|0H$개 이상 필요합니다.§\!
-TRADEVIEW_RES_CONSUMPTION_PROD_LINE코1=- $PROD|H$의 생산에 $TOTAL|H$개 중 $NUM|H$개 사용하고 있습니다.
-TRADE_ROUTE_DELIVERY_TYPE_LOCKED코0=§R운송로가 봉쇄되어 있습니다§\!
-TRADE_ROUTE_DELIVERY_TYPE_LAND코0=§T§H육지§\!에서 $VAL|H$ 운송 중§\!
-TRADE_ROUTE_DELIVERY_TYPE_SEA코0=§T필요한 $TOT|H$의 수송선 중 $CON|H$개를 이용하여 §H바다§\!를 통해 $VAL|H$을 운송 중.§\!
-CONVOYS_USAGE_DESC코0=§T우리는 수송선 $TOT|H$ 척이 있습니다.\n총 사용량\: $USED|H$\n사용량/수요\:\n - 해상 상륙 전투 계획을 위해\: $B_USE|H$/$B_NEED|H$\n - 부대 수송을 위해\: $T_USE|H$/$T_NEED|H$\n - 무역과 운송을 위해\: $S_USE|H$/$S_NEED|H$\n사용되지 않고 남아있는 수\: $LEFT|H$§\!
-CONVOYS코0=수송선
-CANCEL_RESOURCE_IMPORT코0=모든 자원 수입을 취소
-CONVOYS_USAGE_DELAYED코0=수송선은 해외에서 해상으로 자원 수입하거나 해외로 자원을 수출할 때 사용되며, 점령지에 있는 육군 보급 시에도 사용됩니다. 
-RESOURCE_DETAILS_SURPLUS코0=우리나라는 $TOTAL|H $의 $RESOURCE|H$을(를) 생산하고 있습니다. \n\n생산 라인의 요구량 \: $NEEDED|H$  \n잉여분 \: $SURPLUS|H$
-RESOURCE_DETAILS_DEFICIT코0=우리나라는 $TOTAL|H$의 $RESOURCE|H$을(를) 생산하고 있습니다. \n\n생산 라인의 요구량 \: $NEEDED|H$ \n부족분 \: $DEFICIT| H$
+TRADEOFFER_FACTORIES_DESC_LABEL코0=Buy amount: $VALUE|Y$\nFor civilian factories: $CIC|Y$
+TRADE_RESET코0=§g(Set slider to 0 to cancel trade)§!
+TRADEOFFER_FREE_CONVOY_DESC_LABEL코1=We have $VAL|H$ available convoys and require $REQ|H$ for this trade.
+TRADEOFFER_CONVOY_PENALTY_DESC_LABEL코0=§RConvoys from other trade routes will be redistributed to this trade route and decrease their efficiency§!
+TRADEOFFER_CONVOY코0=§RWe have no convoys§!
+TRADEVIEW_RES_PRODUCED코2=Extracted:
+TRADEVIEW_RES_PRODUCTION코3=Need:
+TRADEVIEW_RES_SURPLUS코0=Surplus:
+TRADEVIEW_RES_IMPORTED코0=Imported:
+TRADEVIEW_RES_EXPORTED코0=Exported:
+TRADE_PRODUCED코0=§TProduced: $VALUE|H$§!
+TRADE_IMPORTED코0=§TImported: $VALUE|H$§!
+TRADE_EXPORTED코0=§TExported: $VALUE|H$§!
+TRADES_MODIFIED코0=Trade Was Modified
+TRADE_WAS_MODIFIED코0=The $RESOURCE|H$ trade with $COUNTRY|H$ was modified.
+TRADE_WAS_TERMINATED코0=The $RESOURCE|H$ trade with $COUNTRY|H$ was terminated.
+TRADE_WAS_TERMINATED_COUNTRY코0=Trade with $COUNTRY|H$ was terminated due to the low trade influence.
+LACK_OF_CIVIL_FACTORIES코0=Because of lack of civilian factories.
+TRADEVIEW_RES_PRODUCED_DETAILS코0=We produce $TOT|Y$ $RES|Y$
+TRADEVIEW_RES_PRODUCED_DETAILS_LINE코1= - $NUM|H$ $TYPE|H$ available in $LOC|H$$ORIGINCONTROLLER$
+TRADEVIEW_RES_PRODUCED_DETAILS_LINE_PENALTY코1= - $NUM|R$/$MAX|H$ $TYPE|H$ available in $LOC|H$ (§R$PEN|%$ delivery penalty§!)$ORIGINCONTROLLER$
+TRADEVIEW_RES_PRODUCED_NO_RIGHTS코0= - $NUM|R$/$MAX|H$ $TYPE|H$ available in $LOC|H$ ($RIGHTSHOLDER|H$ has rights to these resources.)
+TRADEVIEW_RES_PRODUCED_ORIGIN_CONTROLLED_BY코0= (Rights given by $ORIGINCONTROLLER|H$)
+TRADEVIEW_RES_PRODUCED_DETAILS_LINE_LOCKED코1= - $NUM|R$/$MAX|H$ $TYPE|H$ available in $LOC|H$$ORIGINCONTROLLER$
+TRADEVIEW_RES_PRODUCED_BY_BUILDING_DETAILS코0= - $NUM|H$ are produced by buildings
+TRADEVIEW_RES_PRODUCED_DETAILS_LINE_MODIFIERS코0=   State modifiers: $MOD$
+TRADEVIEW_RES_PRODUCED_DETAILS_LINE_ROUTE코0=   $DEL$
+TRADEVIEW_RES_USED_DETAILS코0=§TOur production lines are consuming $NUM|H$ $RES|H$.§!
+TRADEVIEW_RES_NEEDED_NONE코0=§TOur production lines have no need for us to trade for additional units of $RES|H$.§!
+TRADEVIEW_RES_NEEDED_DETAILS코0=§TOur production lines has insufficient $RES|H$. We need $NUM|0H$ more so our production lines will operate at full speed. §!
+TRADEVIEW_RES_CONSUMPTION_PROD_LINE코1= - Production of $PROD|H$ uses $NUM|H$ of $TOTAL|H$ units.
+TRADE_ROUTE_DELIVERY_TYPE_LOCKED코0=§RDelivery blocked§!
+TRADE_ROUTE_DELIVERY_TYPE_LAND코0=§TDelivering $VAL|H$ by §Hland§!§!
+TRADE_ROUTE_DELIVERY_TYPE_SEA코0=§TDelivering $VAL|H$ by §Hsea§! using $CON|H$ convoys out of the $TOT|H$ needed.§!
+CONVOYS_USAGE_DESC코0=§TWe have $TOT|H$ convoys.\nUsed total: $USED|H$\nUse/Need:\n - For naval invasion battle plans: $B_USE|H$/$B_NEED|H$\n - For transferring troops: $T_USE|H$/$T_NEED|H$\n - For trade and supply: $S_USE|H$/$S_NEED|H$\nRemains unused: $LEFT|H$§!
+CONVOYS코0=Convoys
+CANCEL_RESOURCE_IMPORT코0=Cancel all resource imports
+CONVOYS_USAGE_DELAYED코0=Convoys are used when importing resources by sea from other countries, transferring our resources produced internally, and delivering supplies to our land forces in the colonies.
+RESOURCE_DETAILS_SURPLUS코0=We have $TOTAL|H$ units of $RESOURCE|H$ for use.\n\nNeeded by Production Lines: $NEEDED|H$\nSurplus: $SURPLUS|H$
+RESOURCE_DETAILS_DEFICIT코0=We have $TOTAL|H$ units of $RESOURCE|H$ for use.\n\nNeeded by Production Lines: $NEEDED|H$\nDeficit: $DEFICIT|H$
+RESOURCE_DETAILS_FUEL코2=We have $TOTAL|H$ units of $RESOURCE|H$ for use.\n\nCurrent consumption: $ACTIVE_FUEL|H$\nMaximum consumption: $POTENTIAL_FUEL|H$
 MAP_ICON_NAME코0=($VAL$)
 MAP_ICON_VAL코0=$VAL$/$MAX$
-INSUFFICIENT_CONVOYS_THEY코0=($WHO|H$는 충분한 수송선을 보유하고 있지 않습니다 $ACTUAL$/$REQUIRED$)
-INSUFFICIENT_CONVOYS_US코0=(§H우리§\!는 수송선이 충분하지 않습니다)
-NO_LEGAL_TRANSPORT_PATH코0=(§R약탈 당하는 무역로입니다§\!)
-TRADEVIEW_EXPORT_DETAILS코1=@$TAG$$WHO|H$에서는 $RES|H$이(가) $TOT|H$만큼 생산되고 수출량을 제외하면 $AVAILABLE|H$만큼 남습니다.\n현재 수출\:
-TRADEVIEW_EXPORT_DETAILS_DEFICIT코0=@$TAG$$WHO|H$에서 나오는 $RES|H$ $TOT|H$ 중 §H0§\! 가 수출을 위해 남았고 $AVAILABLE|H$의 부족분은 모든 수출거래로 채워집니다.\n현재 수출\:
-TRADEVIEW_EXPORT_DETAILS_US코1=§H우리§\!§T는 생산된 $RES|H$ $TOT|H$ 중 $AVAILABLE|H$ 만큼 수출하고 있습니다.\n현재 수출\:
-TRADEVIEW_EXPORT_DETAILS_US_DEFICIT코0=§T§H우리§\!는 $TOT|H$ $RES|H$ 의 부족으로 §H0§\! 수출하고 있고 모든 수출거래를 채우기 위해 $AVAILABLE|H$ 부족합니다.\n현재 수출\:
-TRADEVIEW_EXPORT_DETAILS_LINE_THEY코0=- $NUM$/$TOT$을 @$TAG$$WHO|H$에게 수출
-TRADEVIEW_EXPORT_DETAILS_LINE_US코0=- $NUM$/$TOT$을 §H우리§\!에게 수출
-TRADEVIEW_EXPORT_DETAILS_NONE코1=§T없음§\!
-TRADEVIEW_IMPORT_DETAILS코0=$WHO|H$은(는) $RES|H$ $TOT|H$만큼을 $NUM|H$개국에서 수입 중\:
-TRADEVIEW_IMPORT_DETAILS_US코0=§T우리는 $RES|H$ $TOT|H$만큼을 $NUM|H$개국에서 수입 중 \:
-TRADEVIEW_IMPORT_DETAILS_NOTHING코0=§T우리는 $RES|H$을(를) 수입하고 있지 않습니다
-TRADEVIEW_IMPORT_DETAILS_LINE_THEY코0=- $NUM$/$TOT$개를 @$TAG$$WHO|H$에게서 수입
-TRADEVIEW_IMPORT_DETAILS_LINE_US코0=- §G우리§\!에게서 $NUM$/$TOT$개를 수입중
-TRADEOFFER_DESC코0=$WHO|H$은(는) 최대 $MAX|H$의 $RES|H$을(를) 수출할 수 있습니다. \n우리는 그 중 $LIM|H$까지 수입할 수 있습니다.
-TRADE_MAX_EXPORT_DETAILS_CANT_TRADE코0=- §R외교 관계가 좋지 못해 무역을 할 수 없습니다.§\!
-TRADE_MAX_EXPORT_DETAILS_CIC_LIMIT코0=- §T우리 수입량은 $LIM|H$로 제한됩니다. 가용 가능한 민간 공장이 $NUM|H$ 밖에 없기 때문입니다 . §H1 $RES$§\! 비용은 $COS|H$ 민간공장 입니다.§\!
-TRADE_MAX_EXPORT_DETAILS_NO_IC코0=- §R지불할 민간 공장이 더 이상 없습니다, 수입 비용을 지불할 사용되지 않는 민간공장이 필요합니다.§\!
-TRADE_MAX_EXPORT_DETAILS_EXISTING_EXPORT코0=- §G우리는 이미  $RES$을(를) $NUM|H$만큼 수입중입니다.§\!
-TRADE_TRADE코0=무역
-TRADE_ROUTE_CONVOY_IMPORT코1=$FR|H$(으)로부터 $RES|H$을(를) 수입 ( $CONVOYS|Y$ £convoy_texticon )
-TRADE_ROUTE_CONVOY_EXPORT코1=$TO|H$로 $RES|H$을(를) 수출  ( $CONVOYS|Y$ £convoy_texticon )
-TRADE_ROUTE_CONVOY_LEND_LEASE_IMPORT코0=$FR|H$ ( $CONVOYS|Y$ £convoy_texticon )로부터 무기 대여
-TRADE_ROUTE_CONVOY_LEND_LEASE_EXPORT코0=$TO|H$ ( $CONVOYS|Y$ £convoy_texticon )로 무기 대여 하는 중
-TRADE_ROUTE_CONVOY_PRODUCTION_TRANSFER코0=$FROM|H$에서 $TO|H$로 수송( $CONVOYS|Y$ £convoy_texticon )
-TRADE_ROUTE_CONVOY_SUPPLIES_TRANSFER코1=$FROM|H$가 $TO|H$ - $SUPPLIES|Y$ £supply_texticon 에게 ( $CONVOYS|Y$ £convoy_texticon )
-TRADE_ROUTE_CONVOY_SUPPLIES_HEADER코0=보급품 수송\:\n
-TRADE_ROUTE_CONVOY_PRODUCTION_HEADER코0=자원 수송\:\n
-TRADE_ROUTE_CONVOY_IMPORT_HEADER코0=수입품 수송\:\n
-TRADE_ROUTE_CONVOY_EXPORT_HEADER코0=수출품 수송\:\n
-ROUTE_EFFICIENCY코0=\n    항로 효율\: $EFF|%R$
-TRADE_WITH_COUNTRY코0=§G@$TAG$$COUNTRY|H$와 무역하려면 클릭§\!
-TRADE_HAVE_ACTIVE코0=우리는 이 나라와 무역을 §G하고 있습니다§\!.
-TRADE_CANT_REACH코0=@$TAG$$COUNTRY|H$ §R은 $RESOURCE|H$을 생산 중이지만, 가능한 무역로가 없습니다.§\!
-TRADE_IS_ENEMY코0=@$TAG$$COUNTRY|H$ §R은(는) $RESOURCE|H$을(를) 생산중이지만, 그들과 전쟁중인 동안 우리에게 수출하지 않을 것입니다.§\!
-TRADE_IS_LOW_INFLUANCE코0=@$TAG$$COUNTRY|H$ §R은 $RESOURCE|H$을 생산 중이지만, 우리의 무역 영향력이 너무 낮습니다§\!
-TRADE_NO_RESOURCE코0=@$TAG$$COUNTRY|H$ §R은 $RESOURCE|H$을 생산 중이지만, 전혀 수출중이지 않습니다.§\!
-TRADEVIEW_RES_EXPORT_DETAILS코0=우리는 우리의 무역법 때문에 $RES|H$를 $NUM|H0$만큼 수출 중입니다.
-TRADEVIEW_RES_EXPORT_NONE코0=우리는 어떠한 $RES|H$도 수출하지 않습니다.
+INSUFFICIENT_CONVOYS_THEY코0=($WHO|H$ has insufficient convoys $ACTUAL$/$REQUIRED$)
+INSUFFICIENT_CONVOYS_US코0=(§HWe§! have insufficient convoys)
+NO_LEGAL_TRANSPORT_PATH코0=(§Rno legal transport path§!)
+TRADEVIEW_EXPORT_DETAILS코1=Out of $TOT|H$ $RES|H$ @$TAG$$WHO|H$ has $AVAILABLE|H$ left for export.\nCurrent exports:
+TRADEVIEW_EXPORT_DETAILS_DEFICIT코0=Out of $TOT|H$ $RES|H$ @$TAG$$WHO|H$ has §H0§! left for export and a deficit of $AVAILABLE|H$ to fulfill all existing exports deals.\nCurrent exports:
+TRADEVIEW_EXPORT_DETAILS_US코1=Out of $TOT|H$ $RES|H$ §T§Hwe§! have $AVAILABLE|H$ left for export.\nCurrent exports:§!
+TRADEVIEW_EXPORT_DETAILS_US_DEFICIT코0=Out of $TOT|H$ $RES|H$ §T§HWe§! have §H0§! left for export and a deficit of $AVAILABLE|H$ to fulfill all existing exports deals.\nCurrent exports:§!
+TRADEVIEW_EXPORT_DETAILS_LINE_THEY코0= - $NUM$/$TOT$ to @$TAG$$WHO|H$
+TRADEVIEW_EXPORT_DETAILS_LINE_US코0= - $NUM$/$TOT$ to §Hus§!
+TRADEVIEW_EXPORT_DETAILS_NONE코1=§TNothing§!
+TRADEVIEW_IMPORT_DETAILS코0=$WHO|H$ is importing $TOT|H$ $RES|H$ from $NUM|H$ countries:
+TRADEVIEW_IMPORT_DETAILS_US코0=§TWe are importing $TOT|H$ $RES|H$ from $NUM|H$ countries:§!
+TRADEVIEW_IMPORT_DETAILS_NOTHING코0=§TWe are not importing $RES|H$§!
+TRADEVIEW_IMPORT_DETAILS_LINE_THEY코0= - Imports $NUM$/$TOT$ from @$TAG$$WHO|H$
+TRADEVIEW_IMPORT_DETAILS_LINE_US코0= - Importing $NUM$/$TOT$ from §Gus§!
+TRADEOFFER_DESC코0=$WHO|H$ can export up to $MAX|H$ units of $RES|H$.\nWe can only trade for up to $LIM|H$ units.
+TRADE_MAX_EXPORT_DETAILS_CANT_TRADE코0= - §RRelation does not allow to trade with them.§!
+TRADE_MAX_EXPORT_DETAILS_CIC_LIMIT코0= - §TThe amount we can import is limited to $LIM|H$ because we can only offer $NUM|H$ Civilian Factories. The cost per §H1 $RES$§! is $COS|H$ Civilian Factories§!.
+TRADE_MAX_EXPORT_DETAILS_NO_IC코0= - §RWe have no more Civilian Industry to offer, we need unused Civilian Industry to pay for exports.§!
+TRADE_MAX_EXPORT_DETAILS_EXISTING_EXPORT코0= - §GWe are already importing $NUM|H$ of $RES$.§!
+TRADE_TRADE코0=Trade
+TRADE_ROUTE_CONVOY_IMPORT코1=$RES|H$ from $FR|H$ ( $CONVOYS|Y$ £convoy_texticon )
+TRADE_ROUTE_CONVOY_EXPORT코1=$RES|H$ to $TO|H$ ( $CONVOYS|Y$ £convoy_texticon )
+TRADE_ROUTE_CONVOY_LEND_LEASE_IMPORT코0=Lend lease import from $FR|H$ ( $CONVOYS|Y$ £convoy_texticon )
+TRADE_ROUTE_CONVOY_LEND_LEASE_EXPORT코0=Lend lease export to $TO|H$ ( $CONVOYS|Y$ £convoy_texticon )
+TRADE_ROUTE_CONVOY_PRODUCTION_TRANSFER코0=$FROM|H$ to $TO|H$ ( $CONVOYS|Y$ £convoy_texticon )
+TRADE_ROUTE_CONVOY_SUPPLIES_TRANSFER코1=$FROM|H$ to $TO|H$ - $SUPPLIES|Y$ £supply_texticon ( $CONVOYS|Y$ £convoy_texticon )
+TRADE_ROUTE_CONVOY_SUPPLIES_HEADER코0=Supply Transfers:\n
+TRADE_ROUTE_CONVOY_PRODUCTION_HEADER코0=Resource Transfers:\n
+TRADE_ROUTE_CONVOY_IMPORT_HEADER코0=Import Transfers:\n
+TRADE_ROUTE_CONVOY_EXPORT_HEADER코0=Export Transfers:\n
+ROUTE_EFFICIENCY코0=\n    Route efficiency: $EFF|%R$
+TRADE_WITH_COUNTRY코0=§GClick to trade with @$TAG$$COUNTRY|H$§!
+TRADE_HAVE_ACTIVE코0=We have §GActive§! trade with this country.
+TRADE_CANT_REACH코0=@$TAG$$COUNTRY|H$ §Ris producing $RESOURCE|H$, but no possible Trade Route can be found.§!
+TRADE_IS_ENEMY코0=@$TAG$$COUNTRY|H$ §Ris producing $RESOURCE|H$, but will not export to us while we are at war with them.§!
+TRADE_IS_LOW_INFLUANCE코0=@$TAG$$COUNTRY|H$ §Ris producing $RESOURCE|H$, but our trade influence is too low§!
+TRADE_NO_RESOURCE코0=@$TAG$$COUNTRY|H$ §Ris producing $RESOURCE|H$, but is not exporting any.§!
+TRADEVIEW_RES_EXPORT_DETAILS코0=We're exporting $NUM|H0$ units of $RES|H$ due to our trade laws
+TRADEVIEW_RES_EXPORT_NONE코0=We're not exporting any $RES|H$
 TRADE_NEED_NOT_FULLFILLED코0=$NEED|R0$
 TRADE_NEED_SURPLUS코0=$NEED|G0$
-TRADEVIEW_TRADE_FACTOR코0=(무역 영향력\: $FACTOR|H0$)
-TRADEVIEW_OUR_TRADE_INFLUENCE코0=우리의 무역 영향력은 @$TAG$$COUNTRY|H$\: $FACTOR|H0$이다
-TRADE_CURRENT_TRADE_LAW코0=현재 무역법\:
-TRADE_CURRENT_TRADE_LAW_DESC코0=수출을 위한 자원 할당을 제한합니다. 이 수치는 법률에 의해 규제됩니다.
-TRADE_CURRENT_INFLUENCE코0=@$TAG$$COUNTRY|H$에 대한 우리의 무역 영향력은 $VAL|+$ 이다.
-TRADE_CURRENT_INFLUENCE_DESC코0=우리의 무역 영향력은 특정 국가와 무역을 할때 우리가 얼마나 경쟁력 있는지, 그들이 얼마만큼을 우리에게 수출할지 결정합니다.
-TRADE_FACTOR_BASE코0=기본값\: $VAL|H$
-TRADE_FACTOR_DISTANCE코0=거리\: $VAL|H$
-TRADE_FACTOR_RELATION코0=관계\: $VAL|H$
-TRADE_FACTOR_PUPPET_MASTER코0=종주국\: $VAL|H$
-TRADE_FACTOR_PUPPET코0=괴뢰국\: $VAL|H$
-TRADE_FACTOR_FEAR코0=공포\: $VAL|H$
-TRADE_SORT_COUNTRY코0=국가
-TRADE_SORT_IMPORT코0=수입
-TRADE_SORT_EXPORT코0=수출
-TRADE_SORT_REQUEST코0=운송됨
-TRADE_SORT_LAW코0=무역법
-TRADE_SORT_INFLUENCE코0=영향력
-TRADE_SORT_CONVOYS코0=수송선
-OPEN_TRADE_VIEW코0=§G클릭하여 무역 화면으로 이동§\!
-SET_NEEDED_AMOUNT코0=현재 자원을 우리가 필요한 만큼 구입하도록 설정합니다.
-IMPORTING_REQUEST코0=우리가 요구한 $TOTAL|Y0$ $TYPE|H$ 중 $VAL|Y0$만큼 운송받고 있습니다.
-IMPORTING_REQUEST_NO_INFLUENCE코0=우리의 낮은 §H무역 영향력§\! 때문에 요구한 $VALTWO|H$ $TYPE|H$ 중 $VALONE|0H$만큼 운송받고 있습니다.
-IMPORTING_REQUEST_NO_CONVOYS코0=우리의 수송선이 부족하여 요구한 $VALTWO|H$ $TYPE|H$ 중 $VALONE|0H$만큼 운송받고 있습니다.
-IMPORTING_REQUEST_NO_RESOURCES코0=우리의 자원이 부족하여 요구한 $VALTWO|H$ $TYPE|H$ 중 $VALONE|0H$만큼 운송받고 있습니다.
-IMPORTING_REQUEST_EFFICIENCY코0=해군 항로 효율\: $EFF|%R$
-TRADE_FACTOR_TROOPS코0=인접해 있는 부대가 존재 \: $VAL|H$
-TRADE_FACTOR_NAVIES코0=그들의 해안에 있는 해군\: $VAL|H$
-IMPORTING_REQUEST_WAITING_TO_START코0=무역 시작을 기다리는 중
-INFLUENCE_VAL코0=영향력\: $VALUE|H0$
-TRADE_CAN_TRADE_TOOLTIP코0=우리는 총 $TOT|H$개소의 민간 공장을 가지고 있습니다. 그 중 $VAL|H$ 공장은 소비재를 생산 중이고, 나머지 $TRADE|H$ 공장을 무역에 할당할 수 있습니다.\n\n우리는 무역 수출로 받아온 공장들과 건설에 사용 중인 공장들을 수입의 대가로 제공 할 수 없다.
-TRADE_FACTOR_PARTY_SUPPORT코0=$IDEOLOGY|H$를 지원\: $VAL|0H$
-TRADE_WARNING코0=이 거래는 현재 건설 중인 공장을 사용합니다.
-TRADE_FACTOR_ANTI_MONOPOLY코0=자원 당 평균 수출, 우리는 그들 수출의 $THRESHOLD|%0H$을(를) 초과 해 수입합니다\: $VAL|0H$
-TRADED_NATIONS코0=무역 거래국
-TRADE_CIV_FACTORIES코0=민간 공장
+TRADEVIEW_TRADE_FACTOR코0= (Trade influence: $FACTOR|H0$)
+TRADEVIEW_OUR_TRADE_INFLUENCE코0=Our trade influence with @$TAG$$COUNTRY|H$: $FACTOR|H0$
+TRADE_CURRENT_TRADE_LAW코0=Current Trade Law:
+TRADE_CURRENT_TRADE_LAW_DESC코0=Export limit the amount of their resources allocated for export. This value is regulated by laws.
+TRADE_CURRENT_INFLUENCE코0=Our Trade Influence with @$TAG$$COUNTRY|H$ is $VAL|+$
+TRADE_CURRENT_INFLUENCE_DESC코0=Our trade influence is how competitive we are when trading with a certain nation and decide how big our share of their export is.
+TRADE_FACTOR_BASE코0=Base: $VAL|H$
+TRADE_FACTOR_DISTANCE코0=Distance: $VAL|H$
+TRADE_FACTOR_RELATION코0=Relation: $VAL|H$
+TRADE_FACTOR_PUPPET_MASTER코0=Is Puppet Master: $VAL|H$
+TRADE_FACTOR_PUPPET코0=Is Puppet: $VAL|H$
+TRADE_FACTOR_FEAR코0=Fear: $VAL|H$
+TRADE_SORT_COUNTRY코0=Country
+TRADE_SORT_IMPORT코0=Import
+TRADE_SORT_EXPORT코0=Export
+TRADE_SORT_REQUEST코0=Delivered
+TRADE_SORT_LAW코0=Trade Law
+TRADE_SORT_INFLUENCE코0=Influence
+TRADE_SORT_CONVOYS코0=Convoys
+OPEN_TRADE_VIEW코0=§GClick to go to trade screen§!
+SET_NEEDED_AMOUNT코0=Set amount that we need to buy to fill our need in current resource.
+IMPORTING_REQUEST코0=We are importing $VAL|Y0$ $TYPE|H$ of $TOTAL|Y0$ requested.
+IMPORTING_REQUEST_NO_INFLUENCE코0=We are only receiving $VALONE|0H$ of $VALTWO|H$ requested $TYPE|H$ due to low §HTrade Influence§!.
+IMPORTING_REQUEST_NO_CONVOYS코0=We are only receiving $VALONE|0H$ of $VALTWO|H$ requested $TYPE|H$ due to lack of convoys.
+IMPORTING_REQUEST_NO_RESOURCES코0=We are only receiving $VALONE|0H$ of $VALTWO|H$ requested $TYPE|H$ due to lack of resources.
+IMPORTING_REQUEST_EFFICIENCY코0=Naval route efficiency: $EFF|%R$
+TRADE_FACTOR_TROOPS코0=More troops on shared borders: $VAL|H$
+TRADE_FACTOR_NAVIES코0=Navies on their coasts: $VAL|H$
+IMPORTING_REQUEST_WAITING_TO_START코0=Waiting for trade to start
+INFLUENCE_VAL코0=Influence: $VALUE|H0$
+TRADE_CAN_TRADE_TOOLTIP코0=We have a total of $TOT|H$ Civilian Factories. $VAL|H$ are used to produce Consumer Goods, leaving us with $TRADE|H$ available for trade.\n\nNote that you cannot trade away factories received from trade exports and that trading away factories will prevent them being used for constructions.
+TRADE_FACTOR_PARTY_SUPPORT코0=Support for $IDEOLOGY|H$: $VAL|0H$
+TRADE_WARNING코0=This deal will use factories currently constructing buildings.
+TRADE_FACTOR_ANTI_MONOPOLY코0=On per-resource average, we're importing over $THRESHOLD|%0H$ of their export: $VAL|0H$
+TRADED_NATIONS코0=Trade Partners
+TRADE_CIV_FACTORIES코0=Civilian Factories
 TRADE_CIV_FACTORIES_COUNT코0=$NUM|G$
-TRADE_CIV_FACTORIES_USED코0=사용 중\: $USED|Y$
-TRADE_CIV_FACTORIES_AVAIL코0=가능함\: $AVAIL$
-TRADE_CONVOYS_USED_DESC코0=우리는 이 무역에 필요한 $TOT$ 대의 수송선 중 $NUM$ 대를 사용하고 있습니다.
-TRADE_CONVOYS_ESTIMATED_OVER_SEA_DESC코0=우리는 $NUM|H$£resources_strip|$FRAME$ $RES|H$ 을(를) 수입해오기 위해 $CON|H$£convoy_texticon 대의 수송선이 필요할 것이라 추정됩니다.
-TRADE_CONVOYS_ESTIMATED_OVER_LAND_DESC코0=이 무역은 육상을 통해 거래될 수 있기 때문에 수송선이 필요없습니다.
-NOT_TRADING_WITH_COUNTRY코0=우리는 @$TAG$$COUNTRY|H$와는 무역을 하고 있지 않습니다.
+TRADE_CIV_FACTORIES_USED코0=Used: $USED|Y$
+TRADE_CIV_FACTORIES_AVAIL코0=Available: $AVAIL$
+TRADE_CONVOYS_USED_DESC코0=We are using $NUM$ out of $TOT$ convoys needed for this trade.
+TRADE_CONVOYS_ESTIMATED_OVER_SEA_DESC코0=We estimate that importing each $NUM|H$£resources_strip|$FRAME$ $RES|H$ will require $CON|H$£convoy_texticon convoys.
+TRADE_CONVOYS_ESTIMATED_OVER_LAND_DESC코0=This trade can be done by land. No convoys are needed.
+NOT_TRADING_WITH_COUNTRY코0=We are not trading with @$TAG$$COUNTRY|H$
