--- a/waroverview_l_english.properties
+++ b/waroverview_l_english.properties
@@ -1,56 +1,57 @@
-PARTICIPANTS코0=참전국
-WARGOAL코0=전쟁 목표
-WARSCORE_TITLE코0=§H전쟁 기여도§\!\n적을 항복하게 만드는 등 국가가 앞장서서 전쟁 수행에 기여한 척도입니다. 높을수록 종전 시 열릴 평화 회담에서 더 많은 요구를 할 수 있습니다.
-LOSSES코0=손실
-CALL코0=호출
-CALL_ALL코1=전원 호출
-DIVISIONS코0=사단
-DIVISIONS_COUNTRY코0=§T$COUNTRY|H$은(는) $VAL|H$개의 사단 보유 중§\!
-INDUSTRY코0=산업
-INDUSTRY_COUNTRY코0=§T$COUNTRY|H$은(는) $VAL|H$개의 공장 보유 중§\!
-CASUALTY코0=사상자
-CASUALTY_COUNTRY코0=§T$COUNTRY|H$에 $VAL|H2*$의 사상자 발생§\!
-CASUALTIES_START코0=$COUNTRY|H$ 사상자\:\n
-CASUALTIES_ENTRY코0=$COUNTRY|H$\: $NUM|*1Y$\n
-CASUALTIES_OTHER코0=타국\: $NUM|1*Y$\n
-CASUALTIES_UNKNOWN코0=알 수 없음\: $NUM|1*Y$\n
-WARSCORE_PROGRESSBAR코0=§T이 전쟁은 $VAL|H0%$만큼 $SIDE$에 유리합니다§\!
-WARSCORE_PROGRESSBAR_STATUS_QUO코0=§T전쟁이 현상 유지 중§\!
-WARSCORE_COUNTRY코0=$COUNTRY|H$\: $VAL|H0%$
-WARSCORE_STATE_INSTANT코0=§T총 전쟁 기여도\:§\!
-WARSCORE_STATE_NO_VICTORY_POINTS코0=§T$COUNTRY|H$은(는) 적의 어떤 승점 지역도 점령하고 있지 않습니다§\!
-WARSCORE_STATE코0=$STATE$\: $VAL|H0%$
-FIELDER_MANPOWER코0=야전 인력\: $MAN|Y*$
-MANPOWER_LOSSES코0=손실\: $LOSS|Y*$
-MANPOWER_LOSSES_GOOD코0=손실\: $LOSS|G*$
-MANPOWER_LOSSES_BAD코0=손실\: $LOSS|R*$
-AGGRESSORS코0=§T침략국§\!
-DEFENDERS코0=§T방어국§\!
-MAJOR_AGGRESSORS코0=§T주요 침략국§\!
-MAJOR_DEFENDERS코0=§T주요 방어국§\!
+PARTICIPANTS코0=Participants
+WARGOAL코0=Wargoal
+WARSCORE_TITLE코0=§HWar Participation§!\nA measure for how much of the war effort a nation has shouldered on the way to bringing the enemy to surrender. A high percentage lets you dictate more terms in the peace conference once the war ends.
+LOSSES코0=Losses
+CALL코0=Call
+CALL_ALL코1=Call All
+DIVISIONS코0=Divisions
+DIVISIONS_COUNTRY코0=§T$COUNTRY|H$ has $VAL|H$ Divisions§!
+INDUSTRY코0=Industry
+INDUSTRY_COUNTRY코0=§T$COUNTRY|H$ has $VAL|H$ total factories§!
+CASUALTY코0=Casualties
+CASUALTY_COUNTRY코0=§T$COUNTRY|H$ has $VAL|H2*$ in Casualties§!
+CASUALTIES_START코0=$COUNTRY|H$ Casualties:\n
+CASUALTIES_ENTRY코0=$COUNTRY|H$: $NUM|*1Y$\n
+CASUALTIES_OTHER코0=Other: $NUM|1*Y$\n
+CASUALTIES_UNKNOWN코0=Unknown: $NUM|1*Y$\n
+WARSCORE_PROGRESSBAR코0=§TWar is going $VAL|H0%$ in favor of $SIDE$§!
+WARSCORE_PROGRESSBAR_STATUS_QUO코0=§TWar is in a status quo§!
+WARSCORE_COUNTRY코0=$COUNTRY|H$: $VAL|H0%$
+WARSCORE_STATE_INSTANT코0=§HTotal War Participation:§!
+WARSCORE_STATE_NO_VICTORY_POINTS코0=§T$COUNTRY|H$ does not control any enemy Victory Points§!
+WARSCORE_STATE코0=$STATE$: $VAL|H0%$
+FIELDER_MANPOWER코0=Fielded Manpower: $MAN|Y*$
+MANPOWER_LOSSES코0=Losses: $LOSS|Y*$
+MANPOWER_LOSSES_GOOD코0=Losses: $LOSS|G*$
+MANPOWER_LOSSES_BAD코0=Losses: $LOSS|R*$
+AGGRESSORS코0=§TAggressors§!
+DEFENDERS코0=§TDefenders§!
+MAJOR_AGGRESSORS코0=§TMajor Aggressors§!
+MAJOR_DEFENDERS코0=§TMajor Defenders§!
 PARTICIPANT코0=$COUNTRY|H$
-SURRENDER코2=§T$COUNTRY|H$은(는) $SURRENDER|H0%$만큼 조건부 항복을 고려하고 있습니다.\n상대는 $CONTROL|0%H$의 §H승점§\!을 가졌고 $VAL|0%H$보다 적을 시 항복할 것입니다§\!
-CAN_SURRENDER_FACTION_MEMBERS코1=그들은 현재 그들의 세력과 같이 싸우고 있으며 이 전쟁에 참여한 세력의 모든 주요 구성원이 항복 할 경우에만 항복 할 것입니다.\n항복하기 까지 남은 주요 세력 구성원\:\n$MEMBER_LIST|Y$
-CAN_SURRENDER코0=상대방은 홀로 싸우고 있으며 국가 단결도보다 많은 거점을 점령당할 경우 항복할 것입니다.
-CANNOT_SURRENDER_NOT_ENOUGH_DAYS코0=그들은 $DAYS|Y$ 일 동안만 전쟁 중이며, 항복하기 전에 그들은 최소한 $MIN_DAYS|Y$ 일 동안은 전쟁을 해야 합나디니다.
-ALLY_CALLED코0=§R이미 이 동맹을 호출했습니다§\!
-NO_ALLIES_TO_CALL코0=§R어떤 동맹도 호출할 수 없습니다§\!
-ALLIES_NOT_IN_WAR코0=이 동맹은 전쟁 중이 아님
-WARSCORE_PARTICIPATION코0=§Y$VALUE$%§\! 만큼 전쟁 수행에 기여했습니다.
-WARSCORE_BREAKDOWN_NOCASUALTIES코0=피해\:\n점령\: $OCCUPATION|Y0$\n폭격\: $BOMBING|Y0$ / $BOMBING_MAX|Y0$
-WARSCORE_BREAKDOWN코0=피해\:\n점령\: $OCCUPATION|Y0$\n폭격\: $BOMBING|Y0$ / $BOMBING_MAX|Y0$\n사상\: $CASUALTIES|Y0$
-WAR_OVERVIEW_CAPITULATE_STATUS코0=그들은 조건부 항복으로 더 이상 전쟁에 끼어들 수 없습니다. 조건부 항복 상태를 제거하기 위해서는 그들의 수도를\n 되찾아야 하며 조건부 항복 수준이 기껏해야 $LEVEL|%Y0$이어야 합니다. 현재는 $CURRENT|%Y0$입니다.
-WAR_OVERVIEW_AGGREGATE_VIEW_HEADER코0=전쟁 개요
-WAR_OVERVIEW_CAPITULATION_PROGRESS코0=항복 현황
-WAR_OVERVIEW_FILTER_MINORS코0=약소국
-WAR_OVERVIEW_FILTER_CAPITULATED코0=항복
-WAR_OVERVIEW_FILTER_CALLABLE코0=호출 가능
-WAR_OVERVIEW_FILTER_MINORS_DESC코0=약소국들을 보여줍니다
-WAR_OVERVIEW_FILTER_CAPITULATED_DESC코0=항복한 나라들을 보여줍니다
-WAR_OVERVIEW_FILTER_CALLABLE_DESC코0=전쟁으로 호출할 수 있는 나라들을 보여줍니다
-WAR_OVERVIEW_WAR_BUTTON_ALL코0=모든 전쟁을 요약해서 봅니다
-WAR_OVERVIEW_AGGREGATE_PROGRESS코0=요약 화면은 현재의 전세를 보여주지 않으며, 특정 전쟁을 클릭해야만 정보를 알 수 있습니다
-WAR_OVERVIEW_CALL_ALL_FACTION코0=세력 내 모든 회원국 호출
-WAR_OVERVIEW_CALL_COUNTRY_LIST코0=해당 나라들에게 메시지가 보내질 것입니다\: $COUNTRIES$
-WAR_OVERVIEW_CALL_ALL_FACTION_DISABLED코0=§R세력 내에 전쟁에 호출할 국가가 없음§\!
-WAR_OVERVIEW_ALLY_ALREADY_CALLED코0=§R이 동맹은 이미 호출했고 우리는 응답을 기다리고 있습니다§\!
+SURRENDER코2=§T$COUNTRY|H$ is $SURRENDER|H0%$ towards capitulation.\nIt controls $CONTROL|0%H$ of §HVictory Points§! and will capitulate when it has $VAL|0%H$ or less§!
+CAN_SURRENDER_FACTION_MEMBERS코1=They are currently fighting with their faction and will only surrender when all major factions members in this war has capitulated.\nMajor Faction members left to surrender:\n$MEMBER_LIST|Y$
+CAN_SURRENDER코0=They are currently fighting alone and will surrender as soon as they have capitulated
+SURRENDER_GIE_LEGITIMACY코0=If they capitulate, they will become a §HGovernment in Exile§!. Their §HLegitimacy§! will be $LEGITIMACY|0Y$.
+CANNOT_SURRENDER_NOT_ENOUGH_DAYS코0=They have only been at war for $DAYS|Y$ days, they need to have been at war for atleast $MIN_DAYS|Y$ days before surrendering
+ALLY_CALLED코0=§RYou've already called this ally§!
+NO_ALLIES_TO_CALL코0=§RYou can't call any allies§!
+ALLIES_NOT_IN_WAR코0=Allies not in war
+WARSCORE_PARTICIPATION코0=Has contributed about §Y$VALUE$%§! of the war effort.
+WARSCORE_BREAKDOWN_NOCASUALTIES코0=Breakdown:\nOccupation: $OCCUPATION|Y0$\nBombing: $BOMBING|Y0$ / $BOMBING_MAX|Y0$
+WARSCORE_BREAKDOWN코0=Breakdown:\nOccupation: $OCCUPATION|Y0$\nBombing: $BOMBING|Y0$ / $BOMBING_MAX|Y0$\nCasualties: $CASUALTIES|Y0$
+WAR_OVERVIEW_CAPITULATE_STATUS코0=They have capitulated and can no longer stop this side of the war from surrendering. To remove their capitulation status they must reclaim their capital and be at most $LEVEL|%Y0$ towards capitulation. They are currently at $CURRENT|%Y0$.
+WAR_OVERVIEW_AGGREGATE_VIEW_HEADER코0=War Summary
+WAR_OVERVIEW_CAPITULATION_PROGRESS코0=Capitulation Progress
+WAR_OVERVIEW_FILTER_MINORS코0=Minors
+WAR_OVERVIEW_FILTER_CAPITULATED코0=Capitulated
+WAR_OVERVIEW_FILTER_CALLABLE코0=Callable
+WAR_OVERVIEW_FILTER_MINORS_DESC코0=Toggle showing minor countries
+WAR_OVERVIEW_FILTER_CAPITULATED_DESC코0=Toggle showing capitulated countries
+WAR_OVERVIEW_FILTER_CALLABLE_DESC코0=Toggle showing countries that can be called into the war
+WAR_OVERVIEW_WAR_BUTTON_ALL코0=Show a summary of all wars
+WAR_OVERVIEW_AGGREGATE_PROGRESS코0=Summary screen does not show progress, click on a specific war for more information
+WAR_OVERVIEW_CALL_ALL_FACTION코0=Call all members of the faction
+WAR_OVERVIEW_CALL_COUNTRY_LIST코0=This will send a message to the following countries: $COUNTRIES$
+WAR_OVERVIEW_CALL_ALL_FACTION_DISABLED코0=§RNo nations to call to war available in the faction§!
+WAR_OVERVIEW_ALLY_ALREADY_CALLED코0=§RThis ally has already been called and we are awaiting his response§!
